LDEV-4054: Updating labels i18n
Mainly Norwegian, Greek and English

--- a/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:53:35 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:27:17 CST 2017 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -328,7 +328,6 @@ config.header.red5  =Media Server
 config.red5.server.url  =Media Server URL
 config.red5.recordings.url  =Media Server URL \u0395\u03b3\u03b3\u03c1\u03b1\u03c6\u03ce\u03bd
 admin.gradebook.learner.enable  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u0392\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03bf\u03c5 \u03b3\u03b9\u03b1 \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2
-admin.gradebook.monitor.enable  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u0392\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03bf\u03c5 \u03b3\u03b9\u03b1 \u0395\u03c0\u03cc\u03c0\u03c4\u03b5\u03c2
 sysadmin.serverUrl  =URL \u0395\u03be\u03c9\u03c4\u03b5\u03c1\u03b9\u03ba\u03bf\u03cd Server (\u0395\u03be\u03c5\u03c0\u03b7\u03c1\u03b5\u03c4\u03b7\u03c4\u03ae)
 admin.statistics.title  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac \u0395\u03be\u03c5\u03c0\u03b7\u03c1\u03b5\u03c4\u03b7\u03c4\u03ae
 admin.statistics.overall  =\u03a3\u03c5\u03bd\u03bf\u03bb\u03b9\u03ba\u03ac \u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac \u03a3\u03c4\u03bf\u03b9\u03c7\u03b5\u03af\u03b1
@@ -506,6 +505,10 @@ config.default.html.theme  =\u03a0\u03c1\u03bf\u03b5\u03c0\u03b9\u03bb\u03b5\u03
 admin.user.changePassword  =\u0391\u03bb\u03bb\u03b1\u03be\u03b5 \u03ba\u03c9\u03b4\u03b9\u03ba\u03cc
 config.show.timezone.warning  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03c0\u03c1\u03bf\u03b5\u03b9\u03b4\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7\u03c2 \u03cc\u03c4\u03b1\u03bd \u03b7 \u03b6\u03ce\u03bd\u03b7 \u03ce\u03c1\u03b1\u03c2 \u03c4\u03bf\u03c5 LAMS \u03b4\u03b5\u03bd \u03c4\u03b1\u03b9\u03c1\u03b9\u03ac\u03b6\u03b5\u03b9 \u03bc\u03b5 \u03c4\u03bf\u03bd \u03c5\u03c0\u03bf\u03bb\u03bf\u03b3\u03b9\u03c3\u03c4\u03ae/\u03c3\u03c5\u03c3\u03ba\u03b5\u03c5\u03ae \u03c4\u03bf\u03c5 \u03c7\u03c1\u03ae\u03c3\u03c4\u03b7.
 label.password.must.lcase  =\u03c4\u03bf\u03c5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf\u03bd 1 \u03c0\u03b5\u03b6\u03cc \u03b3\u03c1\u03ac\u03bc\u03bc\u03b1
+button.select.importfile  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b3\u03b9\u03b1 \u03b5\u03b9\u03c3\u03b1\u03b3\u03c9\u03b3\u03ae
+label.upload.info  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae\u03c2 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf Excel \u03ba\u03b1\u03b9 \u03bd\u03b1 \u03bc\u03b7\u03bd \u03c5\u03c0\u03b5\u03c1\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 {0}
+errors.maxfilesize  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b1\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae\u03c2 \u03be\u03b5\u03c0\u03b5\u03c1\u03bd\u03ac \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2: {0}
+error.attachment.not.xls  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf .xls (Excel).
 
 
-#======= End labels: Exported 500 labels for el GR =====
+#======= End labels: Exported 503 labels for el GR =====
