--- a/lams_gradebook/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:30:40 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -10,8 +10,8 @@ heading.general.error  =Feil
 error.authorisation  =Du har ikke tilgang til \u00e5 gj\u00f8re dette
 error.general.1  =Beklager, en feil har oppsta\u00e5tt
 error.general.2  =Det har oppst\u00e5tt et problem i forbindelse med denne foresp\u00f8rselen. Lukk nettleseren og fors\u00f8k igjen.
-error.general.3  =Hvis problemet fortsetter s\u00e5 kontakt systemadministrator eller tekinisk forum for LAMS  forening
-gradebook.title.window.lessonMonitor  =Kontroll, leksjons karakterbok
+error.general.3  =Hvis problemet fortsetter s\u00e5 kontakt systemadministrator.
+gradebook.title.window.lessonMonitor  =Karakterbok
 gradebook.title.window.courseMonitor  =Kontroll, kurs karakterbok oversikt
 gradebook.title.window.myGradebook  =Min karakterbok
 gradebook.title.courseMonitor  =Kurs karakterbok for {0}
@@ -23,18 +23,18 @@ gradebook.columntitle.name  =Navn
 gradebook.columntitle.progress  =Fremdrift
 gradebook.columntitle.timeTaken  =Tidsforbruk
 gradebook.columntitle.lessonFeedback  =Tilbakemelding p\u00e5 leksjon
-gradebook.columntitle.lessonName  =Leksjons navn
+gradebook.columntitle.lessonName  =Leksjon
 gradebook.columntitle.subGroup  =Under-gruppe
 gradebook.columntitle.startDate  =Start dato
-gradebook.columntitle.completeDate  =Slutt dato
+gradebook.columntitle.completeDate  =Ferdig dato
 gradebook.columntitle.mark  =Karakter
 gradebook.columntitle.activity  =Aktivitet
-gradebook.columntitle.activityFeedback  =Tilbakemelding for aktivitet
+gradebook.columntitle.activityFeedback  =Tilbakemelding p\u00e5 aktivitet
 gradebook.columntitle.outputs  =Utgangsdata for verkt\u00f8yet
 gradebook.columntitle.competences  =Kompetanse-bredde
 gradebook.columntitle.averageTimeTaken  =Gjennomsnitts tid
 gradebook.columntitle.averageMark  =Gjennomsnitts karakter
-gradebook.columntitle.learnerName  =Studentens navn
+gradebook.columntitle.learnerName  =Navn
 gradebook.function.window.showColumns  =Vis/skjul kolonner
 gradebook.function.error.enterNumber  =Vennligst skriv inn en tallverdi
 gradebook.function.search.title  =S\u00f8kenett
@@ -50,21 +50,19 @@ label.find  =Finn
 label.reset  =Sette tilbake
 gradebook.monitor.releasemarks.1  =Publiser
 gradebook.monitor.releasemarks.2  =Skjul
-gradebook.monitor.releasemarks.3  =karakter for denne leksjonen
+gradebook.monitor.releasemarks.3  =studentenes karakterer
 gradebook.monitor.releasemarks.check  =Er du sikker p\u00e5 at du vil publisere karakterene for studentene for denne leksjonen ?
 gradebook.monitor.releasemarks.check2  =Er du sikke p\u00e5 at du vil holde tilbake karakterene for studentene for denne leksjonen
 error.releasemarks.fail  =Publisering av karakterer feilet, vennligst kontakt din systemadministrator.
 error.markhigher  =Karakteren m\u00e5 v\u00e6re lavere enn maksimum karakteren.
 error.cellsave  =Det er problemer med \u00e5 lagre alle verdier. Vennligst kontakt systemadministrator.
 label.error  =Feil
-gradebook.export.excel.1  =Eksport
-gradebook.export.excel.2  =karakterer til regneark fil
 gradebook.export.activity  =Aktivitet
 gradebook.export.activities  =Aktiviteter
 gradebook.export.outputs  =Utgangadata
 gradebook.export.average.lesson.mark  =Gjennomsnittlig karakter for leksjonen
 gradebook.export.average.lesson.time.taken  =Gjennomsnittlig tid for \u00e5 gjennomf\u00f8re en leksjon
-gradebook.export.total.marks.for.lesson  =Samlet antall karakterer for leksjon
+gradebook.export.total.marks.for.lesson  =Karakterer for leksjon
 gradebook.export.total.mark  =Totalt antall karakterer
 gradebook.export.dateheader  =Eksportert til:
 gradebook.export.lesson.summary  =Status for leksjon
@@ -77,7 +75,7 @@ gradebook.exportcourse.lessonFeedback  =Tilbakemelding p\u00e5 leksjon
 gradebook.exportcourse.mark  =Karakter
 gradebook.exportcourse.lesson  =Leksjon: {0}
 gradebook.exportcourse.progress  =Fremdrift
-gradebook.exportcourse.learner.name  =Studentens navn
+gradebook.exportcourse.learner.name  =Navn
 gradebook.exportcourse.ok  =Ferdig
 gradebook.exportcourse.attempted  =Fors\u00f8k
 gradebook.export.last.name  =Etternavn
@@ -86,17 +84,30 @@ gradebook.coursemonitor.wait  =Vennligst vent ....
 gradebook.exportcourse.current.activity  =Aktiv aktivitet: {0}
 gradebook.gridtitle.lesson.view  =Leksjonens innfallsvinkel
 gradebook.gridtitle.learner.view  =Studentens innfallsvinkel
-label.select  =Velg
-label.lessons.to.export  =Leksjoner som skal eksporteres
 label.button.export  =Eksporter
 label.lessons  =Leksjoner
 label.group  =Gruppe
-label.max.possible  =Maks antall mulige
+label.max.possible  =Maks mulig karakter
 label.total.actuals  =Totalt faktiske
 label.max.mark  =Maks karakter
-label.actuals  =Faktiske
-label.max  =Maks
+label.actuals  =Totalt
+label.max  =Maks tilgjengelig karakter
 label.overall.totals  =Samlet resultatet
+audit.lesson.change.mark  =Endret karakter for bruker {0}. Leksjonsid: {1}. Eldre karakter: {2}, ny karakter: {3}
+audit.activity.change.mark  =Endret karakter for bruker {0}. Leksjonsid: {1}. Aktivitetid: {2}. Eldre karakter {3}. Ny karakter {4}
+audit.marks.released.on  =Karakterer har blitt publisert for leksjonsid {0}.
+audit.marks.released.off  =Karakterer har blitt skjult for leksjonsid {0}.
+gradebook.export.login  =Brukernavn
+button.help  =Hjelp
+button.help.tooltip  =\u00c5pne Hjelp
+gradebook.monitor.show.dates  =Vis datoer
+gradebook.monitor.hide.dates  =Skjul datoer
+gradebook.export.excel  =Eksporter
+label.select.lessons.to.export  =Velg leksjoner som skal eksporteres
+label.marks  =Karakter
+label.number.learners.in.mark.range  =Antall studenter i karakteromr\u00e5det
+label.show.marks.chart  =Vis karakter diagram
+label.hide.marks.chart  =Skjul karakter diagram
 
 
-#======= End labels: Exported 91 labels for no NO =====
+#======= End labels: Exported 102 labels for no NO =====
