--- a/lams_learning/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:47:34 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:19:57 CST 2017 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -104,7 +104,7 @@ label.schedule.gate.open.remaining  =\u039c\u03c0\u03bf\u03c1\u03b5\u03af\u03c4\
 message.lesson.restart  =\u039c\u03c0\u03bf\u03c1\u03b5\u03af\u03c4\u03b5 \u03bd\u03b1 \u03b4\u03ce\u03c3\u03b5\u03c4\u03b5 \u03c3\u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 \u03ac\u03bb\u03bb\u03b7 \u03bc\u03b9\u03b1 \u03c0\u03c1\u03bf\u03c3\u03c0\u03ac\u03b8\u03b5\u03b9\u03b1 \u03c0\u03b1\u03c4\u03ce\u03bd\u03c4\u03b1\u03c2 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03ba\u03bf\u03c5\u03bc\u03c0\u03af:
 message.lesson.restart.button  =\u0395\u03c0\u03b1\u03bd\u03b5\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7
 message.learner.progress.restart.confirm  =\u0395\u03af\u03c3\u03c4\u03b5 \u03b2\u03ad\u03b2\u03b1\u03b9\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03be\u03b5\u03ba\u03b9\u03bd\u03ae\u03c3\u03b5\u03c4\u03b5 \u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1 \u03b1\u03c0\u03cc \u03c4\u03b7\u03bd \u03b1\u03c1\u03c7\u03ae;
-mynotes.add.new.current.lesson.button  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u03bd\u03ad\u03bf\u03c5 \u03c3\u03c4\u03bf \u03c4\u03c1\u03ad\u03c7\u03bf\u03bd \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1
+mynotes.add.new.current.lesson.button  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u03bd\u03ad\u03b1\u03c2 \u03c3\u03b7\u03bc\u03b5\u03af\u03c9\u03c3\u03b7\u03c2 \u03c3\u03c4\u03bf \u03bc\u03ac\u03b8\u03b7\u03bc\u03b1
 label.group.confirm.header  =\u0395\u03c0\u03b9\u03b2\u03b5\u03b2\u03b1\u03b9\u03ce\u03c3\u03c4\u03b5 \u03c4\u03b7\u03bd \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03bf\u03bc\u03ac\u03b4\u03b1\u03c2
 label.group.confirm.button  =\u0395\u03c0\u03b9\u03b2\u03b5\u03b2\u03b1\u03af\u03c9\u03c3\u03b7
 label.group.confirm.areyoujoining  =\u0395\u03af\u03c3\u03b1\u03b9 \u03c3\u03c5\u03bd\u03b4\u03b5\u03b4\u03b5\u03bc\u03ad\u03bc\u03bd\u03bf\u03c2/\u03bd\u03b7;
