--- a/lams_learning/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,20 +2,15 @@ appName = learner_java
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:19:53 CST 2017 
  
 #=================== labels for Learner (Java) =================# 
 
 learner.title  =LAMS student
-error.system.learner  =En intern feil har oppst\u00e5tt og funksjonen kan ikke ferdigstilles. Hvis du melder denne feilen, vennligst rapporter {0}
-error.message.404  =Siden du har forespurt finnes ikke.
-error.message.login  =Du m\u00e5 logge inn her.
 error.title  =En feil har oppst\u00e5tt
 message.activity.loading  =Den neste oppgaven lastes opp. Vennligst vent...
 message.lesson.finished  =Gratulerer,{0}, du er ferdig.
 message.lesson.finishedCont  =Du har n\u00e5 ferdigstilt {0} leksjoner. Du kan vende tilbake til denne for \u00e5 se p\u00e5 aktivitetene ved \u00e5 dobbeltklikke p\u00e5 de bl\u00e5 ikoner p\u00e5 venstre side av fremdrifts statusinjen. Du kan n\u00e5 lukke dette vinduet.
-exit.heading  =Du har forlatt denne leksjonen.
-exit.message  =Du kan gjenoppta leksjonen ved \u00e5 velge gjennoppta knappen.
 label.next.button  =Neste
 label.finish.button  =Neste aktivitet
 message.activity.parallel.partialComplete  =Du m\u00e5 ferdigstille den andre oppgaven f\u00f8r du g\u00e5r vidre til den neste aktiviteten...
@@ -35,26 +30,9 @@ label.gate.waiting.learners  ={0} av tilsammen {1} venter foran porten.
 label.gate.refresh.message  =Klikk p\u00e5 Neste hvis du er blitt fortalt at porten er \u00e5pnet. Denne siden blir oppfrisket automatisk i l\u00f8pet av et minutt.
 label.gate.preview.message  =Fordi dette er en forh\u00e5ndsvisning, s\u00e5 vil du ved \u00e5 klikke \u00e5 Neste g\u00e5 til neste aktivitet. Vanligvis vil studenten m\u00e5tte vente til porten \u00e5pnes.
 label.view.groups.title  =Gruppe
-label.view.view.groups.wait.message  =Noen av de f\u00f8lgende aktivitetene krever en gruppe. Du kan ikke fortsette f\u00f8r en gruppe er valgt. Klikk p\u00e5 Neste hvis du er fortalt at en gruppe er opprettet. Denne siden oppfriskes i l\u00f8pet av fem minutter.
+label.view.view.groups.wait.message  =Noen av de f\u00f8lgende aktivitetene krever en gruppe. Du kan ikke fortsette f\u00f8r en gruppe er valgt. Klikk p\u00e5 Neste hvis du er fortalt at en gruppe er opprettet. Denne siden oppfriskes automatisk i l\u00f8pet av ett minutt.
 label.grouping.preview.message  =Fordi dette er en forh\u00e5ndsvisning s\u00e5 vil du ved \u00e5 klikke p\u00e5 Neste gj\u00f8re en automatisk gruppering. Vanligvis vil studenten m\u00e5tte vente inntil grupperingen er foretatt.
-label.preview.definelater.title  =Aktiviteten vil bli bestemt i kontrollmodus
-label.preview.definelater.message  =Den neste aktiviteten {0} skal bestemmes i kontrollmodus. Vanligvis s\u00e5 vil foreleseren definere innholdet i aktiviteten f\u00f8r studenten kan f\u00e5 tilgang til denne. For  \u00e5 gi en forh\u00e5ndsvisning, s\u00e5 vises standard innholdet for denne aktiviteten.
-error.export.portfolio.not.supported  =Aktiviteten {0} tillater ikke eksport av mapper.
-export.portfolio.noneAttempted.message  =Ingen aktiviteter er fors\u00f8kt.
-export.portfolio.for.user.heading  =Mappe for
-export.portfolio.for.class.heading  =Klassens mappe.
-export.portfolio.lesson.started.date.label  =Leksjon startet:
-export.portfolio.generated.date.label  =Mappe er opprettet:
-export.portfolio.window.title  =Lager  mappe - vennligst vent.
-export.portfolio.generating.message  =Det kan ta litt tid \u00e5 generere mappen. Med en gang den er ferdig vil nettleseren begynne \u00e5 laste den ned.
-export.portfolio.generation.complete.message  =Eksport av mappe er ferdig
 message.window.closing  =Vennligst lukk dette vinduet.
-export.portfolio.notebook.title  ={0} - Notatbok
-export.portfolio.notebook.link.label  =Se p\u00e5 notatbok
-export.portfolio.notebook.created.label  =utf\u00f8rt: {0}
-export.portfolio.notebook.modified.label  =sist redigert: {0}
-export.portfolio.notebook.private.label  =Privat
-export.portfolio.notebook.public.label  =Synlig for foreleser
 mynotes.title  =Mine notater
 mynotes.view.all.button  =Se alt
 mynotes.add.new.button  =Legg til ny
@@ -80,25 +58,18 @@ label.branching.refresh.message  =Klikk p\u00e5 neste dersom du blir fortalt at 
 label.branching.preview.message  =Du har n\u00e5dd en forgrening. Fordi du er i en forh\u00e5ndsvisnings modus, s\u00e5 kan du velge hvilken gren du \u00f8nsker \u00e5 se ved \u00e5 klikke p\u00e5 velg. Klikk p\u00e5 avslutt for \u00e5 forlate forgreningen og for \u00e5 fortsette til neste aktivitet.
 label.branching.title  =Forgrening
 label.sequence.empty.message  =Det er ingen aktiviteter som m\u00e5 sluttf\u00f8res i denne delen av leksjonen. Klikk p\u00e5 neste for \u00e5 fortsette.
-export.portfolio.run.offline.message  =Denne aktiviteten har ikke blitt utf\u00f8rt med bruk av datamaskin.
 label.my.progress  =Min fremgang
-label.export.portfolio  =Eksporter mappe
 label.resume  =Fortsette
 message.activity.options.note.maximum  =Merk: Maksimalt antall aktiviteter du kan fors\u00f8ke er{0}. Du kan g\u00e5 tilbake til aktiviteter som er startet og avsluttet ved \u00e5 benytte fremdrifts menyen.
 message.activity.set.options.activityCount  =Du m\u00e5 minimum fullf\u00f8re {0} av {1} sekvenser for \u00e5 avslutte
 message.activity.set.options.note  =Merk.  N\u00e5r du avslutter en av sekvensene, s\u00e5 kan du hele tiden g\u00e5 tilbake til denne ved \u00e5 benytte fremdrifts menyen.
-message.activity.set.options.note.maximum  =Merk. Maksimalt antall sekvenser  er {0}. Du kan starte disse eller g\u00e5 tilbake til de ved \u00e5 benytte fremdrifts menyen.
-label.preview.definelater.branching.message  =Den neste aktiviteten {0} m\u00e5 defineres i kontroll modus. Vanligvis vil en foreleser sette opp grener i kontroll modus. For \u00e5 f\u00e5 en forh\u00e5ndsvisning, s\u00e5 vil du kunne velge hvilken gren du vil se p\u00e5.
+message.activity.set.options.note.maximum  =Merk. Maksimalt antall sekvenser du kan fors\u00f8ke er {0}. Du kan starte disse eller g\u00e5 tilbake til de ved \u00e5 benytte fremdrifts menyen.
 label.learner.choice.group.full  =Gruppen er full
 label.learner.choice.group.message  =Vennligst velg en gruppe. Noen grupper er kansje ikke tilgjengelige fordi de er fyllt opp med maksimalt antall deltagere for gruppen.
 label.choose.group.button  =Velg
 label.condition.gate.title  =Port med forutsettninger
 label.condition.gate.close.message  =Du har n\u00e5dd en port som har forutsettninger. Du har ikke m\u00f8tt disse forutsettningene og kan ikke fortsette. Vennligst g\u00e5 tilbake til foreg\u00e5ende aktivitet. N\u00e5r svarene er riktige, kan du fortsette til neste aktiviteter.
 label.presence  =Audiens
-export.portfolio.competences.defined.table.title  =Definerte kompetanser
-export.portfolio.competences.defined.title  =Tittel
-export.portfolio.competences.defined.description  =Beskrivelse
-export.portfolio.competences.covered.title  =Kompetanseomr\u00e5der som er dekket
 label.optional.maxActivitiesReached  =Maksimalt antall alternative aktiviterter er allerede n\u00e5dd.
 label.optional.maxSequencesReached  =Maksimalt antall alternative sekvenser er allerede n\u00e5dd.
 label.view.groups.learners  =Studenter i gruppen
@@ -109,10 +80,7 @@ learner.im.title  =Meldingstjeneste (IM)
 learner.im.group.chat  =Gruppesamtale
 learner.im.users  =Brukere
 learner.im.send  =Send
-learner.im.ie6.warning  =Beklager, Internet Explorer 6 er ikke kompatibel for denne samtalen
-label.learner.progress.open  =<<
 label.learner.progress.open.tooltip  =Skjul progresjon
-label.learner.progress.closed  =>>
 label.learner.progress.closed.tooltip  =Vis progresjon
 label.learner.progress.activity.current.tooltip  =Dette er den n\u00e5v\u00e6rende aktiviteten
 label.learner.progress.activity.completed.tooltip  =Dobbeltklikk for \u00e5 vurdere den ferdige aktiviteten
@@ -120,12 +88,26 @@ label.learner.progress.activity.attempted.tooltip  =Du har fors\u00f8kt, men du 
 label.learner.progress.activity.tostart.tooltip  =Du m\u00e5 ferdigstille aktivitetene f\u00f8r du kan f\u00e5 tilgang til denne aktiviteten
 label.learner.progress.activity.support.tooltip  =Dobbeltklikk for \u00e5 kunne delta i denne st\u00f8tteaktiviteten
 button.exit  =G\u00e5 ut
-button.export  =Eksporter
 button.save  =Lagre
 label.learner.progress.notebook  =Notatbok
 label.learner.progress.support  =St\u00f8tteaktiviteter
 label.submit.button  =Send inn
 label.learner.progress.review.activity  =Se p\u00e5 aktiviteten
+label.schedule.gate.reach  =Du er kommet til en port
+label.schedule.gate.offset.1  =Porten vil bli \u00e5pnet
+label.schedule.gate.offset.2  =etter
+label.days  =dager
+label.hours  =timer
+label.minutes  =minutter
+label.seconds  =skunder
+label.schedule.gate.open.remaining  =Du kan kun bevege deg gjennom porten og fortsette de resterende aktivitetene i
+message.lesson.restart  =Start leksjonen fra begynnelsen igjen
+message.lesson.restart.button  =Start om
+message.learner.progress.restart.confirm  =Er du sikker p\u00e5 at du vil starte denne leksjonen fra begynnelsen?
+mynotes.add.new.current.lesson.button  =Legg til notat til denne leksjonen
+label.group.confirm.header  =Bekreft valg av gruppe
+label.group.confirm.button  =Bekreft
+label.group.confirm.areyoujoining  =Deltar du?
 
 
-#======= End labels: Exported 120 labels for no NO =====
+#======= End labels: Exported 102 labels for no NO =====
