--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:31:03 CST 2017 
  
 #=================== labels for Assessment =================# 
 
@@ -11,8 +11,6 @@ activity.description  =Verkt\u00f8y for vurdering av studenter
 activity.helptext  =Lage sp\u00f8rsm\u00e5l for \u00e5 vurdere studentene.
 tool.display.name  =Verkt\u00f8y for vurdering
 tool.description  =Verkt\u00f8y for vurdering av studenter
-errorPage.title  =Feilmeldings side
-errorPage.heading  =En feil oppst\u00e5 ved h\u00e5ndteringen av din foresp\u00f8rsel
 label.authoring.heading  =Verkt\u00f8y for vurdering
 label.author.title  =Vurdering
 label.authoring.heading.basic  =Grunnlag
@@ -59,35 +57,35 @@ label.authoring.choice.overall.feedback  =Generell tilbakemelding
 label.authoring.choice.feedback.on.correct  =For alle korrekte svar
 label.authoring.choice.feedback.on.partially.correct  =For delvis korrekte svar
 label.authoring.choice.feedback.on.incorrect  =For alle ukorrekte svar
-label.authoring.choice.add.option  =Legg til et alternativ.
-label.authoring.matching.pairs.add.matching.pairs  =Legg til like par
+label.authoring.choice.add.option  =Legg til et nytt svar
+label.authoring.matching.pairs.add.matching.pairs  =Legg til sp\u00f8rsm\u00e5l
 label.authoring.matching.pairs.matching.pairs  =Like par
 label.authoring.matching.pairs.error.one.matching.pair  =Du skal legg til minst ett likt par
-label.authoring.matching.pairs.add.matching.pair  =Legg til alternativ
+label.authoring.matching.pairs.add.matching.pair  =Legg til en ny
 label.authoring.short.answer.no.case.unimportant  =Nei, karakterst\u00f8rrelse er ikke viktig
 label.authoring.short.answer.yes.case.must.match  =Ja, karakterst\u00f8rrelsen m\u00e5 v\u00e6re korrekt
 label.authoring.short.answer.case.sensitivity  =Avhengighet for karakterst\u00f8rrelse
 label.authoring.short.answer.answers  =Svar
-label.authoring.short.answer.add.answer  =\u00c5pne for nytt svar
-label.authoring.short.answer.add.short.answer  =Legg til et kort svar
+label.authoring.short.answer.add.answer  =Legg til nytt svar
+label.authoring.short.answer.add.short.answer  =Legg til et sp\u00f8rsm\u00e5l
 label.authoring.true.false.question  =Riktig/galt sp\u00f8rsm\u00e5l
 label.authoring.true.false.correct.answer  =Korrekt svar
 label.authoring.true.false.false  =Galt
 label.authoring.true.false.true  =Riktig
 label.authoring.true.false.feedback.on.true  =Tilbakemelding for svaret "riktig".
 label.authoring.true.false.feedback.on.false  =Tilbakemelding for svaret "feil".
-label.authoring.true.false.add.true.false  =Legg til Riktig/Feil
+label.authoring.true.false.add.true.false  =Legg til et sp\u00f8rsm\u00e5l
 label.authoring.numerical.question  =Numerisk sp\u00f8rsm\u00e5l
 label.authoring.numerical.answers  =Svar
 label.authoring.numerical.units  =Enheter
 label.authoring.numerical.error.answer  =Du m\u00e5 sende inn minst et svar
 label.authoring.numerical.add.answer  =\u00c5pne for nytt svar
-label.authoring.numerical.add.numerical  =Legg til et numerisk sp\u00f8rsm\u00e5l
-label.authoring.numerical.add.unit  =Legg til blank enhet
-label.authoring.essay.add.essay  =Legg til en pr\u00f8ve
-label.authoring.ordering.add.ordering  =Legg til sortering
+label.authoring.numerical.add.numerical  =Legg til et sp\u00f8rsm\u00e5l
+label.authoring.numerical.add.unit  =Legg til en ny enhet
+label.authoring.essay.add.essay  =Legg til et sp\u00f8rsm\u00e5l
+label.authoring.ordering.add.ordering  =Legg til  sp\u00f8rsm\u00e5l
 label.authoring.advance.allow.students.overall.feedback  =Tillat studentene \u00e5 se generell tilbakemelding etter hvert sp\u00f8rsm\u00e5l
-label.authoring.advance.time.limit  =Tidsgrense (minutter)
+label.authoring.advance.time.limit  =Tidsfrist (minutter)
 label.authoring.advance.questions.per.page  =Sp\u00f8rsm\u00e5l per side
 label.authoring.advance.all.in.one.page  =Alle p\u00e5 en side
 label.authoring.advance.shuffle.questions  =Bland sp\u00f8rsm\u00e5lene
@@ -100,7 +98,7 @@ label.authoring.advance.allow.students.history.responses  =La studentene f\u00e5
 label.authoring.advance.overall.feedback  =Generell tilbakemelding
 label.authoring.advance.grade.boundary  =Grenser for vekt-tall
 label.authoring.advance.feedback  =Tilbakemelding
-label.authoring.advance.add.feedback.field  =Legg til felt for tilbakemelding
+label.authoring.advance.add.feedback.field  =Legg til tilbakemelding
 label.authoring.cancel.button  =Angre
 label.authoring.basic.answer.options  =Svar alternativer
 label.authoring.basic.instruction  =Instruksjoner
@@ -108,16 +106,12 @@ error.default.grade.wrong.format  =Vekt-tallet skal ha numerisk verdi
 error.penalty.factor.wrong.format  =Mulkt faktor skulle v\u00e6re variabel
 error.question.name.blank  =Sp\u00f8rsm\u00e5ls navnet kan ikke v\u00e6re tomt
 error.question.text.blank  =Sp\u00f8rsm\u00e5ls tekst kan ikke v\u00e6re tomt
-error.msg.upload.file.not.found  =Kan ikke finne filen for opplasting {0}
-error.msg.file.not.found  =Fil ikke funnet oppst\u00e5r ved opplasting av filen.
-error.msg.io.exception  =IOE exeption oppst\u00e5r ved opplasting av fil.
-error.msg.invaid.param.upload  =InvalidParameterExeption oppst\u00e5 ved opplasting av fil
 error.msg.default.content.not.find  =Kunne ikke hente ut standard innhold for dette verkt\u00f8yet
 error.monitoring.export.excel  =Eksport av vurderingsrapport ver mislykket p\u00e5 grunn av {0}
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke dette vinduet uten \u00e5 lagre ?
 authoring.msg.one.question.to.be.saved  =Det m\u00e5 minst v\u00e6re ett sp\u00f8rsm\u00e5l som m\u00e5 lagres
 label.learning.page  =Side
-label.learning.title  =L\u00e6ring gjennom vurdering
+label.learning.title  =Evaluering
 label.learning.choose.one.answer  =Velg en av de f\u00f8lgende svar.
 label.learning.choose.at.least.one.answer  =Velg minst ett svar.
 label.learning.matching.pairs.pick.up  =Velg de tilh\u00f8rende svarene.
@@ -145,7 +139,7 @@ label.learning.question.summary.response  =Svar
 label.learning.question.summary.grade  =Vekt-tall
 label.learning.countdown.time.left  =Gjenst\u00e5ende tid
 label.learning.blockui.time.is.over  =Tiden er oppbrukt. Prosseserer svarene dine...
-label.learning.blockui.are.you.ready  =Du vil delta i en aktivitet med tidsbegrensning. Er du klar til \u00e5 starte ?
+label.learning.blockui.are.you.ready  =Du vil delta i en aktivitet med tidsfrist. Er du klar til \u00e5 starte ?
 monitoring.tab.summary  =Status
 monitoring.tab.statistics  =Statistikk
 monitoring.tab.edit.activity  =Rediger
@@ -181,19 +175,16 @@ label.monitoring.question.summary.penalty  =Mulkt
 label.monitoring.question.summary.average.mark  =Gjennomsnittlig karakter
 label.monitoring.question.summary.group  =Gruppe:
 label.monitoring.question.summary.ok  =Ok
-label.export.portfolio.activity.summary  =Status for aktivitet
-label.export.portfolio.question.summaries  =Status for sp\u00f8rsm\u00e5l
 message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke lengre redigeres.
 output.desc.learner.total.score  =Totale poengsum
 output.desc.learner.time.taken  =Tidsforbruk
 output.desc.learner.number.of.attempts  =Antall fors\u00f8k av brukeren
 output.user.score.for.question  =Poengsum for sp\u00f8rsm\u00e5let.
-export.title  =Eksport mappe for vurderingsverkt\u00f8yet
 error.form.validation.error  =Du har en feil i et format. Denne er uthevet
 error.form.validation.errors  =Du har {0} feil i et format. Disse er uthevet
 error.form.validation.hundred.score  =En av svarene skulle v\u00e6re ha vekt-tall 100% slik at det er mulig \u00e5 oppn\u00e5 maksimal karakter for dette sp\u00f8rsm\u00e5let
 error.form.validation.positive.accepted.errors  =Alle godkjente feil m\u00e5 v\u00e6re positive.
-message.monitoring.summary.no.session  =Ingen sesjoner er tilgjengelig
+message.monitoring.summary.no.session  =Ingen studenter enda
 label.cancel  =Avbryt
 define.later.message  =Vennligst vent til at foreleseren er ferdig med innholdet for denne aktiviteten
 button.try.again  =Fors\u00f8k igjen
@@ -203,7 +194,6 @@ label.authoring.heading.advance  =Avansert
 label.down  =Flytt ned
 label.finished  =Neste aktivitet
 label.finish  =Ferdig
-error.msg.repository  =En databasefeil oppsto ved opplasting av filen
 label.on  =P\u00e5
 label.off  =Av
 monitor.summary.th.advancedSettings  =Avanserte innstillinger
@@ -214,31 +204,31 @@ message.alertContentEdit  =Merk: En av studentene har begynt p\u00e5 denne aktiv
 warning.msg.authoring.do.you.want.to.delete  =Vil du virkelig slette dette sp\u00f8rsm\u00e5let ?
 label.export.exported.on  =Eksportert til :
 label.export.question.summary  =Status for sp\u00f8rsm\u00e5l
-label.export.user.summary  =Status for bruker
+label.export.user.summary  =Status for studenter
 label.export.date.attempted  =Fors\u00f8kt dato
 label.export.mark  =Karakter
 label.export.time.taken  =Tidsforbruk fra start (sekunder)
 label.export.average  =Gjennomsnitt
-label.export.summary.by.user  =Status per bruker
+label.export.summary.by.user  =Status per student
 lable.export.summary.by.question  =Status per sp\u00f8rsm\u00e5l
-label.export.user.id  =Bruker Ident
+label.export.user.id  =Brukernavn
 label.authoring.basic.allow.learners.rich.editor  =Tillat studentene \u00e5 benytte tekst editor
 label.authoring.advance.allow.students.right.answers  =Indiker valg som har blitt besvart korrekt.
 label.authoring.advance.allow.students.wrong.answers  =Indiker valg som har blitt besvart feil.
-monitor.summary.date.restriction  =Tids-begrensning
+monitor.summary.date.restriction  =Frist
 monitor.summary.when.date.restriction.is.set  =Studentene vil ikke kunne gjennomf\u00f8re vurderingen etter den definerte tid.
 monitor.summary.after.date  =Dato/tid:
 monitor.summary.set.restriction  =Definer begrensning
 monitor.summary.unset.restriction  =Fjern begrensning
-authoring.info.teacher.set.restriction  =Foreleseren har definert en tids-begrensing til {0}. Etter dette vil aktiviteten ikke v\u00e6re tilgjengelig.
+authoring.info.teacher.set.restriction  =Foreleseren har definert en frist til {0}. Etter dette vil aktiviteten ikke v\u00e6re tilgjengelig.
 monitor.summary.notification  =Melding
-monitor.summary.date.restriction.set  =Tids-begrensing er definert
-monitor.summary.date.restriction.removed  =Tids-begrensning er fjernet
+monitor.summary.date.restriction.set  =En frist er definert
+monitor.summary.date.restriction.removed  =Fristen er fjernet
 label.authoring.advance.passing.mark  =Grenseverdi for vurderingen
 label.authoring.advance.choose.restriction  =Velg begrensninger:
 label.authoring.advance.passing.mark.none  =Ingen
 label.learning.havent.reached.passing.mark  =Beklager, du har ikke oppn\u00e5dd {0} og kan ikke g\u00e5 videre. Vennligst pr\u00f8v p\u00e5 nytt.
-label.authoring.basic.add.question.to.pool  =Legg et sp\u00f8rsm\u00e5l til sp\u00f8rsm\u00e5ls-samlingen
+label.authoring.basic.add.question.to.pool  =Legg til et sp\u00f8rsm\u00e5
 label.authoring.basic.add.question.to.list  =Legg til et sp\u00f8rsm\u00e5l i listen
 label.authoring.basic.question.bank.title  =Sp\u00f8rsm\u00e5lsbank
 label.authoring.basic.list.header.mark  =Karakter
@@ -250,11 +240,11 @@ authoring.import.result  =Resultat fra import verkt\u00f8yet
 authoring.title.import  =Importer sp\u00f8rsm\u00e5l
 authoring.import.instruction  =Veld sp\u00f8rsm\u00e5l som skal importeres
 button.select.importfile  =Velg import fil
-msg.import.file.format  =Importfilem m\u00e5 v\u00e6re en .xml fl fra vurderingsverkt\u00f8yet
+msg.import.file.format  =Importfilem m\u00e5 v\u00e6re en .xml fl fra vurderingsverkt\u00f8yet og ikke v\u00e6re st\u00f8rre enn {0}
 label.import.file  =Importer xml fil
 button.import  =Import
-label.authoring.basic.import.questions  =Importer sp\u00f8rsm\u00e5l
-label.authoring.basic.export.questions  =Eksporter sp\u00f8rsm\u00e5l
+label.authoring.basic.import.questions  =Importer
+label.authoring.basic.export.questions  =Eksporter
 label.authoring.advance.display.summary  =Vis alle sp\u00f8rsm\u00e5l og svar med en gang studenten er ferdig.
 label.authoring.basic.import.qti  =Importer IMS QTI
 advanced.reflectOnActivity  =Legg til en notatblokk p\u00e5 slutten av vurderingen og med f\u00f8lgende instruksjoner:
@@ -276,6 +266,45 @@ label.authoring.answer.required  =ER svar n\u00f8dvendig ?
 warn.answers.required  =Vennligst svar p\u00e5 de markerte sp\u00f8rsm\u00e5lene for \u00e5 kunne fortsette.
 label.authoring.basic.export.qti  =Eksporter IMS QTI
 label.monitoring.heading  =Kontroller Monitor
+label.maximum.number.words  =Maksimum antall ord
+label.minimum.number.words  =Maksimum antall ord
+label.info.maximum.number.words  =Dette svaret kan ha maksimum {0} antall ord.
+label.info.minimum.number.words  =Dette svaret kan ha minimum {0} antall ord.
+label.info.max.and.min.number.words  =Dette svaret kan ha minimum {0}og maksimum {0} antall ord.
+warn.answers.word.requirements.limit  =Vennligst merk begrensningen p\u00e5 antall ord for \u00e5 fortsette
+label.words  =Ord:
+message.no.reflection.available  =Ingen notat fra notatbok er lagt til.
+label.authoring.basic.type.mark.hedging  =Karakter sikring
+label.option.correct  =Riktig ?
+label.assign.hedging.mark  =Tilordne karakterer til svar. Maksimal mulig karakter:{0}
+label.learning.submit  =Overlever
+warn.mark.hedging.wrong.total  =For \u00e5 kunne fortsette burde alle sikringssp\u00f8rsm\u00e5l ha f\u00e5tt tilordnet karakterer
+label.incorrect.answer.nullifies.mark  =Legg tilh\u00f8yeste karakter kun n\u00e5r korrekte svar er gitt
+label.export.summary  =Oppsummering
+label.justify.hedging.marks  =Vennligst begrunn din karaktergivning
+label.select.leader  =Valg av leder
+label.question.options  =Sp\u00f8rsm\u00e5lsalternativ
+label.activity.completion  =Aktivitetsslutt
+label.notifications  =Meldinger
+label.ask.for.hedging.justification  =Be om begrunnelse for sikring ?
+label.number.learners.per.session  =Antall studenter per sesjon
+label.tool.output  =Verkt\u00f8y output
+output.desc.best.score  =Best poengsum
+label.tool.output.has.been.changed  =Verk\u00f8y output er blitt endret
+output.desc.first.score  =F\u00f8rste poengsum
+output.desc.average.score  =Gjennomsnittlig poengsum
+label.waiting.for.leader.launch.time.limit  =Lederen har ikke startet aktiviteten. Vennligst vent til hun/han starter denne
+label.waiting.for.leader.finish  =Tidsbegrensningen som er definert av instrukt\u00f8ren er over. Vennligst vent til en gruppeleder avslutter aktiviteten
+warn.mark.hedging.wrong.justification  =Begrunnelse kan ikke v\u00e6re tom
+error.import.file.format  =Importfilen er ikke en .xml fil
+label.file  =Fil
+errors.maxfilesize  =Filen er st\u00f8rre enn maks filst\u00f8rrelse {0}
+label.summary.downloaded  =Oppsummering er lastet ned
+label.not.answered  =Ikke besvart
+label.other  =Andre
+label.graph.help  =Du kan skalere deg inn og ut i grafikken nedenfor ved \u00e5 benytte musen. N\u00e5r du skalerer deg inn s\u00e5kan det gr\u00e5 feltet i bunn trekkes til h\u00f8yre eller venstre for \u00e5 endre karakter-verdiene
+label.lowest.mark  =Laveste karakter:
+label.highest.mark  =H\u00f8yeste karakter:
 
 
-#======= End labels: Exported 270 labels for no NO =====
+#======= End labels: Exported 299 labels for no NO =====
