--- a/lams_tool_bbb/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_bbb/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = bbb
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:31:53 CST 2017 
  
 #=================== labels for Web conferencing =================# 
 
@@ -16,11 +16,9 @@ pageTitle.authoring  =Videokonferanse foreleser
 pageTitle.monitoring  =Videokonferanse oppf\u00f8lging
 button.basic  =Grunnleggende
 button.advanced  =Avansert
-button.upload  =Last opp
 button.cancel  =Avbryt
 button.save  =Lagre
 button.finish  =Neste aktivitet
-button.instructions  =Instruksjoner
 button.continue  =Fortsett
 button.edit  =Rediger
 button.try.again  =Fors\u00f8k igjen
@@ -29,7 +27,6 @@ button.editActivity  =Rediger aktiviteten
 button.statistics  =Statistikk
 button.close  =Avslutt
 label.authoring.basic.title  =Tittel
-label.attachments  =Vedlegg
 label.view  =Se p\u00e5
 label.notAvailable  =Ikke tilgjengelig
 label.save  =Lagre
@@ -44,12 +41,8 @@ label.monitoring.startConference  =Start konferansen
 label.learning.joinConference  =Delta i konferansen
 label.learning.conferenceNotAvailable  =Videokonferansen er ikke tilgjengelig enda. Konferer foreleser.
 label.refresh  =Frisk opp
-label.download  =Last ned
-label.delete  =Fjern
 label.cancel  =Avbryt
-message.unsavedChanges  =Siden inneholder data som ikke er lagret
 message.defineLaterSet  =Vennligst vent til at freleseren er ferdig med innholdet for denne aktiviteten.
-message.runOfflineSet  =Denne aktiviteten skal ikke utf\u00f8res med hjelp av data. Konferer foreleseren.
 message.learner.blank.input  =Du har ikke skrevet noe. Er dette riktig ?
 message.alertContentEdit  =MERK: En eller fler studenter har begynt p\u00e5 denne aktiviteten. Hvis du endrer innholdet s\u00e5 vil studentene f\u00e5 forskjellig innhold.
 message.warnLockOnFinish  =Merk: Etter at du har klikket p\u00e5 Neste aktivitet s\u00e5 vil du ikke kunne fortsette \u00e5 delta i videokonferansen.
@@ -65,10 +58,6 @@ error.mandatoryField  ={0} m\u00e5 fylles ut.
 error.optionalField  ={0} er uten innhold.
 advanced.lockOnFinished  =L\u00e5s n\u00e5r du er ferdig
 advanced.reflectOnActivity  =Legg til en notatbok p\u00e5 slutten av videokonferansen og med f\u00f8lgende instruksjoner
-instructions.uploadOfflineInstr  =Off-line instruksjons fil
-instructions.uploadOnlineInstr  =On-line instruksjons fil
-instructions.offlineInstructions  =Off-line instruksjoner
-instructions.onlineInstructions  =On-line instruksjoner
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 monitor.summary.th.advancedSettings  =Avanserte innstillinger
 monitor.summary.bbbSettings  =Videokonferanse innstillinger
@@ -77,8 +66,10 @@ config.serverURL  =URL til Big Blue Button server
 config.securitySalt.notice  =Merk: En sikkerhets kryptifisering "salt" er n\u00f8dvendig. Denne kryptifiseringen blir benyttet for \u00e5 sikre at videokonferanse rom kan skapes fra denne nettsiden.
 config.securitySalt.notice2  =VIKTIG: IKKE TILLAT BRUKERNE \u00c5 F\u00c5 TILGANG TIL DIN KRYPTIFISERTE N\u00d8KKEL. HVIS S\u00c5 ER TILFELLE VIL SIKKERHETEN I SYSTEMET \u00d8DELEGGES.Se nettsiden til BigBlueButton for mer informasjon.
 config.securitySalt  =Sikkerhets kryptifisering
-export.toolExportNotSupported  =Dette verkt\u00f8yet tillater ikke \u00e5 eksportere mapper.
-message.unableToStartLesson  =Ikke mulig \u00e5 delta p\u00e5 m\u00f8tet. Konferer med instrukt\u00f8ren.
+message.unableToStartLesson  =Ikke mulig \u00e5 delta p\u00e5 m\u00f8tet. Konferer med foreleseren.
+button.submit  =Avslutt
+message.monitoring.summary.no.session  =Ingen sesjon er tilgjengelig
+label.activity.completion  =Aktivitetsslutt
 
 
-#======= End labels: Exported 73 labels for no NO =====
+#======= End labels: Exported 64 labels for no NO =====
