--- a/lams_tool_chat/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_chat/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = chat
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:24:11 CST 2017 
  
 #=================== labels for Chat =================# 
 
@@ -14,30 +14,20 @@ activity.helptext  =Synkront chat verkt\u00f8y
 pageTitle.authoring  =Godkjenne chat
 button.basic  =Grunnlag
 button.advanced  =Avansert
-button.instructions  =Informasjon
-button.upload  =Hent opp
 label.authoring.basic.title  =Tittel:
 label.authoring.basic.content  =Innhold:
 label.authoring.basic.instructions  =Informasjon:
 advanced.lockOnFinished  =L\u00e5s n\u00e5r ferdig
 advanced.filteringEnabled  =Meldingsfilter (separer hvert ord som skal filtreres bort med komma: ord1, ord2, osv)
-instructions.onlineInstructions  =On-line informasjon:
-instructions.offlineInstructions  =Off-line informasjon:
-instructions.uploadOnlineInstr  =On-line informasjonsfil:
-instructions.uploadOfflineInstr  =Off-line informasjonsfil:
 instructions.type.online  =On-line
 instructions.type.offline  =Off-line
 label.filename  =Fil navn
 label.type  =M\u00f8nster
-label.attachments  =Vedlegg
 link.view  =Se p\u00e5
-link.download  =Last ned
 link.delete  =Slett
 message.updateSuccess  =Endringer er lagret
-message.unsavedChanges  =Siden inneholder informasjon som ikke er lagret
 pageTitle.learning  =On-line chat
 message.defineLaterSet  =Vennligst vent p\u00e5 at foreleseren skal ferdigstille innholdet for denne aktiviteten.
-message.runOfflineSet  =Denne aktiviteten utf\u00f8res ikke med datamaskinen. Kontakt foreleser.
 pageTitle.monitoring  =Chat kontroll modus
 button.summary  =Status
 button.editActivity  =Rediger
@@ -46,7 +36,6 @@ titleHeading.summary  =Status
 titleHeading.instructions  =Informasjon
 titleHeading.statistics  =Statistikk
 titleHeading.editActivity  =Rediger
-titleHeading.exportPortfolio  =Eksporter mappe
 heading.group  =Gruppe {0} :
 heading.totalLearners  =Antall studenter:
 heading.totalLearnersInGroup  =Antal studenter i gruppen:
@@ -72,15 +61,6 @@ button.next  =Neste
 label.save  =Lagre
 label.cancel  =Avbryt
 error.missingParam  =Kan ikke fortsette, {0} mangler
-error.exceedMaxFileSize  =Maks filst\u00f8rrelse er overskredet
-error.exception.NbApplication  =Det har oppst\u00e5tt en intern feil med chat verkt\u00f8yet. Hvis du rapporter feilen, vennligst rapporter {0}
-error.contentrepository  =En feil oppsto ved lagring/fjerning av informasjons fil {0}. Filen er sansynligvis ikke lagret korrekt.
-error.content.locked  =Det er ikke tillatt \u00e5 endre innholdet. Inholdet er l\u00e5st fordi det benyttes av en eller flere elever.
-error.defineLater  =Beklager, aktiviteten er ikke klar. Vennligst vent til foreleseren har klargjort denne.
-errors.maxfilesize  =File som lastes opp har overskredet maks filst\u00f8relse p\u00e5 {0} byte
-error.mandatoryField  ={0} feltet m\u00e5 fylles ut.
-error.mark.invalid.number  ={0} feltet m\u00e5 v\u00e6re et gyldig tall uten desimaler.
-error.mark.invalid.decimal.number  ={0} feltet m\u00e5 inneholde et gyldig desimaltall.
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 pageTitle.monitoring.chatHistory  =Chat historie
 button.try.again  =Fors\u00f8k igjen
@@ -123,17 +103,22 @@ textsearch.all.words  =har alle disse ordene:
 textsearch.phrase  =har akkurat disse ordene eller frasen:
 textsearch.any.words  =har en eller flere av disse ordene:
 textsearch.excluded.words  =har ingen av disse u\u00f8nskede ordene:
-monitor.summary.date.restriction  =Dato begrensning
+monitor.summary.date.restriction  =Frist
 monitor.summary.when.date.restriction.is.set  =Studentene kan ikke benytte chat etter den definerte tid.
 monitor.summary.after.date  =Dato/tid:
 monitor.summary.set.restriction  =Definer begrensning
 monitor.summary.unset.restriction  =Fjern begrensning
-authoring.info.teacher.set.restriction  =Foreleseren har innf\u00f8rt dato/tid begrensning for denne aktiviteten fra {0}. Etter dette vil aktiviteten ikke v\u00e6re tilgjengelig.
+authoring.info.teacher.set.restriction  =Foreleseren har innf\u00f8rt frist for denne aktiviteten fra {0}. Etter dette vil aktiviteten ikke v\u00e6re tilgjengelig.
 monitor.summary.notification  =Melding
-monitor.summary.date.restriction.set  =Dato begrensning er innf\u00f8rt
-monitor.summary.date.restriction.removed  =Dato begrensning er fjernet
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen er fjernet
 output.desc.all.users.messages.output.definition.chat  =Hver students melding som er sendt til Chat
 button.submit  =Fullf\u00f8r
+label.reflections  =Refleksjon
+label.chat.options  =Chat alternativ
+label.activity.completion  =Aktivitetsslutt
+label.notifications  =Meldinger
+output.desc.learner.number.of.posts  =Antall meldinger
 
 
-#======= End labels: Exported 128 labels for no NO =====
+#======= End labels: Exported 113 labels for no NO =====
