--- a/lams_tool_daco/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:27:59 CST 2017 
  
 #=================== labels for Data Collection =================# 
 
@@ -31,8 +31,6 @@ button.try.again  =Fors\u00f8k igjen
 message.no.reflection.available  =Ingen notatbok er tilgjengelig
 define.later.message  =Vennligst vent til at foreleseren har ferdigstilt innholdet for denne aktiviteten
 label.author.title  =Opphav for data innsamling
-label.authoring.heading.instructions  =Instruksjoner
-label.authoring.heading.instructions.desc  =Vennligst skriv off-line og on-line instruksjoner
 label.authoring.heading.advanced  =Avansert
 label.authoring.heading.advanced.description  =Vennligst skriv avanserte alternativ for data innsamling
 label.authoring.heading.basic.description  =Grunndata for data innsamling
@@ -44,7 +42,6 @@ label.authoring.basic.answeroption.add  =Legg til alternativ
 label.authoring.basic.answeroption.ordinal  =ABCDEFGHIJKLMNOPQRSTUVWXYZ
 label.authoring.basic.answeroption.up  =G\u00e5 opp
 label.authoring.basic.answeroption.down  =G\u00e5 ned
-label.authoring.basic.download  =Last ned
 label.authoring.basic.question.add  =Legg til sp\u00f8rsm\u00e5l
 label.authoring.basic.textfield  =Tekst for en linje
 label.authoring.basic.textfield.add  =Legg til et sp\u00f8rsm\u00e5l p\u00e5 en linje
@@ -95,15 +92,6 @@ label.authoring.advanced.record.nolimit  =Ingen grense
 label.authoring.advanced.lock.on.finished  =L\u00e5s n\u00e5r ferdig
 label.authoring.advanced.notify.onlearnerentry  =Varsle foreleserne n\u00e5r studenten starter denne aktiviteten
 label.authoring.advanced.notify.onrecordsubmit  =Varsle foreleserne n\u00e5r en student sender inn en opptegnelse.
-label.authoring.online.instruction  =On-line informasjon
-label.authoring.online.file  =Last opp on-line fil
-label.authoring.online.filelist  =On-line filliste
-label.authoring.online.upload  =Last opp on-line
-label.authoring.offline.file  =Last opp off-line fil
-label.authoring.offline.instruction  =Off-line informasjon
-label.authoring.offline.filelist  =Off-line filliste
-label.authoring.offline.upload  =Last opp off-line
-label.authoring.choosefile.button  =Valgt fil
 label.authoring.save.button  =Lagre
 message.authoring.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 label.learning.title  =Datafangst - student
@@ -152,15 +140,13 @@ message.learning.warnLockOnFinish  =Merk: Etter at du har klikket p\u00e5 Neste 
 message.learning.addrecordsuccess  =Opptegnelsen ble lagt til korrekt
 message.learning.editrecordsuccess  =Opptegnelsen ble lastet opp vellykket
 message.learning.activityLocked  =Foreleseren har definert denne aktiviteten slik at du ikke f\u00e5r lov til \u00e5 legge til flere oppgaver etter at du har avsluttet denne.
-message.learning.offline  =Denne oppgaven skal ikke utf\u00f8res ved hjelp av datamaskin. Kontakt foreleseren.
 label.monitoring.close  =Lukk
 title.monitoring  =LAMS datafangst foreleser
 title.monitoring.recordlist  =LAMS liste for opptegnelser
 tab.monitoring.statistics  =Statistikk
-tab.monitoring.instructions  =Informasjon
 tab.monitoring.edit.activity  =Rediger
-label.monitoring.fullname  =Fullt navn
-label.monitoring.loginname  =Logg inn navn
+label.monitoring.fullname  =Navn
+label.monitoring.loginname  =Logg inn
 label.monitoring.recordcount  =Tell opp opptegnelser
 label.monitoring.notebook  =Notatbok tilgang
 label.monitoring.notebook.view  =Se p\u00e5
@@ -179,17 +165,15 @@ label.monitoring.suggest  =Foresl\u00e5tt av
 label.monitoring.number.learners  =Antall studenter
 label.monitoring.hide  =Skjul
 label.monitoring.show  =Vis
-label.monitoring.user.loginname  =Logg inn navn
+label.monitoring.user.loginname  =Logg inn
 label.monitoring.user.name  =Navn
 label.monitoring.hidden  =Skjult
 label.monitoring.edit.activity.cancel  =Avbryt
 label.monitoring.edit.activity.update  =Oppdater
 label.monitoring.edit.activity.edit  =Rediger
-label.monitoring.attachments  =Vedlegg
 label.monitoring.user.fullname  =Navn
 label.monitoring.heading.access  =Studentens liste
 label.monitoring.reflection.heading  =Se p\u00e5 notatbok tekst
-message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke redigeres lengere
 message.monitoring.summary.no.session  =Ingen studenter har tilgang til denne aktiviteten.
 message.monitoring.summary.no.question.for.group  =Ingen sp\u00f8rsm\u00e5l er tilgjengelig for denne gruppen.
 label.export.title  =Eksporter mappe for datainnsamling
@@ -254,7 +238,6 @@ message.authoring.delete.question  =Vil du virkelig slette dette sp\u00f8rsm\u00
 title.export.spreadsheet  =Eksporter til fil
 label.export.spreadsheet.instruction  =Vennligst velg hvilket filformat du \u00f8nsker til eksport
 label.export.spreadsheet.choose.format.excel  =MS Excel
-label.export.spreadsheet.choose.format.csv  =CVS (karakterformat: UTF-8, SEPERATOR: SEMIKOLON ";")
 button.export  =Eksport
 label.export.spreadsheet.instruction.continue  =og trykk p\u00e5 Eksport knappen. Etter en vellykket eksport kan du lukke dette vinduet.
 label.export.file.title  =Eksport av data fangst
@@ -263,6 +246,15 @@ label.export.file.sheet  =Verkt\u00f8y innhold
 label.export.file.user  =Student
 label.export.file.answer.date  =Lagt til den
 label.authoring.cancel.button  =Avbryt
+label.learning.submit  =Avslutt
+label.search  =S\u00f8k...
+label.monitoring.average.number.records.heading  =Gjenomsnittlig antall filer
+label.activity.completion  =Aktivitetsslutt
+label.notifications  =Merknader
+errors.maxfilesize  =Opplastet filoverskrider maksimal filst\u00f8rrelse p\u00e5:{0}Opplastet
+error.attachment.executable  =Opplastet filer kj\u00f8rbar
+error.attachment.must.be.image  =Aksepterte formater:JPG, GIF eller PNG
+label.upload.info  =Opplastet m\u00e5 ikke v\u00e6re kj\u00f8rbar og kan ikke overskride filst\u00f8rrelse p\u00e5: {0}
 
 
-#======= End labels: Exported 257 labels for no NO =====
+#======= End labels: Exported 249 labels for no NO =====
