--- a/lams_tool_forum/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:11:19 CST 2017 
  
 #=================== labels for Forum =================# 
 
@@ -12,26 +12,12 @@ activity.helptext  =Diskusjonsforum passende for samarbeid og situasjoner over t
 tool.display.name  =Diskusjonsforum
 tool.description  =Verkt\u00f8y for forum, ogs\u00e5 kjent som meldingstavle.
 label.authoring.heading.basic  =Forum
-label.authoring.heading.basic.desc  =Grunndata for forum
-label.authoring.heading.instructions.desc  =Skriv inn informasjon for bruk on-line og off-line
-label.authoring.heading.advance.desc  =Vennligst legg til avanserte alternativer i Forum
 label.authoring.create.new.topic  =Opprett nytt emne
 label.authoring.basic.title  =Tittel
 label.authoring.basic.instruction  =Informasjon
-label.authoring.online.instruction  =On-line informasjon
-label.authoring.offline.instruction  =Off-line informasjon
-label.authoring.online.file  =Last opp fil on-line
-label.authoring.offline.file  =Last opp fil off-line
 label.authoring.advance.lock.on.finished  =L\u00e5s n\u00e5r fullf\u00f8rt
 label.authoring.save.button  =Lagre
 label.authoring.cancel.button  =Avbryt
-label.authoring.choosefile.button  =Velg fil
-label.authoring.upload.online.button  =Last opp on-line
-label.authoring.upload.offline.button  =Last opp off-line
-label.authoring.online.filelist  =Fil-liste for on-line
-label.authoring.offline.filelist  =Fil-liste for off-line
-label.authoring.online.delete  =Slett
-label.authoring.offline.delete  =Slett
 label.authoring.advance.allow.edit  =Tillat redigering av egne innlegg
 label.authoring.advance.use.richeditor  =Tillat bruk av teksteditor
 label.authoring.advance.limited.input  =Maksimalt antall karakterer pr. innsendelse
@@ -46,7 +32,6 @@ lable.topic.subject.by  =Av
 label.back.to.forum  =Tilbake til listen med emner
 lable.topic.title.message.number  =# av melding
 lable.topic.title.average.mark  =Gjennomsnitts  karakter
-authoring.exception  =Det er problem med forumets forfatterside, \u00e5rsaken er {0}
 page.title.monitoring.content.userlist  =Status
 page.title.monitoring.view.user.mark  =Se p\u00e5 studentens karakter
 page.title.monitoring.edit.user.mark  =Endre studentens karakter
@@ -61,16 +46,10 @@ label.monitoring.edit.activity.update  =Oppdater
 label.monitoring.edit.activity.edit  =Rediger
 label.monitoring.statistic.average.mark  =Gjennomsnittlig karakter for melding
 lable.monitoring.statistic.total.message  =# antall av totale antall meldinger
-message.monitoring.edit.activity.not.editable  =Aktiviteten er ikke lenger redigerbar
-errors.header  =:
-errors.footer  =:
 error.valueReqd  =En verdi m\u00e5 angis.
-error.inputFileTooLarge  =Inngangs fil er for stor !
 error.mark.needNumber  =Karakter m\u00e5 v\u00e6re en tallverdi
 error.mark.invalid.number  =Karakteren er p\u00e5 et ugyldig tallformat
-error.fail.get.forum  =Forum er ikke tilgjengelig
 error.title.empty  =Tittelen kan ikke v\u00e6re tom
-message.msg.maxFileSize  =Maks 250 k
 title.messageTopic.open  =Emne detaljer
 title.message.add  =Legg til Melding
 title.message.open  =Vis Melding
@@ -87,7 +66,6 @@ message.label.threadReplies  =Svar som er g\u00e5tt gjennom
 message.link.reply  =Svar
 label.open  =\u00c5pen
 label.delete  =Slett
-label.download  =Last ned
 label.view  =Vis
 label.edit  =Rediger
 label.reply  =Svar
@@ -110,7 +88,6 @@ js.error.invalid.number  =Inngangsresultat er ikke gyldig, feil tallformat.
 js.error.min.number  =Inngangsresultat m\u00e5 v\u00e6re st\u00f8rre enn 0
 js.error.title  =F\u00f8lgende feil oppstod:
 monitoring.tab.summary  =Status
-monitoring.tab.instructions  =Informasjon
 monitoring.tab.edit.activity  =Rediger
 monitoring.user.post.topic  =s\u00f8rger for de f\u00f8lgende poster:
 lable.topic.title.comment  =Kommentar
@@ -133,11 +110,9 @@ label.save  =Lagre
 label.cancel  =Avbryt
 authoring.tab.basic  =Grunnlag
 authoring.tab.advanced  =Avansert
-authoring.tab.instructions  =Informasjon
 page.title.authoring.init  =Forum forfatter
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 define.later.message  =Vent til at foreleseren har gjort ferdig innholdet for denne aktiviteten.
-run.offline.message  =Denne aktiviteten skal ikke utf\u00f8res ved datamaskinen. Kontakt foreleser.
 button.try.again  =Fors\u00f8k igjen
 button.close  =Lukk
 button.release.mark  =Publiser karakterer
@@ -160,10 +135,10 @@ error.reflection.emtpy  =Venligst skriv ditt notat
 title.reflection  =Skriv notat
 label.continue  =Fortsett
 monitoring.user.fullname  =Navn
-monitoring.user.loginname  =Logg inn navn
+monitoring.user.loginname  =Logg inn
 monitoring.user.reflection  =Skriv notat
 page.title.monitoring.view.reflection  =Se notater
-label.default.user.name  =Instrukt\u00f8r
+label.default.user.name  =Foreleser
 error.subject.required  =Et subjekt kan ikke v\u00e6re tomt
 error.body.required  =En samling kan ikke v\u00e6re tom.
 title.original.message.reply  =Opprinnelig melding
@@ -173,7 +148,6 @@ label.download.marks.heading.marks  =Karakter
 label.download.marks.heading.comments  =Kommentarer
 label.responses.locked  =Merk: Etter at du har klikket p\u00e5 "Neste Aktivitet" og deretter g\u00e5r tilbake til dette forumet, s\u00e5 vil du ikke v\u00e6re istand til \u00e5 delta med innlegg.
 label.responses.locked.reminder  =Foreleseren har satt opp denne aktiviteten slik at du ikke  kan sende innlegg etter at du har avsluttet. N\u00e5r du kommer tilbake til dette forumet s\u00e5 vil du kun f\u00e5 tillatelse til \u00e5 se innleggene.
-label.attachments  =Vedlegg
 monitoring.marked.question  =Gitt karakter ?
 label.postingLimits.forum.reminder  =Begrensninger for dette forum: Minimum {0} og maksimum{1} pr diskusjon
 label.postingLimits.topic.reminder  =Innlegg for denne diskusjonen: Minimum {0} og maksimum {1}. Du har sendt inn {2} innlegg
@@ -182,7 +156,7 @@ label.yes  =Ja
 label.no  =Nei
 label.on  =P\u00e5
 label.off  =Av
-monitor.summary.th.advancedSettings  =Avansert
+monitor.summary.th.advancedSettings  =Avanserte innstillinger
 monitor.summary.td.addNotebook  =Legg til en notatbok p\u00e5 slutten av forumet
 monitor.summary.td.notebookInstructions  =Informasjon for notatbok
 label.authoring.advanced.notify.mark.release  =Varsle studentene n\u00e5r karakterene offentliggj\u00f8res.
@@ -224,19 +198,52 @@ event.newposting.body  ={0}:\n{1}\n\n--e-post er sendt automatisk fra LAMS
 label.authoring.basic.do.you.want.to.delete  =Vil du virkelig slette dette emnet ?
 label.learning.number.of.votes  ={0}/{1} stemmer
 label.authoring.advance.allow.rate.postings  =Tillat studentene \u00e5 vurdere hverandres innsendelser
-monitor.summary.date.restriction  =Dato begrensning
+monitor.summary.date.restriction  =Frist
 monitor.summary.when.date.restriction.is.set  =Studentene vil ikke kunne sende meldinger etter den definerte tid.
 monitor.summary.after.date  =Dato/tid:
 monitor.summary.set.restriction  =Definer begrensninger
 monitor.summary.unset.restriction  =Fjern begrensning
-authoring.info.teacher.set.restriction  =Foreleseren har innf\u00f8rt tidsbegrensninger for denne aktiviteten fra {0}. Etter dette vil denne aktiviteten ikke v\u00e6re tilgjengelig.
+authoring.info.teacher.set.restriction  =Foreleseren har satt en frist for denne aktiviteten fra {0}. Etter dette vil denne aktiviteten ikke v\u00e6re tilgjengelig.
 monitor.summary.notification  =Melding
-monitor.summary.date.restriction.set  =Dato begrensninger er innf\u00f8rt
-monitor.summary.date.restriction.removed  =Dato begrensninger er fjernet
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen er fjernet
 errors.maxfilesize  =Fil for opplasting er for stor, maks st\u00f8rrelse er:{0}
 error.attachment.executable  =Opplastet fil kan kj\u00f8res
 label.upload.info  =Fil for opplasting m\u00e5 ikke kunne kj\u00f8res og den m\u00e5 v\u00e6re mindre enn:{0} bytes
 output.desc.all.users.answers.definition.forum  =Hver elev sin post er sendt til Forum
+label.submit  =Avslutt
+label.rateLimits.forum.reminder  =Begrensing av vurderinger: minimum {0} og maksimum {1}
+label.rateLimits.forum.reminder.min  =Du m\u00e5 vurdere minst {0} innlegg.
+label.rateLimits.forum.reminder.max  =Du kan kun vurdere opp til {0} innlegg.
+js.error.validate.number  =Det er en feil vedr\u00f8rende minimum og/eller maksimum antall innlegg. Vennligst kontroller og pr\u00f8v igjen.
+label.rateLimits.topic.reminder  =Du har {0}innlegg allerede.
+info.minimum.number.characters  =minimum antall karakterer i svaret m\u00e5 v\u00e6re {0}
+warn.minimum.number.characters  =Du m\u00e5 legge til {0} karakterer for \u00e5 fortsette.
+label.authoring.advance.min.limited.input  =Minimum antall karakterer pr innsendelse
+label.char.required  =Antalll karakterer som er n\u00f8dvendig
+label.number.of.posts  =Innsendelser
+label.latest.posting.date  =Siste innsendelse
+label.number.of.replies  =Svar
+message.no.reflection.available  =Ikke noen notater er lagt ved
+label.show.more.messages  =Flere poster
+label.loading.messages  =Last inn flere poster
+label.search  =S\u00f8k....
+label.show.replies  =Vis svar
+label.hide.replies  =Skjul svar
+label.showhide.prompt  =Vis/skjul svar
+message.complete.or.cancel.reply  =Vennligst ferdigstill eller avbryt det aktive svaret f\u00f8r du starter p\u00e5 et nytt svar.
+message.complete.or.cancel.edit  =Vennligst ferdigstill eller avbryt den n\u00e5v\u00e6rende redigeringent f\u00f8r du starter p\u00e5 et ny redigering.
+error.cannot.redisplay.please.refresh  =Endringene dine er lagret, men kan ikke vises p\u00e5 nytt. Vennligst velg oppfrisk for \u00e5 laste inn forum meldingene.
+label.posting.options  =Innsendings alternativer
+label.activity.completion  =Ferdistillelse av aktivitet
+label.notifications  =Merknader
+error.min.post.char.less  =Maksimalt antall karakterer pr innsendelse m\u00e5n v\u00e6re st\u00f8rre enn minimum antall.
+error.min.rate.less.max  =Maksimal antall av vurderinger m\u00e5v\u00e6re st\u00f8rre enn minimum antall
+js.error.validate.posting.number  =Det er en feil med minimum og/eller maksimum antall innsendelser. Vennligst kontroller og fors\u00f8k igjen.
+js.error.validate.reply.number  =Det er en feil med minimum og/eller maksimum antall innsendelser
+label.topics  =Emner
+label.authoring.basic.resource.file.input  =Fil
+message.monitoring.edit.activity.not.editable  =Aktiviteten kan ikke editeres lengre
 
 
-#======= End labels: Exported 231 labels for no NO =====
+#======= End labels: Exported 238 labels for no NO =====
