--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:28:50 CST 2017 
  
 #=================== labels for Google Maps =================# 
 
@@ -14,7 +14,6 @@ activity.helptext  =Gmap for \u00e5 markere kartreferanser
 pageTitle.authoring  =Gmap forfatter
 button.basic  =Grunnlag
 button.advanced  =Avansert
-button.upload  =Last opp
 label.authoring.basic.title  =Tittel:
 label.authoring.basic.content  =Innhold:
 label.authoring.basic.instructions  =Instruksjoner:
@@ -29,7 +28,7 @@ button.fitMarkers  =Tilpass mark\u00f8r
 button.go  =Start !
 label.createdBy  =Utformet av:
 label.latitudeLongitude  =Breddegrad-Lengdegrad:
-label.newInfoWindowText  =Ny tekst for informasjons vinduet:
+label.newInfoWindowText  =Beskrivelse:
 button.edit  =Rediger
 button.remove  =Fjern
 label.learner.markerLimitReached  =Du har brukt opp maks antall mark\u00f8rer og kan ikke legge til flere.
@@ -48,37 +47,21 @@ monitor.summary.title.advanced  =Avansert
 monitor.summary.title.groups  =Grupper
 monitor.summary.title.map  =Kart
 monitor.summary.th.advancedSettings  =Avansert innstilling
-instructions.onlineInstructions  =Off-line informasjon:
-instructions.offlineInstructions  =On-line informasjon:
-instructions.uploadOnlineInstr  =On-line informasjonsfil
-instructions.uploadOfflineInstr  =Off-line informasjonsfil:
-instructions.type.online  =On-line
-instructions.type.offline  =Off-line
-label.filename  =Filnavn
-label.type  =Type
-label.attachments  =Vedlegg
 label.authoring.authoredMarkers  =Mark\u00f8rer
 label.legend.unsaved  =Ikke lagret:
 label.legend.saved  =Lagret:
 label.legend.edited  =Redigert:
-label.legend.userSelected  =Bruker valgt:
+label.legend.userSelected  =Bruker valgte:
 link.view  =Se p\u00e5
-link.download  =Last ned
-link.delete  =Fjern
-message.unsavedChanges  =Siden inneholder endringer sm ikke er lagret
 message.defineLaterSet  =Vennligst vent til at foreleseren har ferdigstillt innholdet for denne aktiviteten.
-message.runOfflineSet  =Denne aktiviteten utf\u00f8res ikke ved hjelp av datamaskin. Kontakt foreleseren for informasjon.
 pageTitle.monitoring  =Gmap foreleser
 button.summary  =Status
-button.instructions  =Instruksjoner
 button.editActivity  =Rediger
 button.statistics  =Statistikk
 titleHeading.summary  =Status
 titleHeading.instructions  =Instruksjoner
 titleHeading.statistics  =Statistikk
 titleHeading.editActivity  =Rediger
-titleHeading.exportPortfolio  =Eksporter mappe
-heading.group  =Gruppe {0}:
 heading.totalLearners  =Antall studenter
 heading.table.group  =Gruppe
 heading.totalLearnersInGroup  =Totalt antall studenter i gruppen:
@@ -120,6 +103,8 @@ advanced.reflectOnActivity  =Legg til en notatbok p\u00e5 slutten av Google kart
 button.continue  =Fortsett
 button.placeMarker  =Plasser mark\u00f8r
 label.nogroups  =Finner ingen grupper for denne aktiviteten.
+button.submit  =Avslutt
+label.activity.completion  =Aktivitetsslutt
 
 
-#======= End labels: Exported 114 labels for no NO =====
+#======= End labels: Exported 99 labels for no NO =====
