--- a/lams_tool_images/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:30:18 CST 2017 
  
 #=================== labels for Image Gallery =================# 
 
@@ -12,8 +12,6 @@ label.authoring.basic.instruction  =Instruksjoner
 activity.helptext  =Last opp dine bilder for \u00e5 dele det med andre
 tool.display.name  =Verkt\u00f8y for billedgalleri
 tool.description  =Verkt\u00f8y for \u00e5 dele bilder med andre
-errorPage.title  =Feilmeldings side
-errorPage.heading  =Fei oppst\u00e5 under behandlingen av din foresp\u00f8rsel
 label.authoring.heading  =Billded galleri -godkjenning
 label.author.title  =Billded galleri -godkjenning
 label.authoring.heading.basic  =Grunnlag
@@ -25,7 +23,7 @@ label.authoring.basic.add.images  =Legg til bilder
 label.authoring.basic.add.multiple.images  =Legg til flere bilder
 label.authoring.basic.upload.multiple.images  =Last opp flere bilder
 label.authoring.basic.upload.single.image  =Last opp et enkelt billde
-label.authoring.basic.image.list  =Billde liste
+label.authoring.basic.image.list  =Bilder
 label.authoring.basic.resource.edit  =Rediger
 label.authoring.basic.resource.delete  =Slett
 label.authoring.advanced.reflectOnActivity  =Legg til en notatbok til sist i bilde galleriet med f\u00f8lgende informasjon:
@@ -40,71 +38,44 @@ label.authoring.advance.allow.learner.ratings.or.vote  =Kobl til tilbakemelding
 label.authoring.advance.allow.learner.vote  =Tillat studentene \u00e5 velge favorittbilder
 label.authoring.advance.allow.learner.rank  =Tillat studente \u00e5 rangere bildene
 label.authoring.cancel.button  =Angre
-label.authoring.up  =Flytt opp
-label.authoring.down  =Flytt ned
+label.authoring.up  =Opp
+label.authoring.down  =Ned
 label.authoring.image  =Bilde
-authoring.exception  =Det er et problem med forfatter siden til bilde galleriet, \u00e5rsaken er {0}
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 label.learning.add.new.image  =Legg til nytt bilde
 label.learning.title  =Billedgalleri for studenter
 label.learning.heading  =Billedgalleri
 label.check.for.new  =Kontroller om det er noe nytt
-label.suggest.new  =Foresl\u00e5 en ny
-label.learning.ratings  =Vurdering
-label.learning.average.rating  =Gjennomsnitt vurdering
 label.learning.vote.here  =Veld som favoritt
 label.learning.unvote  =Fjern som favoritt
-label.learning.add.comment  =Legg til kommentar
-label.learning.post  =Send
-label.learning.by  =Av
-label.learning.comments  =Kommentar
 label.learning.added.by  =Lagt til av:
-label.learning.open.original.size  =\u00c5pne i orginal st\u00f8rrelse
 monitoring.tab.summary  =Status
 monitoring.tab.statistics  =Statestikk
 monitoring.tab.edit.activity  =Rediger
 monitoring.label.group  =Gruppe
-monitoring.summary.note  =Merk: Antall studenter er lik antall studenter som har sett ressursene.
 monitoring.label.title  =Tittel
 monitoring.label.suggest  =Foresl\u00e5tt av
 monitoring.label.hide  =Skjul
 monitoring.label.show  =Vis
-monitoring.label.user.loginname  =Logg inn navn
-monitoring.label.user.name  =Navn
 label.monitoring.title  =Bilde galleri-kontrollmodus
-label.monitoring.number.rated  =Antall som er vurdert
 label.monitoring.average.rating  =Gjennomsnitt vurdering
 label.monitoring.number.votes  =Antall favoritter
 label.monitoring.by  =Av
 label.monitoring.edit.activity.edit  =Rediger
-label.monitoring.summary.overall.summary  =Generell status
 label.monitoring.summary.title.reflection  =Skriv notat
 label.monitoring.summary.add.new.image  =Legg til nytt bilde
 label.monitoring.imagesummary.image.summary  =Status for bilder
 label.monitoring.imagesummary.save  =Lagre
 label.monitoring.imagesummary.user  =Student
 label.monitoring.imagesummary.comments  =Kommentarer
-label.monitoring.imagesummary.rating  =Vurdering
 label.monitoring.imagesummary.voted.for.this.image  =Favoritter til dette bilde ?
 label.monitoring.imagesummary.image  =Bilde
-label.monitoring.updatecomment.update.comment  =Oppdater kommentar
-label.monitoring.updatecomment.comment  =Kommentar
 label.monitoring.updatecomment.save  =lagre
-label.monitoring.updatecomment.posted.by  =Sendt av
-label.monitoring.updatecomment.posted.on  =Sendt inn den
-label.export.uploaded.by  =Lasted opp av
-label.export.voted.for.this.image  =Favoritt bilde
-label.export.images  =Bilde
-message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke lengre redigeres
 output.desc.learner.number.of.images.uploaded  =Antall bilder som er lastet opp/bruker
 output.desc.learner.number.of.comments  =Antall kommentarer som er gitt/bruker
 output.desc.learner.number.of.votes  =Antall bilder som er valgt som favoritt/bruker
-export.title  =Eksport mappe for bilde galleri
-error.resource.item.desc.blank  =Kommentarer/instruksjoner kan ikke v\u00e6re tom
-error.resource.item.title.blank  =Tittel kan ikke v\u00e6re tom
 error.resource.image.not.alowed.format  =Tillatte fil formater: gif, png, pg
 error.resource.image.not.alowed.format.for  =En fei oppsto ved opplasting {0}. Tillatte fil formater: gif, png, pg
-error.resource.item.url.blank  =URL kan ikke v\u00e6re tom
 error.resource.item.file.blank  =Fil kan ikke v\u00e6re tom
 error.resource.image.comment.blank  =Kommentar kan ikke v\u00e6re tom
 error.upload.failed  =Mislykket opplasting av fil:{0}
@@ -117,11 +88,10 @@ error.msg.number.format.exception  =Nummer format handling oppst\u00e5r n\u00e5r
 error.msg.invaid.param.upload  =Ugyldig parameter handling oppst\u00e5r ved opplasting av fil
 error.msg.default.content.not.find  =Kunne ikke gjenskape standard innhold for dette verkt\u00f8yet
 warning.msg.authoring.do.you.want.to.delete  =Vil du virkelig slette dette bilde ?
-warning.msg.monitoring.do.you.want.to.delete  =Vil du virkelig slette denne kommentaren ?
 label.delete  =Slett
 label.view  =Se p\u00e5
 label.edit  =Rediger
-message.monitoring.summary.no.session  =Det er ikke tilgejengelig tid for sesjonen
+message.monitoring.summary.no.session  =Studentene har ikke kommet til  denne aktiviteten enda
 label.show  =Vis
 label.hide  =Skjul
 label.cancel  =Angre
@@ -134,19 +104,16 @@ title.reflection  =Skriv notat
 monitoring.user.reflection  =Skriv notat
 activity.title  =Bilde galleri
 label.authoring.save.button  =Lagre
-monitoring.label.access.time  =Tilgangs tid
 label.authoring.advance.lock.on.finished  =L\u00e5s n\u00e5r ferdig
 label.authoring.heading.advance  =Avansert
 label.continue  =Fortsett
 monitoring.user.fullname  =Navn
 button.close  =Lukk
-label.monitoring.heading.access  =Studentenes liste
 label.finished  =Neste aktivitet
 label.finish  =ferdig
 error.msg.repository  =Det oppsto en databasefeil ved opplasting
 message.alertContentEdit  =MERK: En eller fler studenter har p\u00e5begynt denne aktiviteten. Hvis du enderer innholdet vil studentene f\u00e5 tilgang til forskjellig innhold.
 message.activityLocked  =Foreleseren har satt opp denne aktivitien slik at du ikke f\u00e5r se eller dele flere ressurser f\u00f8r du har har gjort den ferdig.
-label.export.reflection  =Notatbok informasjon
 message.warnLockOnFinish  =Merk: Etter at du har klikket p\u00e5 \u201cNeste aktivitet\u201d, og du kommer tilbake til bilde galleriet, s\u00e5 vil du \u2019t ikke v\u00e6re istand til \u00e5 dele nye ressurser.
 label.on  =P\u00e5
 label.off  =Av
@@ -161,12 +128,30 @@ admin.maximum.dimensions.thumbnail.image  =Maksimum dimensjon for  ikon bilde
 admin.success  =Konfigurasjonen er lagret korrekt
 admin.return  =Returner for vedlikehold av LAMS
 admin.button.save  =Lagre
-label.default.user.name  =Foreleser
-event.imagesubmit.subject  =LAMS: Studenten har sendt inn et bilde til verkt\u00f8yet for bilde galleriet
 event.imagesubmit.body  =Studenten {0} har sendt inn et bilde gjennom bilde galleri verkt\u00f8yet.\n\n Denne meldingen blir sendt automatisk, pga systeminnstillingene.
-output.desc.uploaded.images.urls  =Billed Galleri: Bilder lastet opp av studenter
 label.learning.delete.image  =Slett bilde
 label.submit  =Avslutt
+label.posted.by  ={0} p\u00e5 {1}
+label.image.options  =Bilde alterntiver
+label.activity.completion  =Aktivitetsslutt
+errors.maxfilesize  =Bilde overstiger maksimal filst\u00f8rrelse {0}
+label.rating.criterias  =Vurderingskriteria
+label.add.criteria  =Legg tilkriteria
+label.rate.limits.reminder  =Begrensning for vurdering: Minimum {0} og maksimum {1}.
+label.rate.limits.topic.reminder  =Du har vurdert  {0} bilder allerede
+label.rate.limits.reminder.min  =Du m\u00e5 minst vurdere {0} bilder
+label.rate.limits.reminder.max  =Du kan kun vurdere opp til {0} bilder
+js.warning.max.min.limit  =Det er en feil med minimum og/eller maksimum antall vurderinger. Vennligst kontroller og pr\u00f8v igjen
+label.minimum  =Minimum.
+label.maximum  =:
+label.no.minimum  =Ingen minimum
+label.no.maximum  =Ingen maksimum
+label.minimum.number.words  =Minimum antall ord
+label.average.rating  =Gjennomsnittlig vurdering {0}/{1} stemmer
+label.your.rating  =Din vurdering {0}, gjennomsnittlig vurdering {1}/{2} stemmer
+label.comment.textarea.tip  =Skriv kommentaren din her ogclikk p\u00e5 den gr\u00f8nne krysset
+warning.minimum.number.words  =Det m\u00e5 v\u00e6re et minimum antall ord p\u00e5 {0} i kommentaren
+label.upload.info  =Opplastet filst\u00f8rrelse kan ikke v\u00e6re st\u00f8rre enn {0}
 
 
-#======= End labels: Exported 161 labels for no NO =====
+#======= End labels: Exported 146 labels for no NO =====
