--- a/lams_tool_imscc/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_imscc/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = imscc
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 23:00:59 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:32:32 CST 2017 
  
 #=================== labels for IMS Common Cartridge =================# 
 
@@ -29,7 +29,7 @@ warning.msg.authoring.do.you.want.to.delete  =\u0398\u03ad\u03bb\u03b5\u03c4\u03
 export.label.no.basic.lti  =\u0394\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03b4\u03b9\u03b1\u03b8\u03ad\u03c3\u03b9\u03bc\u03b1 \u03b2\u03b1\u03c3\u03b9\u03ba\u03ac \u03b5\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03b1 LTI \u03bc\u03b7 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7\u03c2
 activity.description  =\u0394\u03b9\u03b1\u03bc\u03bf\u03af\u03c1\u03b1\u03b1\u03c3\u03b7 \u03c0\u03cc\u03c1\u03c9\u03bd \u03bc\u03b5 \u03ac\u03bb\u03bb\u03bf\u03c5\u03c2.
 activity.helptext  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03c4\u03c9\u03bd \u03c0\u03cc\u03c1\u03c9\u03bd \u03c3\u03bf\u03c5 \u03b3\u03b9\u03b1 \u03b4\u03b9\u03b1\u03bc\u03bf\u03af\u03c1\u03b1\u03b1\u03c3\u03b7 \u03bc\u03b5 \u03ac\u03bb\u03bb\u03bf\u03c5\u03c2.
-activity.title  =\u039a\u03bf\u03b9\u03bd\u03cc\u03c2 \u03a0\u03c1\u03bf\u03c3\u03b1\u03c1\u03bc\u03bf\u03b3\u03ad\u03b1\u03c2(Common Cartridge)
+activity.title  =\u039a\u03bf\u03b9\u03bd\u03cc\u03c2 \u03a0\u03c1\u03bf\u03c3\u03b1\u03c1\u03bc\u03bf\u03b3\u03ad\u03b1\u03c2
 appName  =\u039a\u03bf\u03b9\u03bd\u03cc\u03c2 \u03a0\u03c1\u03bf\u03c3\u03b1\u03c1\u03bc\u03bf\u03b3\u03ad\u03b1\u03c2
 authoring.msg.cancel.save  =\u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03ba\u03bb\u03b5\u03af\u03c3\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03c0\u03b1\u03c1\u03ac\u03b8\u03c5\u03c1\u03bf \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7;
 button.add  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7
@@ -78,7 +78,7 @@ label.authoring.heading.advance.desc  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03b
 label.authoring.heading.basic  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ac
 label.authoring.heading.basic.desc  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ad\u03c2 \u03c0\u03bb\u03b7\u03c1\u03bf\u03c6\u03bf\u03c1\u03af\u03b5\u03c2 \u03b5\u03b9\u03c3\u03cc\u03b4\u03bf\u03c5 \u03b3\u03b9\u03b1 \u03c4\u03bf\u03bd \u03ba\u03bf\u03b9\u03bd\u03cc \u03c0\u03c1\u03bf\u03c3\u03b1\u03c1\u03bc\u03bf\u03b3\u03ad\u03b1
 label.authoring.save.button  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
-label.author.title  =
+label.author.title  =\u039a\u03bf\u03b9\u03bd\u03cc\u03c2 \u03a0\u03c1\u03bf\u03c3\u03b1\u03c1\u03bc\u03bf\u03b3\u03ad\u03b1\u03c2
 label.cancel  =\u0391\u03ba\u03cd\u03c1\u03c9\u03c3\u03b7
 label.completed  =\u039f\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03b8\u03b7\u03ba\u03b5
 label.continue  =\u03a3\u03c5\u03bd\u03b5\u03c7\u03af\u03c3\u03c4\u03b5
@@ -88,7 +88,7 @@ label.finish  =\u039f\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03b8\u03b7\u03b
 label.finished  =\u0395\u03c0\u03cc\u03bc\u03b5\u03bd\u03b7 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
 label.hide  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7
 label.learning.minimum.review  =\u0398\u03b1 \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b4\u03b5\u03af\u03c4\u03b5 \u03c4\u03bf\u03c5\u03bb\u03ac\u03c7\u03b9\u03c3\u03c4\u03bf\u03bd {0} \u03c4\u03c9\u03bd \u03c0\u03cc\u03c1\u03c9\u03bd.
-label.learning.title  =\u039c\u03ac\u03b8\u03b7\u03c3\u03b7\u03c2 \u039a\u03bf\u03b9\u03bd\u03ae\u03c2 \u03a0\u03c1\u03bf\u03c3\u03b1\u03c1\u03bc\u03bf\u03b3\u03ae\u03c2
+label.learning.title  =\u039c\u03ac\u03b8\u03b7\u03c3\u03b7 \u039a\u03bf\u03b9\u03bd\u03bf\u03cd \u03a0\u03c1\u03bf\u03c3\u03b1\u03c1\u03bc\u03bf\u03b3\u03ad\u03b1
 label.monitoring.edit.activity.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
 label.monitoring.heading.access  =\u039a\u03b1\u03c4\u03ac\u03bb\u03bf\u03b3\u03bf\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
 label.off  =\u0391\u03c0\u03b5\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7
