--- a/lams_tool_imscc/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_imscc/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = imscc
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:32:32 CST 2017 
  
 #=================== labels for IMS Common Cartridge =================# 
 
@@ -12,7 +12,7 @@ label.authoring.basic.upload.common.cartridge  =Last opp Innholdspakke
 label.authoring.basic.add.basiclti.tool  =Legg til Grunnleggende LTI verkt\u00f8y
 admin.button.save  =Lagre
 admin.expose.user.name  =Vis brukernavn i Grunnleggende LTI verkt\u00f8y
-admin.expose.user.email  =Vis brukernavn i Grunnleggende LTI verkt\u00f8y
+admin.expose.user.email  =Vis brukers e-post i Grunnleggende LTI verkt\u00f8y
 admin.page.title  =Grunnleggende LTI oppsett
 admin.return  =G\u00e5 tilbake til LAMS vedlikehold
 admin.success  =Konfigurasjonen er lagret korrekt.
@@ -31,7 +31,6 @@ activity.description  =Del ressurser med andre.
 activity.helptext  =Last opp ressurser du deler med andre.
 activity.title  =Innholdspakke
 appName  =Innholdspakke
-authoring.exception  =Det er et problem med delte ressursers foreleser side, \u00e5rsaken er {0}
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 button.add  =Legg til
 button.cancel  =Avbryt
@@ -40,149 +39,81 @@ button.edit  =Rediger
 button.try.again  =Fors\u00f8k igjen
 button.upload  =Last opp
 define.later.message  =Vent til at foreleseren har ferdigstilt innholdet for denne aktiviteten.
-error.attachment.executable  =Den opplastede filen er kj\u00f8rbar, vennligst zip den f\u00f8r opplasting.
-error.inputFileTooLarge  =In-put fil er for stor !
 error.msg.default.content.not.find  =Kunne ikke hente ut standard data for dette verkt\u00f8yet.
 error.msg.file.not.found  =Fil ikke funnet - oppst\u00e5r n\u00e5r du laster opp filen.
-error.msg.ims.application  =ImscpApplicationException oppst\u00e5r ved opplasting av ressurs fil.
-error.msg.ims.package  =Ugyldig IMS CP format.
-error.msg.invaid.param.upload  =InvalidParameterException oppsto under fors\u00f8k p\u00e5 \u00e5 laste opp fil.
 error.msg.io.exception  =IOException oppst\u00e5r n\u00e5r du laster opp filen.
-error.msg.repository  =En database feil oppsto under opplasting.
-error.msg.upload.file.not.found  =Kunne ikke laste opp fil {0}.
-error.msg.website.no.initial.file  =Websidens zip kan ikke finne initiell fil (index.htm/html or default.htm/html).
 error.msg.zip.file.exception  =Kan ikke h\u00e5ndtere zip filer ved opplasting
-errorPage.heading  =Noen feil oppst\u00e5r under behandling av foresp\u00f8rselen
-errorPage.title  =Side for feilmelding
 error.planner.file.blank  =I ressursen {0}  kan fil ikke v\u00e6re tom.
 error.planner.no.resource.save  =Det m\u00e5 minst v\u00e6re en ressurs for \u00e5 kunne lagre
 error.planner.url.blank  =I ressursen {0}  kan URL ikke v\u00e6re tom.
-error.reflection.emtpy  =Gi inn en notatbok tekst
 error.resource.item.desc.blank  =Kommentar/instruksjon kan ikke v\u00e6re tom.
 error.resource.item.file.blank  =Filnavn kan ikke v\u00e6re tomt
 error.resource.item.invalid.url  =Ugyldig URL format.
 error.resource.item.title.blank  =Tittel kan ikke v\u00e6re tom
 error.resource.item.url.blank  =URL kan ikke v\u00e6re tom
-errors.maxfilesize  =Filen som lastes opp har overskredet maksimum filst\u00f8rrelse p\u00e5 {0} bytes
-error.title.empty  =Tittel kan ikke v\u00e6re tom.
 error.upload.failed  =Mislykket opplasting: {0}
-error.uploading  =Feil ved opplasting
-error.valueReqd  =Du m\u00e5 gi en verdi
-event.assigment.submit.body  =Studenten {0} har sendt inn en oppgave i et Innholdspakke verkt\u00f8y.\n\n Denne meldingen er sendt automatisk pga systeminnstillingene.
-event.assigment.submit.subject  =LAMS: En student har sendt inn en oppgave i et Innholdspakke verkt\u00f8y
-export.init.resource  =Start ressurser
-export.label.no.learning.object  =Ingen off-line pakke er tilgjengelig
-export.label.resource  =Ressurs
-export.title  =Eksportmappe for Innholdspakke
-label.authoring.advance.allow.learner.add.files  =Tillat studentene \u00e5 legge til filer
-label.authoring.advance.allow.learner.add.urls  =Tillat studentene \u00e5 legge til URL
-label.authoring.advanced.notify.onassigmentsubmit  =Meld til kontroll-foreleser n\u00e5r studentene har sendt inn en ressurs
 label.authoring.advanced.reflectOnActivity  =Legg til en notatbok p\u00e5 slutten av en Innholdspakke og med f\u00f8lgende instruksjoner:
 label.authoring.advance.lock.on.finished  =L\u00e5s n\u00e5r du er ferdig
 label.authoring.advance.mini.number.resources.view  =Minimum ressurser som m\u00e5 ses
 label.authoring.advance.run.content.auto  =Kj\u00f8r innholdet automatisk (kun mulig dersom det bare er en ressurs)
 label.authoring.basic.add.file  =Legg til Innholdspakke
-label.authoring.basic.add.learning.object  =Legg til IMS innholdspakke
 label.authoring.basic.add.url  =Legg til Grunnleggende LTI
-label.authoring.basic.add.website  =Legg til zip Webside
 label.authoring.basic.instruction  =Instruksjoner
-label.authoring.basic.resource.add.instruction  =Legg til instruksjon
 label.authoring.basic.resource.delete  =Slett
-label.authoring.basic.resource.description.input  =Beskrivelse
 label.authoring.basic.resource.edit  =Rediger
 label.authoring.basic.resource.file  =Fil
-label.authoring.basic.resource.file.input  =Fil
 label.authoring.basic.resource.instructions  =Instruksjoner
 label.authoring.basic.resource.learning.object  =IMS CP
 label.authoring.basic.resource.list.title  =Ressurs liste
 label.authoring.basic.resource.preview  =Forh\u00e5ndsvis
 label.authoring.basic.resource.title.input  =Tittel
 label.authoring.basic.resource.url  =Grunnleggende LTI
-label.authoring.basic.resource.url.input  =URL
 label.authoring.basic.resource.verify.url  =Se p\u00e5
 label.authoring.basic.resource.website  =Web side
-label.authoring.basic.resource.zip.file.input  =Zip fil:
 label.authoring.basic.title  =Tittel
 label.authoring.cancel.button  =Avbryt
-label.authoring.choosefile.button  =Velg fil
 label.authoring.heading  =Forfatter for Innholdspakke
 label.authoring.heading.advance  =Avansert
 label.authoring.heading.advance.desc  =Legg til avanserte tillegg for Innholdspakke
 label.authoring.heading.basic  =grunnleggende
 label.authoring.heading.basic.desc  =Grunnleggende informasjon for Innholdspakke
-label.authoring.heading.instructions  =Instruksjoner
-label.authoring.heading.instructions.desc  =Legg til on-line og off-line instruksjoner
-label.authoring.offline.delete  =Slett
-label.authoring.offline.file  =Last opp off-line fil
-label.authoring.offline.filelist  =Off-line filliste
-label.authoring.offline.instruction  =Off-line instruksjoner
-label.authoring.online.delete  =Slett
-label.authoring.online.file  =Last opp on-line fil
-label.authoring.online.filelist  =On-line filliste
-label.authoring.online.instruction  =On-line instruksjoner
 label.authoring.save.button  =Lagre
-label.authoring.upload.offline.button  =Last opp Off-line
-label.authoring.upload.online.button  =Last opp ON-line
 label.author.title  =Innholdspakke
 label.cancel  =Angre
-label.check.for.new  =Kontroller om det er nye
 label.completed  =Ferdig
 label.continue  =Fortsett
 label.delete  =Slett
-label.description  =Beskrivelse:
-label.down  =Flytt nedover
-label.download  =Last ned
 label.edit  =Rediger
-label.export.reflection  =Notatbok tilgang
 label.finish  =Avsluttet
 label.finished  =Neste aktivitet
 label.hide  =Skjul
-label.learning.comment.or.instruction  =Kommentar/instruksjon
-label.learning.heading  =Innholdspakke
 label.learning.minimum.review  =Du m\u00e5 minimum se p\u00e5 {0} resurser.
-label.learning.new.file  =Informasjon om nye filer:
-label.learning.new.url  =Informasjon om ny URL:
 label.learning.title  =Studenter for Innholdspakke
-label.monitoring.edit.activity.cancel  =Avbryt
 label.monitoring.edit.activity.edit  =Rediger
-label.monitoring.edit.activity.update  =Oppdater
 label.monitoring.heading.access  =Studentenes liste
-label.next.instruction  =Neste instruksjon
 label.off  =Av
 label.on  =P\u00e5
-label.open  =\u00c5pne
 label.resoruce.to.review  =Ressurser som skal ses p\u00e5
 label.save  =Lagre
 label.show  =Vis
-label.suggest.new  =Foresl\u00e5 en ny
 label.up  =Flytt opp
 label.view  =Se p\u00e5
 lable.learning.minimum.view.number.less  =Du m\u00e5 minimum se p\u00e5 ytligere {0} resurser.
 message.activityLocked  =Foreleseren har definert denne aktiviteten slik at du ikke f\u00e5r se eller dele flere ressurser n\u00e5r du er ferdig.
 message.alertContentEdit  =Merk: En eller flere studenter har p\u00e5begynt denne aktiviteten. Endrer du innholdet s\u00e5 vil studentene f\u00e5 forskjellig innhold.
-message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke redigeres lengere
 message.monitoring.summary.no.resource.for.group  =Det er ingen ressurser tilgjengelig for denne gruppen
 message.monitoring.summary.no.session  =Det er ingen sesjoner tilgjengelig
-message.msg.maxFileSize  =Maks 250K
 message.no.reflection.available  =Notatbok er ikke tilgjengelig
-message.step.of  =Steg {0} av {1}
 message.warnLockOnFinish  =Merk: Etter at du har klikket p\u00e5 "Neste Aktivitet" og d kommer tilbake til Innholdspakken, s\u00e5 vil du ikke kunne del nye ressurser.
 monitoring.label.access.time  =Tilgangstid
-monitoring.label.attachments  =Vedlegg
 monitoring.label.group  =Gruppe
-monitoring.label.hidden  =Skjult
 monitoring.label.hide  =Gjemme
-monitoring.label.instructions  =Instruksjoner
 monitoring.label.number.learners  =Antall studenter
 monitoring.label.show  =Vis
-monitoring.label.suggest  =Foresl\u00e5tt av
 monitoring.label.title  =Tittel
 monitoring.label.type  =Type
-monitoring.label.user.loginname  =Logg inn navn
 monitoring.label.user.name  =Navn
-monitoring.summary.note  =Merk: Antall studenter er antall studenter som har sett p\u00e5 denne ressursen.
 monitoring.tab.edit.activity  =rediger aktivitet
-monitoring.tab.instructions  =Instruksjon
 monitoring.tab.statistics  =Statistikk
 monitoring.tab.summary  =Oppsummering
 monitoring.user.fullname  =Navn
@@ -190,13 +121,18 @@ monitoring.user.reflection  =Notatbok tilgang
 monitor.summary.td.addNotebook  =Legg til en notatblokk p\u00e5 slutten av Innholdspakken
 monitor.summary.td.notebookInstructions  =Notatbok instruksjoner
 monitor.summary.th.advancedSettings  =Avanserte innstillinger
-msg.no.instruction  =Ingen instruksjoner er tilgjengelig
 open.in.new.window  =\u00c5pne URL i pop-up meny
 page.title.monitoring.view.reflection  =Se p\u00e5 notatbok tekst
-run.offline.message  =Denne aktiviteten utf\u00f8res ikke med hjelp av data. Kontakt foreleseren.
 title.reflection  =Notatbok tilgang
 tool.description  =Verkt\u00f8y for \u00e5 dele ressurser
 tool.display.name  =Vekt\u00f8y for Innholdspakke
+label.submit  =Avslutt
+label.monitoring.heading  =Kontroll av innholdspakke
+label.resource.options  =Ressurs alternativer
+label.activity.completion  =Aktivitetsslutt
+errors.maxfilesize  =Opplastet fil overskrider maksimum filst\u00f8rrelse:{0}
+error.attachment.executable  =Opplastet fil er kj\u00f8rbar
+label.upload.info  =Opplastet fil m\u00e5 ikke v\u00e6re kj\u00f8rbar og ikke overskride filst\u00f8rrelse:{0}
 
 
-#======= End labels: Exported 191 labels for no NO =====
+#======= End labels: Exported 127 labels for no NO =====
