--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:41:32 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:18:15 CST 2017 
  
 #=================== labels for Q&A =================# 
 
@@ -14,7 +14,7 @@ tool.description  =\u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u03b3\u03b9
 label.tool.shortname  =\u0395 & \u0391
 label.authoring  =\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u0395 & \u0391
 label.monitoring  =\u0395\u03c0\u03bf\u03c0\u03c4\u03b5\u03af\u03b1 \u0395 & \u0391
-label.authoring.qa  =\u0395\u03c1\u03c9\u03c4\u03ae\u03c3\u03b7(\u03b5\u03b9\u03c2) & \u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b7(\u03b5\u03b9\u03c2)
+label.authoring.qa  =\u03a3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae \u0395\u03c1\u03c9\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd & \u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03c9\u03bd
 label.basic  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ac
 label.advanced  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b1
 label.authoring.title  =\u03a4\u03af\u03c4\u03bb\u03bf\u03c2
@@ -46,7 +46,7 @@ label.delete  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae
 feedback  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c3\u03c5\u03bc\u03c0\u03bb\u03b7\u03c1\u03ce\u03c3\u03c4\u03b5 \u03c4\u03bf \u03b1\u03ba\u03cc\u03bb\u03bf\u03c5\u03b8\u03bf \u03b8\u03ad\u03bc\u03b1 \u03c0\u03c1\u03b9\u03bd \u03c4\u03b7\u03bd \u03c5\u03c0\u03bf\u03b2\u03bf\u03bb\u03ae
 submit.successful  =\u03a4\u03bf \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf \u03ad\u03c7\u03b5\u03b9 \u03b4\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03b7\u03b8\u03b5\u03af \u03b5\u03c0\u03b9\u03c4\u03c5\u03c7\u03ce\u03c2.
 submit.unSuccessful  =\u03a0\u03c1\u03bf\u03c3\u03bf\u03c7\u03ae:. \u0395\u03bd\u03b1 \u03bb\u03ac\u03b8\u03bf\u03c2 \u03ad\u03c7\u03b5\u03b9 \u03b5\u03bc\u03c6\u03b1\u03bd\u03b9\u03c3\u03c4\u03b5\u03af \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03bf\u03bc\u03ad\u03bd\u03bf\u03c5.
-label.learning.qa  =\u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 \u03b3\u03b9\u03b1 \u0395@\u0391
+label.learning.qa  =\u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2 \u03b3\u03b9\u03b1 \u0395&\u0391
 label.question  =\u0395\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7
 label.answers  =\u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2
 label.answer  =\u0391\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7
@@ -249,7 +249,7 @@ label.search  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7...
 label.posted.by  ={0} \u03c3\u03b5 {1}
 label.noredo.enabled  =\u03a3\u03b7\u03bc\u03b5\u03af\u03c9\u03c3\u03b7: \u03bc\u03b5\u03c4\u03ac \u03c4\u03b7\u03bd \u03b1\u03c0\u03ac\u03bd\u03c4\u03b7\u03c3\u03b7 \u03c3\u03c4\u03b1 \u03b5\u03c1\u03c9\u03c4\u03ae\u03bc\u03b1\u03c4\u03b1, \u03b4\u03b5\u03bd \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9 \u03ba\u03b1\u03bc\u03af\u03b1 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ae.
 label.select.leader  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03a3\u03c5\u03bd\u03c4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae
-label.question.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b5\u03c1\u03c9\u03c4\u03ae\u03c3\u03b7\u03c2
+label.question.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7\u03c2
 label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 label.notifications  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2
 label.words.required  =\u039b\u03ad\u03be\u03b5\u03b9\u03c2 \u03c0\u03bf\u03c5 \u03b1\u03c0\u03b1\u03b9\u03c4\u03bf\u03cd\u03bd\u03c4\u03b1\u03b9
