--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:18:14 CST 2017 
  
 #=================== labels for Q&A =================# 
 
@@ -22,60 +22,42 @@ label.authoring.instructions  =Informasjon
 label.summary  =Status
 label.editActivity  =Rediger
 label.stats  =Status
-label.authoring.qa.basic  =Vennligst definer sp\u00f8rsm\u00e5lene.
 label.advanced.definitions  =Avanserte definisjoner
-radiobox.synchInMonitor  =Synkroniser i kontroll modus
 radiobox.usernameVisible  =Vis studentens navn sammen med svar
 radiobox.questionsSequenced  =Ett sp\u00f8rsm\u00e5l pr. side
-label.report.title  =Rapport tittel
 label.monitoringReport.title  =Kontrollrapport tittel
-label.offlineInstructions  =Off-line informasjon
-label.onlineInstructions  =On-line informasjon
-label.exportPortfolio.simple  =Eksporter mappe
-label.exportPortfolio  =S&S eksport mappe
-instructions.type.online  =On-line
-instructions.type.offline  =Off-line
 link.view  =Vis
 link.download  =Last ned
 link.delete  =Slett
 button.basic  =Grunnlag
-button.uploadFile  =Oppdater pakke
 button.preview  =Forh\u00e5ndsvisning
 button.advanced  =Avansert
-button.instructions  =Informasjon
 button.done  =Ferdig
 tool.icon.name  =S&S
 button.submitAllContent  =Send inn
 button.getNextQuestion  =Neste
 button.getPreviousQuestion  =Forrige
 label.question1  =Sp\u00f8rsm\u00e5l 1
-radiobox.defineLater  =Definer i kontrollmodus
 radiobox.showFeedback  =Vis tilbakemelding
 label.upload  =Last opp
-label.uploadedOfflineFiles  =Opplastete  off-line filer:
-label.uploadedOnlineFiles  =Opplastete on-line filer:
 label.type  =M\u00f8nster
 label.view  =Vis
 label.delete  =Slett
 feedback  =Vennligst besvar de f\u00f8lgende moment f\u00f8r innsendelse.
-error.defaultquestion.empty  =Det f\u00f8rste sp\u00f8rsm\u00e5let kan ikke v\u00e6re tomt.
 submit.successful  =Innholdet er lagret korrekt.
 submit.unSuccessful  =Advarsel. En feil oppsto ved lagring av innhold.
-error.content.inUse  =Det er ikke lov \u00e5 endre innholdet fordi en eller flere studenter har p\u00e5begynt denne aktiviteten.
 label.learning.qa  =Svar for S&S
 label.question  =Sp\u00f8rsm\u00e5l
 label.answers  =Svar:
 label.answer  =Svar:
 button.endLearning  =Neste aktivitet
-label.learning.user  =Bruker
+label.learning.user  =Student
 label.learning.attemptTime  =Dato/tid
-label.learning.timezone  =Tidssone
 label.learning.response  =Svar
 label.learning.report  =L\u00e6re rapport
 label.learning.viewOnly  =Foreg\u00e5ende svar rapport
 label.learner.progress  =Studentens fremdriftsrapport
 label.preview  =Forh\u00e5ndsvis studentens skjermbilde.
-label.openEditor  =\u00c5pne teksteditor
 label.user  =Bruker
 label.question.col  =Sp\u00f8rsm\u00e5l:
 label.response  =Svar
@@ -95,27 +77,13 @@ label.stats.totalLearners  =Total antall studenter:
 label.stats.allGroups  =Alle grupper:
 label.stats.totalAllGroups  =Totalt antall av alle studenter:
 error.defineLater  =Vennligst vent til at foreleseren har gjort ferdig innholdet for denne aktiviteten.
-error.authoringUser.notAvailable  =Verkt\u00f8y feil ! Kan ikke fortsette. Verkt\u00f8yaktiviteten krever en bruker id.
-error.noLearnerActivity  =Statusrapport er ikke tilgjengelig fordi ingen brukere har gjennomf\u00f8rt aktiviteten enda.
-error.questions.duplicate  =Vennligst endre dette: Sp\u00f8rsm\u00e5lene m\u00e5 v\u00e6re unike.
+error.noLearnerActivity  =Statusrapport er ikke tilgjengelig fordi ingen studenter har gjennomf\u00f8rt aktiviteten enda.
 count.total.user  =Totalt antall brukere:
 count.finished.user  =Antall ferdige brukere:
-label.topMark  =Topp karakter:
-label.avMark  =Gjennomsnitt karakter
-label.loMark  =Laveste karakterer:
-count.max.attempt  =Maksimal antall fors\u00f8k:
-error.monitorReportTitle  =Feltet " Kontrollrapport tittel (avansert)" m\u00e5 fylles inn.
-error.noStudentActivity  =Beklager, rapporten kan ikke lages. Ingen studenter har p\u00e5begynt denne aktiviteten enda.
-error.tab.contentId.required  =Beklager, skjermbildet er ikke tilgjengelig. Verkt\u00f8yaktiviteten krever en innholds id.
-error.contentrepository  =En feil har oppst\u00e5tt under lagring/sletting av instruksjons fil {0}. Filen er sansynligvis ikke lagret riktig.
-error.system.qa  =En system feil har oppst\u00e5tt. Vennligst kontakt teknisk hjelp. Feilen som skal rapporteres er: {0}
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 label.allResponses  =Se alle svar
 label.learning.forceFinish  =Du m\u00e5 avslutte denne aktiviteten n\u00e5.
 label.learning.yourAnswer  =Ditt svar:
-label.export.learner  =Mappe eksport for student
-label.export.teacher  =Mappe eksport for foreleser
-label.export  =Eksporter mappe
 label.show  =Vis
 label.response.hidden  =Skjult
 button.try.again  =Fors\u00f8k igjen
@@ -148,8 +116,6 @@ label.tip.deleteQuestion  =Slett sp\u00f8rsm\u00e5l
 label.tip.moveQuestionDown  =Flytt sp\u00f8rsm\u00e5let ned
 label.tip.moveQuestionUp  =Flytt sp\u00f8rsm\u00e5let opp
 questions.none.submitted  =Ingen  sp\u00f8rsm\u00e5l er lagt inn. Vennligst legg til minst ett sp\u00f8rsm\u00e5l.
-question.duplicate  =Vennligst rett f\u00f8lgende: Det er dupliserte sp\u00f8rsm\u00e5l.
-question.blank  =Vennligst rett f\u00f8lgende: Sp\u00f8rsm\u00e5ls teksten kan ikke v\u00e6re tom.
 count.finished.session  =Antallet i denne sesjonen:
 label.feedback.seq  =Antall sp\u00f8rsm\u00e5l til denne aktiviteten:
 label.feedback.combined  =Antall sp\u00f8rsm\u00e5l som er gitt i denne aktiviteten:
@@ -159,7 +125,6 @@ label.end.questions  =Slutten av sp\u00f8rsm\u00e5lene.
 label.lockWhenFinished  =L\u00e5ses n\u00e5r ferdig
 label.learner.answer  =Vis svar fra andre studenter
 label.show.names  =Vis navnene til de andre studentene
-errors.maxfilesize  =Filen som lastes opp overstiger maksimum tillatt filst\u00f8rrelse som er {0} bytes.
 warning.empty.answers  =Ett eller flere sp\u00f8rsm\u00e5l er ikke besvart. \u00d8nsker du \u00e5 fortsette uansett ?
 label.on  =P\u00c5
 label.off  =Av
@@ -167,8 +132,6 @@ monitor.summary.th.advancedSettings  =Avansert
 monitor.summary.td.addNotebook  =Legg til notatbok p\u00e5 slutten av sp\u00f8rsm\u00e5l og svar
 monitor.summary.td.notebookInstructions  =Notatbok informasjon
 label.conditions  =Betingelser
-label.authoring.heading.conditions.desc  =Vennligst legg til betingelser for sp\u00f8rsm\u00e5l og svar
-label.authoring.heading.conditions  =Betingelser
 label.authoring.conditions.add.condition  =Legg til betingelse
 label.authoring.conditions.list.title  =Betingelser
 label.authoring.conditions.order  =Rekkef\u00f8lge
@@ -192,7 +155,6 @@ textsearch.any.words  =har en eller fler av disse ord:
 textsearch.excluded.words  =har ingen av disse u\u00f8nskede ord:
 textsearch.questions  =S\u00f8k innen disse sp\u00f8rsm\u00e5l:
 pageTitle.admin  =Sp\u00f8rsm\u00e5l og svar oppsett
-admin.formError  =Det mangler verdier vennligst kontroller at alle felt er utfyllt.
 admin.enableWizard  =Koble til sp\u00f8rsm\u00e5l og Svar hjelper
 admin.success  =Konfigurasjonen er lagret korrekt.
 admin.return  =Returner for \u00e5 vedlikeholde LAMS
@@ -230,8 +192,8 @@ wizard.import.warn  =\u00d8nsker du \u00e5 importere en ny hjelper ? I s\u00e5 f
 wizard.import.error  =Import av hjelper var mislykket, kontroller at import formatet er i xml format.
 wizard.editQuestion  =Rediger sp\u00f8rsm\u00e5l
 wizard.editSkill  =Rediger trening
-label.allowRichEditor  =Tillat tekst editor
-label.required.desc  =Dette sp\u00f8rsm\u00e5let krever et svar
+label.allowRichEditor  =Tillat HTML editor
+label.required.desc  =Krever sp\u00f8rsm\u00e5let et svar ?
 label.required  =(P\u00e5krevet)
 error.required  =Du m\u00e5 svare p\u00e5 sp\u00f8rsm\u00e5l {0}
 label.learning.number.of.votes  ={0}/{1} stemmer
@@ -244,8 +206,8 @@ monitor.summary.set.restriction  =Definer begrensning
 monitor.summary.unset.restriction  =Fjern begrensning
 authoring.info.teacher.set.restriction  =Foreleseren har definert en begrensning fra {0}.
 monitor.summary.notification  =Melding
-monitor.summary.date.restriction.set  =Dato begrensning er definert
-monitor.summary.date.restriction.removed  =Dato begrensning er fjernet
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen er fjernet
 output.desc.all.answers.output.definition.qa  =Alle studentenes svar
 output.desc.questions.output.definition.qa  =Stillte sp\u00f8rsm\u00e5l
 label.sort.by.answer  =Sorter etter svar
@@ -260,6 +222,39 @@ label.group.leader  =Gruppe leder: {0}
 label.modify.users.response  =Endre p\u00e5 steudentens svar
 label.info.use.select.leader.outputs  =Gruppe leder opsjonen er koblet til
 label.votes  =stemmer
+label.notify.teachers.on.response.submit  =Varsle foreleser om studentenes svar
+label.user.has.answered.questions  ={0} har svart p\u00e5 f\u00f8lgende sp\u00f8rsm\u00e5l:
+label.allow.comments  =Tillat studentene \u00e5 kommentere svar
+label.comment  =Kommentar
+label.comment.textarea.tip  =mmenter her..
+label.rating.criterias  =Bed\u00f8mmingskriteria
+label.add.criteria  =Legg til kriteria
+label.your.rating  =Din vurdering er {0} Gjenomsnittlig vurdering er {1} ut ifra {2} avstemninger
+label.average.rating  =Gjennomsnittlig vurdering {0}/{1}avstemminger
+label.rate.limits.reminder  =Begrensing i vurderingene: Minimum {0} og Maksimum {1}
+label.rate.limits.topic.reminder  =Du har vurdert {0} svar allerede.
+label.rate.limits.reminder.min  =Du m\u00e5 vurdere minst {0} svar.
+label.rate.limits.reminder.max  =Du kn vurdere opp til {0} svar.
+js.warning.max.min.limit  =Det er en feil med minimum og/eller maksimum verdi for vurderinger. Vennligst kontroller og pr\u00f8v igjen
+label.minimum  =Minimum:
+label.maximum  =Maksimum:
+label.no.minimum  =Ingen minimum
+label.no.maximum  =Ingen maksimum
+label.minimum.number.words  =Minimum antall ord i et svar {0}
+label.comment.minimum.number.words  =Minimum antall ord i en kommentar {0}
+warning.minimum.number.words  =Det skal v\u00e6re et minimum antall ord i en kommentar: {0}. Til n\u00e5 har du benyttet {1} ord.
+warning.comment.blank  =Kommentarer kan ikke v\u00e6re tomt
+label.no.reedit.allowed  =Det er ikke tillatt med om-redigering
+label.search  =S\u00f8k...
+label.posted.by  ={0} p\u00e5 {1}
+label.noredo.enabled  =Merk: etter \u00e5 ha besvart disse sp\u00f8rsm\u00e5len er det ikke tillatt \u00e5 gj\u00f8re endringer.
+label.select.leader  =Velg leder
+label.question.options  =Sp\u00f8rsm\u00e5l alternativ
+label.activity.completion  =Aktivitetsslutt
+label.notifications  =Merknader
+label.words.required  =Ord m\u00e5 legges til
+label.other.options  =Flere innstillinger
+label.allow.review.other.responses  =Tillat \u00e5 se andre svar ?
 
 
-#======= End labels: Exported 254 labels for no NO =====
+#======= End labels: Exported 249 labels for no NO =====
