--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:19:03 CST 2017 
  
 #=================== labels for ShareResources =================# 
 
@@ -12,15 +12,11 @@ activity.helptext  =Oppdatering av dine ressurser for \u00e5 dele disse med andr
 tool.display.name  =Felles ressurser - verkt\u00f8y
 tool.description  =Verkt\u00f8y for \u00e5 dele ressurser
 appName  =Felles ressurser
-errorPage.title  =Feilmeldings side
-errorPage.heading  =En feil oppsto n\u00e5r foresp\u00f8relen ble behandlet.
-label.authoring.heading  =Felles ressurser
-label.author.title  =Godkjenn felles ressurser
+label.authoring.heading  =Del felles ressurser
+label.author.title  =Felles ressurser
 label.authoring.heading.basic  =Grunnlag
 label.authoring.heading.advance  =Avansert
-label.authoring.heading.instructions  =Informasjon
 label.authoring.heading.basic.desc  =Grunndata for felles ressurser
-label.authoring.heading.instructions.desc  =Vennligst angi  on-line og off-line informasjon
 label.authoring.heading.advance.desc  =Vennligst skriv inn avanserte altenativer for felles ressurser
 label.authoring.basic.title  =Tittel
 label.authoring.basic.instruction  =Informasjon
@@ -44,17 +40,6 @@ label.authoring.basic.resource.url.input  =URL
 label.authoring.basic.resource.file.input  =Fil
 label.authoring.basic.resource.description.input  =Beskrivelse
 label.authoring.basic.resource.zip.file.input  =Zip fil
-label.authoring.online.instruction  =On-line informasjon
-label.authoring.offline.instruction  =Off-line informasjon
-label.authoring.online.file  =Last opp on-line fil
-label.authoring.offline.file  =Last opp off-line fil
-label.authoring.choosefile.button  =Velg fil
-label.authoring.upload.online.button  =Last opp  on-line
-label.authoring.upload.offline.button  =Last opp  off-line
-label.authoring.online.filelist  =On-line filliste
-label.authoring.offline.filelist  =Off-line filliste
-label.authoring.online.delete  =Fjern
-label.authoring.offline.delete  =Fjern
 label.authoring.advance.lock.on.finished  =L\u00e5s n\u00e5r du er ferdig
 label.authoring.advance.run.content.auto  =Kj\u00f8r innholdet automatisk (Kun mulig dersom det er kun en ressurs)
 label.authoring.advance.mini.number.resources.view  =Minimum antall ressurser som m\u00e5 sees
@@ -74,8 +59,6 @@ error.upload.failed  =Opplasting av fil var mislykket: {0}
 error.msg.upload.file.not.found  =Kunne ikke finne opplastet fil {0}.
 error.msg.zip.file.exception  =Kunne ikke behandle zip fil ved opplasting.
 error.msg.file.not.found  =Filen er ikke funnet, avvik ved opplasting av fil.
-error.msg.ims.package  =Ugyldig IMS CP format.
-error.msg.ims.application  =ImscpApplication avvik oppst\u00e5r ved opplasting av ressurs fil.
 error.msg.website.no.initial.file  =Nettside zip kan ikke finne opprinnelig fil (indeks.htm/html eller standard.htm/html).
 error.msg.io.exception  =IO avvik oppst\u00e5r ved opplasting av fil.
 error.msg.invaid.param.upload  =Ugyldig parameter avvik oppst\u00e5r n\u00e5r fil fors\u00f8kes lastet opp.
@@ -95,7 +78,6 @@ label.learning.new.url  =Informasjon om ny URL:
 label.learning.comment.or.instruction  =Kommentar/informasjon
 monitoring.tab.summary  =Status
 monitoring.tab.statistics  =Statistikk
-monitoring.tab.instructions  =Informasjon
 monitoring.tab.edit.activity  =Rediger
 monitoring.label.group  =Gruppe
 monitoring.summary.note  =Merk: antall studenter er antallet studenter som har sett ressursene.
@@ -111,18 +93,13 @@ monitoring.label.hidden  =Skjult
 label.monitoring.edit.activity.cancel  =Angre
 label.monitoring.edit.activity.update  =Last opp
 label.monitoring.edit.activity.edit  =Redigere
-message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke lenger redigeres
 export.label.resource  =Ressurs
 export.label.no.learning.object  =Ingen off-line pakke er tilgjengelig
-export.title  =Eksport mappe for felles ressurser
 export.init.resource  =Opprinnelige ressurser
-errors.header  =:
-errors.footer  =:
 error.valueReqd  =Det er p\u00e5krevet med en verdi
-error.inputFileTooLarge  =Fil-st\u00f8rrelse er for stor
+error.inputFileTooLarge  =Input fil-st\u00f8rrelse er for stor
 error.uploading  =Feil ved opplasting
 error.title.empty  =Tittel kan ikke v\u00e6re tom
-message.msg.maxFileSize  =Maks 250 K
 label.open  =\u00c5pen
 label.delete  =Fjern
 label.download  =Last ned
@@ -139,9 +116,8 @@ label.show  =Vis
 label.hide  =Skjul
 label.save  =Lagre
 label.cancel  =Angre
-monitoring.label.access.time  =Tilgangs tid
+monitoring.label.access.time  =Started p\u00e5
 define.later.message  =Vennligst vent p\u00e5 at foreleseren skal gj\u00f8re ferdig innholdet for denne aktiviteten.
-run.offline.message  =Denne aktiviteten utf\u00f8res ikke ved hjelp av datamaskin. Kontakt foreleseren.
 message.monitoring.summary.no.resource.for.group  =Det er ikke ressurser tilgjengelig for denne gruppen.
 button.try.again  =Fors\u00f8k igjen
 open.in.new.window  =\u00c5pne URL i en pop-up
@@ -160,9 +136,8 @@ message.step.of  =Steg {0} av {1}
 message.no.reflection.available  =Notatboken er ikke tilgjengelig.
 button.edit  =Rediger
 errors.maxfilesize  =Filen som lastes opp overstiger maksimum tillatt filst\u00f8rrelse som er {0} bytes
-error.attachment.executable  =Filen som skal lastes opp er kj\u00f8rbar, vennligst komprimer den f\u00f8r den lastes opp.
+error.attachment.executable  =Filen som skal lastes opp kan ikke v\u00e6re kj\u00f8rbar.
 message.alertContentEdit  =Merk ! En eller flere studenter har p\u00e5begynt denne aktiviteten. Endrer du innholdet vil studentene mottta forskjellig innhold.
-monitoring.label.attachments  =Vedlegg
 message.warnLockOnFinish  =Merk: Etter at du har klikket p\u00e5 "Neste Aktivitet" og du deretter g\u00e5r tilbake  til Del Ressurser, s\u00e5 vil du ikke kunne dele eller se p\u00e5 nye ressurser.
 message.activityLocked  =Foreleseren har definert denne aktiviteten slik at du ikke  f\u00e5r tillatelse til \u00e5 se eller dele ressurser etter at du er ferdig med den.
 label.export.reflection  =Notater
@@ -178,11 +153,29 @@ event.assigment.submit.body  =Studenten {0} har innsendt en test gjennom verkt\u
 error.planner.no.resource.save  =Det m\u00e5 minst v\u00e6re en ressurs for \u00e5 kunne lagre
 error.planner.url.blank  =I ressursen {0} s\u00e5 kan ikke URL v\u00e6re tom.
 error.planner.file.blank  =I ressursen {0} s\u00e5 kan ikke fil v\u00e6re tom.
-label.authoring.up  =Flytt opp
-label.authoring.down  =Flytt ned
+label.authoring.up  =Opp
+label.authoring.down  =Ned
 monitoring.label.complete.time  =Ferdig den
 monitoring.label.time.taken  =Tidsforbruk
 output.desc.shared.items.output.definition.rsrc  =Del ressurser: Last opp URL og stier til filene
+label.submit  =Avslutt
+monitoring.label.actions  =Aksjoner
+monitoring.label.views  =Visninger
+label.monitoring.heading  =Kontrollmodus
+open.file.in.new.window  =\u00c5pne filen i et nytt vindu
+label.resource.options  =Ressurs alternativer
+label.activity.completion  =Aktivitetsslutt
+label.notifications  =Meldingger
+label.authoring.basic.resource.url.placeholder  =inkluder http:// eller https://
+label.authoring.advanced.notify.onfileupload  =Informer foreleseren n\u00e5r en student laster opp en fil
+event.file.upload  ={0} lastet opp en fil \"{1}\"
+label.upload.info  =Opplastet filkan ikke v\u00e6re kj\u00f8rbar og ikke overstige en filst\u00f8rrelse p\u00e5 {0}
+error.file.type.zip  =Filen m\u00e5 v\u00e6re en zip fil
+label.enable.rating  =Koble til rangering
+label.rating  =Rangering
+label.average.rating  =Gjennomsnittlig rangering {0}/{1} stemmer
+label.your.rating  =Din rangering {0},gjennomsnittlig rangering {1}/{2}stemmer
+del.confirmation  =Er du sikker p\u00e5 at du vil slette denne ressursen ?
 
 
-#======= End labels: Exported 177 labels for no NO =====
+#======= End labels: Exported 170 labels for no NO =====
