--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,19 +2,12 @@ appName = mindmap
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:31:32 CST 2017 
  
 #=================== labels for Mindmap =================# 
 
 appName  =emnekart
-error.contentrepository  =En feil oppsto ved lagring/sletting av instruksjonsfilen {0}. Filen er sansynligvis ikke lagret riktig.
-button.instructions  =Instruksjoner
-instructions.uploadOfflineInstr  =Off-line instruksjons fil
-instructions.uploadOnlineInstr  =On-line instruksjonsfil
-instructions.offlineInstructions  =Off-line instruksjoner:
-instructions.onlineInstructions  =On-line instrukasjoner:
 activity.helptext  =Emnekart for \u00e5 lage emnekart
-error.content.locked  =Innholdet er l\u00e5st fordi en eller fleer studenter benytter dette. Endring av innhold er derfor ikke tillatt.
 tool.display.name  =Emnekart
 tool.description  =Verkt\u00f8y for emnekart
 activity.title  =Emnekart
@@ -22,25 +15,13 @@ activity.description  =Verkt\u00f8y for emnekart
 pageTitle.authoring  =Emnekart godkjenning
 button.basic  =Grunnlag
 button.advanced  =Avansert
-button.upload  =Last opp
 label.authoring.basic.title  =Tittel:
 label.authoring.basic.content  =Innhold
 advanced.reflectOnActivity  =Legg til en notatblokk p\u00e5 slutten av emnekartet
 advanced.lockOnFinished  =L\u00e5s n\u00e5r du er ferdig
 advanced.multiUserMode  =Bruk fler-bruker modus
-instructions.type.online  =On-line
-instructions.type.offline  =Off-line
-label.filename  =Filnavn
-label.type  =Type
-label.attachments  =Vedlegg
-link.view  =Se p\u00e5
-link.download  =Last ned
-link.delete  =Slett
-message.updateSuccess  =Endringer er lagret
-message.unsavedChanges  =Siden inneholder endringer som ikke er lagret
 pageTitle.learning  =On-line emnekart
 message.defineLaterSet  =Vennligst vent til foreleseren har ferdigstilt innholdet for denne aktiviteten
-message.runOfflineSet  =Denne aktiviteten skal ikke utf\u00f8res ved datamaskin. Vennligst kontakt foreleser.
 pageTitle.monitoring  =Kontroll av emnekart
 button.summary  =Status
 button.editActivity  =Rediger
@@ -48,7 +29,6 @@ button.statistics  =Statistikk
 titleHeading.summary  =Status
 titleHeading.statistics  =Statistikk
 titleHeading.editActivity  =Rediger
-titleHeading.exportPortfolio  =Eksporter mappe
 heading.group  =Gruppe {0}
 heading.totalLearners  =Antall studenter {0}
 heading.totalLearnersInGroup  =Antall studenter i gruppen:
@@ -73,14 +53,6 @@ label.lastModified  =Sist endret
 label.notebookEntry  =Tilgang til notatblokk
 label.notebookInstructions  =Instruksjoner for notatblokk
 label.mindmapEntry  =Emnekart
-error.missingParam  =Kan ikke fortsette. {0} mangler
-error.exceedMaxFileSize  =Filen er for stor
-error.exception.NbApplication  =En intern feil er oppst\u00e5tt i emnekart verkt\u00f8yet. Hvis du rapporterer feilen, s\u00e5 rapporter {0}
-error.defineLater  =eklager, aktiviteten er enda ikke ferdig. Vennligst vent til foreleseren har ferdigstillt aktiviteten
-errors.maxfilesize  =Filen som lastes opp er st\u00f8rre en opplastingsbegrensningen som er {0} bytes.
-error.mandatoryField  ={0} feltet m\u00e5 fylles ut
-error.mark.invalid.number  ={0} feltet m\u00e5 inneholde en gyldig tallverdi. Desimaltall er ikke tillatt
-error.mark.invalid.decimal.number  ={0} feltet m\u00e5 inneholde et gyldig desimaltall.
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke dette vinduet uten \u00e5 lagre ?
 button.try.again  =Fors\u00f8k igjen
 message.learner.blank.input  =Du har ikke skrevet noe. Er du sikker p\u00e5 at dette er riktig ?
@@ -97,7 +69,6 @@ label.authoring.down  =Ned
 label.authoring.edit  =Rediger
 message.contentInUseSet  =Det er ikke tillatt \u00e5 endre p\u00e5 innholdet fordi en eller flere studenter har p\u00e5begynt denne aktiviteten
 message.alertContentEdit  =Merk: En eller flere studenter har p\u00e5begynt denne aktiviteten. Endrer du innholdet medf\u00f8rer det at studentene f\u00e5r tilgang til forskjelling innhold.
-message.enableJavaScript  =Koble til Javscript for at Emnekartet skal kunne lastes ned
 output.desc.number.of.nodes  =Antall ideer
 node.root.defaultName  =Hoved ide
 node.child1.defaultName  =Tilleggs ide 1
@@ -111,15 +82,21 @@ local.no  =Nei
 local.node_creator  =Opprette node
 label.planner.editing.advice  =R\u00e5d for redigering
 label.nogroups  =Finner ingen grupper for denne aktiviteten.
-monitor.summary.date.restriction  =Dato begrensning
+monitor.summary.date.restriction  =Frist
 monitor.summary.when.date.restriction.is.set  =Studentene kan ikke benytte denne aktiviteten etter den definerte tid.
 monitor.summary.after.date  =Dato/tid:
 monitor.summary.set.restriction  =Definer begrensning
 monitor.summary.unset.restriction  =Fjern begrensning
-authoring.info.teacher.set.restriction  =Foreleseren har definert en dato/tid begrensing fra {0}. Etter dette vil aktiviteten ikke v\u00e6re tilgjengelig.
+authoring.info.teacher.set.restriction  =Foreleseren har satt en frist fra {0}. Etter dette vil aktiviteten ikke v\u00e6re tilgjengelig.
 monitor.summary.notification  =Melding
-monitor.summary.date.restriction.set  =Dato begrensning er definert
-monitor.summary.date.restriction.removed  =Dato begrensing er fjernet
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen er fjernet
+button.submit  =Avslutt
+label.mindmap.options  =Mindmap alternativer
+label.activity.completion  =Aktivitetsslutt
+message.enableFlash  =Beklager, denne aktiviteten krever at Flash plugin er tilstede i nettleseren, men du kan alikevell fortsette med neste aktivitet
+message.enableJavaScript  =Beklager, du m\u00e5 koble til javascript i nettleseren for \u00e5 kunne benytte denne aktiviteten
+message.enableFlashAuthorMonitor  =Beklager, denne aktiviteten krever at Flash plugin er tilstede i nettleseren
 
 
-#======= End labels: Exported 114 labels for no NO =====
+#======= End labels: Exported 91 labels for no NO =====
