--- a/lams_tool_notebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:33:49 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:26:00 CST 2017 
  
 #=================== labels for Notebook =================# 
 
@@ -89,6 +89,7 @@ error.condition.name.blank  =Condition name can not be blank.
 error.condition.duplicated.name  =Duplicated name. Please choose unique one.
 error.condition  =Error creating condition.
 output.desc.text.search.output.definition.notebook  =Entry contains certain words
+text.search.output.definition.notebook.default.condition  =Entry contains word "LAMS"
 textsearch.heading  =Entry that...
 textsearch.all.words  =has all these words:
 textsearch.phrase  =has this exact wording or phrase:
