--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:25:56 CST 2017 
  
 #=================== labels for Notebook =================# 
 
@@ -14,30 +14,17 @@ activity.helptext  =Notatbok for notater og refleksjoner
 pageTitle.authoring  =Notatbok
 button.basic  =Grunnlag
 button.advanced  =Avansert
-button.instructions  =Informasjon
-button.upload  =Last opp
 label.authoring.basic.title  =Tittel:
 label.authoring.basic.content  =Innhold:
 label.authoring.basic.instructions  =Informasjon:
 advanced.lockOnFinished  =L\u00e5s n\u00e5r du er ferdig
 advanced.allowRichEditor  =Tillat tekst editor
-instructions.onlineInstructions  =On-line informasjon:
-instructions.offlineInstructions  =Off-line informasjon:
-instructions.uploadOnlineInstr  =On-line informasjonsfil:
-instructions.uploadOfflineInstr  =Off-line informasjonsfil:
-instructions.type.online  =On-line
-instructions.type.offline  =Off-line
 label.filename  =Filnavn
 label.type  =Type
-label.attachments  =Vedlegg
-link.view  =Se p\u00e5
-link.download  =Last ned
-link.delete  =Slett
 message.updateSuccess  =Endringer er lagret
 message.unsavedChanges  =Siden inneholder endringer som ikke er lagret
 pageTitle.learning  =On-line notatbok
 message.defineLaterSet  =Vennligst vent p\u00e5 at foreleseren har gjort ferdig innholdet for denne aktiviteten
-message.runOfflineSet  =Denne aktiviteten skal ikke utf\u00f8res ved datamaskinen. Kontakt foreleseren.
 pageTitle.monitoring  =Notatbok-kontroll modus
 button.summary  =Status
 button.editActivity  =Rediger
@@ -46,7 +33,6 @@ titleHeading.summary  =Status
 titleHeading.instructions  =Informasjon
 titleHeading.statistics  =Statistikk
 titleHeading.editActivity  =Rediger
-titleHeading.exportPortfolio  =Eksporter mappe
 heading.group  =Gruppe {0}:
 heading.totalLearners  =Antall studenter:
 heading.totalLearnersInGroup  =Antall studenter i gruppen:
@@ -89,7 +75,6 @@ label.off  =Av
 monitor.summary.th.advancedSettings  =Avansert
 button.conditions  =Betingelser
 textsearch.excluded.words  =har ingen av disse u\u00f8nskede ord:
-label.authoring.heading.instructions.desc  =Vennligst skriv betingelser
 label.authoring.heading.conditions  =Betingelser
 label.authoring.conditions.add.condition  =Legg til betingelse
 label.authoring.conditions.list.title  =Betingelser
@@ -116,9 +101,27 @@ monitor.summary.set.restriction  =Definer begrensning
 monitor.summary.unset.restriction  =Fjern begrensning
 authoring.info.teacher.set.restriction  =Foreleseren har definert en begrensning for denne aktiviteten fra og med {0}.
 monitor.summary.notification  =Melding
-monitor.summary.date.restriction.set  =Dato begrensning er definert
-monitor.summary.date.restriction.removed  =Dato begrensning er fjernet
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen er fjernet
 output.desc.all.users.entries.definition.notebook  =Hver students innlegg i notater
+button.submit  =Avslutt
+message.monitoring.summary.no.session  =Ingen sesjoner er tilgjengelig
+label.notify.learner  =Send e-post med kommentar til studenten
+event.teacher.comment.subject  =Foreleseren har lagt igjen en kommentar for \u00e5 kunne legges inn i din notatbok
+event.teacher.comment.body  =Kommentar: {0}
+label.click.to.edit  =Klikk for \u00e5 editere
+label.notebook.entries  =Notatbok tilgang
+label.user.name  =Navn
+label.comment  =Kommentar
+label.no.entry  =Ingen tilgang
+label.yes  =Ja
+label.no  =Nei
+label.reply.comment  =Foreleserens kommentar
+message.session.name  =Gruppe
+label.editing.options  =Editerings alternativ
+label.activity.completion  =Aktivitetsslutt
+basic.forceResponse  =Er det krevet svar ?
+message.learner.blank.alertforceResponse  =Svar er krevet
 
 
-#======= End labels: Exported 113 labels for no NO =====
+#======= End labels: Exported 116 labels for no NO =====
