--- a/lams_tool_pixlr/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_pixlr/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,20 +2,13 @@ appName = pixlr
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:30:02 CST 2017 
  
 #=================== labels for Pixlr Tool =================# 
 
 appName  =pixlr
-error.contentrepository  =En feil har oppst\u00e5tt under lagring/sletting av informasjons filen {0}. Filen er sansynligvis ikke lagret korrekt.
-button.instructions  =Instruksjoner
-instructions.uploadOfflineInstr  =Off-line instruksjons fil:
-instructions.uploadOnlineInstr  =On-line instruksjons fil:
-instructions.offlineInstructions  =Off -line instruksjoner
-instructions.onlineInstructions  =On-line instruksjoner
 activity.helptext  =Rediger bilder i Pixlr bilde redigerings verkt\u00f8y
 message.contentInUseSet  =Det er ikke tillatt \u00e5 endre innholdet fordi en eller flere studenter har startet \u00e5 denne akriviteten.
-error.content.locked  =Innholdet er l\u00e5st fordi det er i bruk av en eller flere studenter. Det er ikke tillatt \u00e5 endre innholdet.
 tool.display.name  =Pixlr
 tool.description  = Pixlr bilde redigerings verkt\u00f8y
 activity.title  =Pixlr
@@ -23,24 +16,15 @@ activity.description  =Pixlr bilde redigerings verkt\u00f8y
 pageTitle.authoring  =Pixlr godkjenning
 button.basic  =Grunnlag
 button.advanced  =Avansert
-button.upload  =Last opp
 label.authoring.basic.title  =Tittel:
 label.authoring.basic.content  =Innhold:
 advanced.lockOnFinished  =L\u00e5s n\u00e5r ferdig
 advanced.allowViewOthersImages  =Tillat studentene \u00e5 se andre studenters bilder
-instructions.type.online  =On-line
-instructions.type.offline  =Off-line
-label.filename  =Filnavn
-label.type  =Type
-label.attachments  =Vedlegg
-link.view  =Se p\u00e5
 link.download  =Last ned
-link.delete  =Slett
 message.updateSuccess  =Endringene er lagret
 message.unsavedChanges  =Siden inneholder endringer som ikke er lagret
 pageTitle.learning  =Pixlr bilde redigerings verkt\u00f8y
 message.defineLaterSet  =Vennligst vent til at foreleseren har ferdistillt innholdet for denne aktiviteten
-message.runOfflineSet  =Denne oppgaven utf\u00f8res ikke ved hjelp av datamaskin. Vennligst konferer foreleseren.
 pageTitle.monitoring  =Pixlr kontrollmodus
 button.summary  =Status
 button.editActivity  =Rediger
@@ -48,7 +32,6 @@ button.statistics  =Statistikk
 titleHeading.summary  =Status
 titleHeading.statistics  =Statistikk
 titleHeading.editActivity  =Rediger
-titleHeading.exportPortfolio  =Eksporter mappe
 heading.group  =Gruppe {0}
 heading.totalLearners  =Antall studenter:
 heading.totalLearnersInGroup  =Totalt antall studenter i gruppen:
@@ -68,12 +51,6 @@ label.cancel  =Angre
 label.created  =Opprettet
 label.lastModified  =Sist modifisert
 label.notebookEntry  =Skriv notat
-error.missingParam  =Kan ikke fortsette: {0} mangler.
-error.exceedMaxFileSize  =Fil st\u00f8rrelsen er for stor
-error.exception.NbApplication  =En intern feil har oppst\u00e5tt i Pixlr verkt\u00f8yet. Hvis du rapporterer feilen, s\u00e5 rapporter: {0}
-error.defineLater  =Beklager, denne aktiviteten er ikke ferdig enda. Vennligst vent til at foreleseren har ferdigstilt aktiviteten.
-errors.maxfilesize  =Opplastingsfilen har ovsrskredet maksimum filst\u00f8rrelse p\u00e5 {0} bytes.
-error.mandatoryField  ={0} feltet er p\u00e5krevet
 button.try.again  =Fors\u00f8k igjen
 button.finish  =Neste aktivitet
 message.alertContentEdit  =MERK: En eller flere studenter ha p\u00e5begynt denne aktiviteten. Endrer du innholdet vil studentene f\u00e5 tilgang til forskjellig innhold.
@@ -123,6 +100,12 @@ monitor.summary.td.addNotebook  =Legg til en notatblokk p\u00e5 slutten av Pixlr
 pageTitle.admin  =Pixlr administrasjon
 admin.return  =Returner for \u00e5 vedlikeholde LAMS
 output.desc.image.url.definition.pixlr  =Bildets URL fra Pixir
+button.submit  =Avslutt
+message.no.reflection.available  =Ingen notat fra notatbok er lagt til.
+label.image.options  =Bildealternativer
+label.activity.completion  =Aktivitetsslutt
+errors.maxfilesize  =Opplastet fil overskrider maksimal filst\u00f8rrelse p\u00e5:{0}
+label.upload.info  =Opplastet fil m\u00e5 ikke v\u00e6re kj\u00f8rbar og ikke overskride dfilst\u00f8rrelse p\u00e5: {0}
 
 
-#======= End labels: Exported 117 labels for no NO =====
+#======= End labels: Exported 100 labels for no NO =====
