--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:18:40 CST 2017 
  
 #=================== labels for Submit Files =================# 
 
@@ -18,46 +18,32 @@ label.cancel  =Avbryt
 label.authoring.heading  =Opphav for innsending av filer
 label.authoring.heading.basic  =Grunnlag
 label.authoring.heading.basic.desc  =Grunndata for innsendelse
-label.authoring.heading.instructions  =Informasjon
-label.authoring.heading.instructions.desc  =Vennligst skriv inn on-line og off-line informasjon
 label.authoring.heading.advance  =Avansert
 label.authoring.heading.advance.desc  =Venligst skriv inn avanserte alternativer for innsendelse
 label.authoring.basic.title  =Tittel
 label.authoring.basic.instruction  =Informasjon
-label.authoring.online.instruction  =On-line informasjon
-label.authoring.offline.instruction  =Off-line informasjon
-label.authoring.online.file  =Last opp on-line fil
-label.authoring.offline.file  =Last opp off-line fil
 label.authoring.advance.lock.on.finished  =L\u00e5s ved ferdigstillelse
 label.authoring.save.button  =Lagre
 label.authoring.cancel.button  =Avbryt
-label.authoring.choosefile.button  =Velg fil
-label.authoring.upload.online.button  =Last opp on-line
-label.authoring.upload.offline.button  =Last opp off-line
-label.authoring.online.filelist  =On-line filliste
-label.authoring.offline.filelist  =Off-line filliste
-label.authoring.online.delete  =Slett
-label.authoring.offline.delete  =Slett
 authoring.exception  =Det er et problem med \u00e5 oversende innholdet, \u00e5rsaken er {0}
-label.learner.fileName  =Filnavn
+label.learner.fileName  =Navn
 label.learner.filePath  =Fil
-label.learner.fileDescription  =Filbeskrivelse
-label.learner.upload  =Last opp fil
+label.learner.fileDescription  =Beskrivelse
+label.learner.upload  =Last opp
 label.learner.finished  =Opplastingen er fullf\u00f8rt
-label.learner.time  =Tid for opplasting
+label.learner.time  =Opplastett dato
 label.learner.dateOfSubmission  =Dato for innsendelse
 label.learner.comments  =Kommentarer
 label.learner.marks  =Karakter
 label.learner.dateMarksReleased  =Dato for karakter vises
 label.learner.notAvailable  =Ikke tilgjengelig
 label.learner.noUpload  =Ingen filer er lastet opp enn\u00e5.
-label.learner.uploadMessage  =Kun en fil kan lastes opp om gangen - maksimum filst\u00f8rrelse er 1.0 Mb
+label.learner.uploadMessage  =Kun en fil kan lastes opp om gangen - maksimum filst\u00f8rrelse kan ikke overstige {0}
 learner.finish.without.upload  =Ingen filer er lastet opp enda. Filer kan ikke lastes opp med en gang du har valgt OK.
 label.monitoring.heading  =Kontroll modus
 label.monitoring.heading.userlist  =Status
 label.monitoring.heading.userlist.desc  =Beskrivelse av bruker liste
 label.monitoring.heading.instructions  =Informasjon
-label.monitoring.heading.instructions.desc  =On-line og off-line informasjon
 label.monitoring.heading.edit.activity  =Rediger
 label.monitoring.heading.edit.activity.desc  =Rediger aktivites beskrivelse
 label.monitoring.heading.stats  =Statistikk
@@ -71,11 +57,11 @@ label.monitoring.viewAllMarks.button  =Se alle karakterer
 label.monitoring.Mark.button  =Karakter
 label.monitoring.releaseMarks.button  =Publiser karakterer
 label.monitoring.downloadMarks.button  =Last ned karakterer
-label.monitoring.updateMarks.button  =Hent opp karakterer
-label.monitoring.saveMarks.button  =Lagre karakterer
+label.monitoring.updateMarks.button  =Oppdater karakterer
+label.monitoring.saveMarks.button  =Lagre
 label.monitoring.finishedMarks.button  =Ferdig
 label.monitoring.edit.activity.edit  =Rediger
-label.monitoring.edit.activity.cancel  =Avbryt redigering
+label.monitoring.edit.activity.cancel  =Avbryt
 label.monitoring.edit.activity.update  =Oppdater aktivitet
 monitoring.statistic.title  =Statistikk for kontroll modus
 monitoring.statistic.marked  =Merkede filer:
@@ -86,17 +72,9 @@ submit.upload.twice  =Du har allerede lastet opp denne filen, vennligst vent lit
 submit.modenotsupported  =Modusen {0} du forespurte er ikke st\u00f8ttet
 submit.successful  =Innholdet er blitt lagret korrekt.
 learner.form.filepath.displayname  =Last opp fil navn
-errors.header  =:
-errors.prefix  =:
-errors.suffix  =:
-errors.footer  =:
-errors.required  ={0} er n\u00f8dvendig.
-errors.maxfilesize  =Den opplastede filen g\u00e5r ut over maksimal tillatt filst\u00f8relse p\u00e5 {0} bytes
-error.read.only.mode  =Lesemodus, funksjonen kan ikke ferdigstilles
 errors.mark.invalid.number  =Karakter er p\u00e5 et ugyldig tallformat.
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 define.later.message  =Vent til at foreleseren har gjort ferdig innholdet for denne aktiviteten.
-run.offline.message  =Denne aktiviteten skal ikke utf\u00f8res ved datamaskinen. Kontakt foreleser.
 message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke lengere redigeres.
 button.try.again  =Fors\u00f8k igjen
 button.finish  =Neste aktivitet
@@ -122,11 +100,10 @@ message.left.upload.limit  =Du kan laste opp ytligre {0} filer.
 messsage.learner.finish.confirm  =Vil du gj\u00f8re ferdig innsendelsen ?
 label.edit  =Endre
 message.no.reflection.available  =Notatboken er ikke tilgjengelig
-error.attachment.executable  =Filen som skal lastes opp er kj\u00f8rbar, vennligst komprimer den f\u00f8r opplasting.
+error.attachment.executable  =Filen som skal lastes opp kan ikke v\u00e6re kj\u00f8rbar.
 message.alertContentEdit  =Merk ! En eller flere studenter har p\u00e5begynt denne aktiviteten. Endrer du innholdet vil studentene motta forskjellig innhold.
 message.warnLockOnFinish  =Merk: Etter at du har klikket p\u00e5 "Neste Aktivitet" og deretter kommer tilbake hit, s\u00e5 vil du ikke kunne fortsette \u00e5 legge til filer.
 message.activityLocked  =Foreleseren har definert aktiviten slik at du ikke f\u00e5r legge til filer etter at du har avsluttet. Hvis du g\u00e5r ut og returnere hit, s\u00e5 vil du kun f\u00e5 tillatelse til \u00e5 se filene dine, men ikke legge til flere.
-monitoring.instructions.attachments  =Vedlegg
 monitoring.marked.question  =Gitt karakter ?
 label.no  =Nei
 label.yes  =Ja
@@ -144,21 +121,42 @@ label.authoring.advanced.notify.onfilesubmit  =Varsle foreleseren i kontroll mod
 event.file.submit.subject  =LAMS: En student har sendt inn en fil med verkt\u00f8yet for innsendelse av filer.
 event.file.submit.body  =Studenten {0} har sendt inn en fil med verkt\u00f8yet for innsendelse av filer.\n\n Denne meldingen er sendt automatisk, pga systeminnstillingene.
 label.monitor.mark.markedFile  =Karaktersatt fil
-label.monitor.mark.updoad  =Last opp karaktersatt fil
+label.monitor.mark.updoad  =Svar
 label.monitor.mark.replaceFile  =Erstatt
 label.monitor.mark.notifyStudent  =Varsle student om at karakter et satt
 message.monitor.mark.confirmDeleteFile  =Er du sikker p\u00e5 at du vil slette filen ?
 monitor.summary.date.restriction  =Dato og tids-begrensning
 monitor.summary.when.date.restriction.is.set  =Det er definert dato og tids-begrensninger, og studentene ikke kunne sende inn besvarelser etter den denne dato.
-monitor.summary.after.date  =Dato og tid:
+monitor.summary.after.date  =Dato:
 monitor.summary.set.restriction  =Definer begrensninger
 monitor.summary.unset.restriction  =Fjern begrensninger
-authoring.info.teacher.set.restriction  =Foreleseren har definert en tids-begrensning ved innsending fra {0},Etter denne tiden vil aktiviteten ikke v\u00e6re tilgjengelig.
+authoring.info.teacher.set.restriction  =Foreleseren har satt en frist for innsending fra {0},Etter denne tiden vil aktiviteten ikke v\u00e6re tilgjengelig.
 monitor.summary.notification  =Bemerkning
-monitor.summary.date.restriction.set  =Dato-begrensning er definert
-monitor.summary.date.restriction.removed  =Dato-begrensning er fjernet
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen er fjernet
 monitoring.user.submittedFiles  =Innsendte filer
 output.desc.submitted.items.output.definition.sbmt  =Filer er sendt inn ved hjelp av innsendingsverkt\u00f8yet
+button.submit  =Avslutt
+label.monitoring.file.delete  =Slett karakterfil
+label.file.options  =Filalternativer
+label.activity.completion  =Akrtivitetsslutt
+label.notifications  =Meldinger
+label.view.files  =Se p\u00e5 filer
+label.deleted  =Slettet
+label.monitoring.original.learner.file.delete  =Slett
+label.monitoring.original.learner.file.restore  =Gjenopprett
+message.monitor.confirm.original.learner.file.delete  =Er du sikker p\u00e5 at du \u00f8nsker \u00e5 slette den orginale filen {0} som ble lastet opp av studenten ?
+message.monitor.confirm.original.learner.file.restore  =Er du sikker p\u00e5 at du \u00f8nsker \u00e5 gjennopprette den orginale filen {0} som ble lastet opp av studenten ?
+event.file.delete.subject  =LAMS: Fil ble slettet
+event.file.delete.body  =En foreleser slettet filen din ''''{0}''''i en Send inn filaktivitet i LAMS. Denne meldingen er sendt automatisk og kan ikke besvares.
+event.file.restore.subject  =LAMS: Fil ble gjennopprettet
+event.file.restore.body  =En foreleser gjennopprettet filen din ''''{0}''''i en Send inn filaktivitet i LAMS. Denne meldingen er sendt automatisk og kan ikke besvares.
+audit.file.delete  =Foreleser {0} sletted fil {1} som var lastet opp av student {2}.
+audit.file.restore  =Foreleser {0} gjennopprettet fil {1} som var lastet opp av student {2}.
+label.search  =S\u00f8k....
+errors.required  ={0} er p\u00e5krevet.
+errors.maxfilesize  =Opplastet fil overstiger maksimum filst\u00f8rrelse:{0}
+label.add  =Legg til
 
 
-#======= End labels: Exported 153 labels for no NO =====
+#======= End labels: Exported 151 labels for no NO =====
