--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:35:40 CST 2017 
  
 #=================== labels for Scratchie =================# 
 
@@ -23,20 +23,15 @@ label.authoring.basic.item.correct  =Riktig?
 label.authoring.basic.add.another.scratchie  =En ny Skratchie
 label.authoring.save.button  =Lagre
 label.authoring.cancel.button  =Avbryt
-error.msg.upload.file.not.found  =Kan ikke finne fil for opplasting {0}
-error.msg.file.not.found  =Finner ikke filen ved opplasting.
-error.msg.io.exception  =IOunntak ved opplasting fil.
-error.msg.invaid.param.upload  =Ugyldig paramert unntak oppsto ved opplasting av fil
-error.msg.repository  =En database feil oppsto ved opplasting av fil
 error.msg.default.content.not.find  =Kan ikke hente inn standard innhold for dette verkt\u00f8yet
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre?
-label.learning.title  =Skratchie student
+label.learning.title  =Skratchie
 monitoring.tab.summary  =Oppsummering
 monitoring.tab.statistics  =Statistikk
 monitoring.tab.edit.activity  =Rediger aktivitet
 monitoring.label.group  =Gruppe
 label.monitoring.edit.activity.edit  =Rediger
-message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke lengere redigere
+message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke lengre redigeres
 export.title  =Eksport mappe for Skrtchie
 label.edit  =Rediger
 label.finished  =Neste aktivitet
@@ -45,14 +40,13 @@ label.finish  =Avsluttet
 message.monitoring.summary.no.session  =Det eringen sesjon tilgjengelig
 define.later.message  =Vennligst vent til at foreleseren har ferdigstilt innholdet for denne aktiviteten.
 button.try.again  =Fors\u00f8k igjen
-label.up  =Flytt opp
-label.down  =Flytt ned
+label.up  =Opp
+label.down  =Ned
 label.authoring.advanced.reflectOnActivity  =Legg til en notatblokk p\u00e5 slutten med f\u00f8lgende instruksjoner:
 label.continue  =Fortsett
 page.title.monitoring.view.reflection  =Se p\u00e5 notatblokk innholdet
 button.close  =Lukk
 message.no.reflection.available  =Ingen notatblokk er tilgjengelig
-message.alertContentEdit  =Merk: En eller fler studenter har p\u00e5begynt denne aktiviteten og den kan ikke leger bli modifisert.
 label.on  =P\u00e5
 label.off  =Av
 monitor.summary.th.advancedSettings  =Avanserte innstillinger
@@ -81,15 +75,15 @@ label.monitoring.item.summary.group  =Gruppe:
 output.desc.learner.mark  =Total karakter for student
 warning.msg.authoring.do.you.want.to.delete  =Vil du virkelig slette dette sp\u00f8rsm\u00e5let?
 warning.msg.are.you.sure.you.want.to.finish  =Vil du virkelig avslutte?
-label.authoring.add.blank.answer  =Legg til et tomt svar
+label.authoring.add.blank.answer  =Legg til et nytt svar
 label.authoring.title.required  =Tittel m\u00e5 settes inn.
 label.authoring.error.possible.answer  =Du m\u00e5 minimum sende inn et svar.
 label.authoring.error.correct.answer  =Du m\u00e5 markere ett av svarene som riktig.
 error.form.validation.error  =Du har 1 feil i et format. Denne er uthevet.
 error.form.validation.errors  =Du har {0} feil i formatet. Feilene er uthevet.
 label.edit.question  =Legg til/rediger sp\u00f8rsm\u00e5l
-label.authoring.basic.question.name  =Sp\u00f8rsm\u00e5l tittel
-label.authoring.basic.question.text  =Beskrivelse av sp\u00f8rsm\u00e5let
+label.authoring.basic.question.name  =Tittel
+label.authoring.basic.question.text  =Sp\u00f8rsm\u00e5l
 label.authoring.advanced.give.extra.point  =Gi en ekstra karakter dersom det f\u00f8rste Skritchie fors\u00f8k er riktig.
 label.authoring.scratchie.answers  =Skratchie svar
 label.one.or.more.questions.not.completed  =Et eller flere sp\u00f8rsm\u00e5l er ikke ferdigstillt. Hvis du \u00f8nsker \u00e5 fortsette s\u00e5 vil du ikke kunne besvare disse sp\u00f8rsm\u00e5lene senere og du vil f\u00e5 null poeng for disse sp\u00f8rsm\u00e5lene. Er du sikker p\u00e5 at du vil fortsette ?
@@ -188,6 +182,26 @@ admin.preset.marks  =Karakterer med en desimal.
 error.required.fields.missing  =karakterfeltet skal ike v\u00e6re tomt. Gi en karakter med en desimal.
 error.entered.marks.not.comma.separates  =Karakteren er ikke skrevet i riktig format med en desimal.
 label.authoring.export.qti  =Eksporter IMS QTI
+label.scratchie.options  =Sp\u00f8rsm\u00e5l alternativ
+label.activity.completion  =Aktivitetsslutt
+label.authoring.advanced.burning.questions  =Tillegg for haste-sp\u00f8rsm\u00e5l
+label.continue.burning.questions  =Fortsett med haste-sp\u00f8rsm\u00e5l
+label.burning.questions  =Haste-sp\u00f8rsm\u00e5l
+label.burning.question  =Haste-sp\u00f8rsm\u00e5l
+label.time.limit  =Tidsbegrensning (minutter)
+label.countdown.time.left  =Igjenv\u00e6rende tid
+label.time.is.over  =Tiden er forbi. Behandler svarene dine
+label.are.you.ready  =Du er i ferd med \u00e5 delta i en aktivitet med tidsbegrensning. Er du klarvtil\u00e5 starte ?
+label.ok  =OK
+label.count  =Tell opp
+label.like  =Like
+label.unlike  =Ulike
+label.general.burning.question  =Generelle haste-sp\u00f8rsm\u00e5l
+label.waiting.for.leader.launch.time.limit  =Lederen har ikke startet aktiviteten. Vennligst vent tilhan starter
+label.waiting.for.leader.submit.notebook  =Tidsbegrensningen som er satt av instrukt\u00f8ren er utg\u00e5tt. Vennligst vent til en gruppeleder sender inn notat
+label.waiting.for.leader.submit.burning.questions  =Tidsgrensen som er definert av instrukt\u00f8rener utl\u00f8pt.Vennligst vent til en gruppeleder sender inn et haste-sp\u00f8rsm\u00e5l
+label.authoring.advanced.shuffle.items  =Stokk om sp\u00f8rsm\u00e5l
+label.summary.downloaded  =Excel fil erlastet ned
 
 
-#======= End labels: Exported 182 labels for no NO =====
+#======= End labels: Exported 196 labels for no NO =====
