--- a/lams_tool_spreadsheet/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_spreadsheet/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = spreadsheet
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:29:14 CST 2017 
  
 #=================== labels for Online Spreadsheet =================# 
 
@@ -11,33 +11,20 @@ activity.description  =Regneark.
 activity.helptext  =Regneark verkt\u00f8y.
 tool.display.name  =Regneark verkt\u00f8y
 tool.description  =Verkt\u00f8y for \u00e5 vise regneark.
-errorPage.title  =Side for feilmelding
-errorPage.heading  =Noen feil oppsto under behandlingen av din foresp\u00f8rsel
 label.authoring.heading  =Regneark
-label.authoring.title  =Regneark forfatter
+label.authoring.title  =Regneark
 label.authoring.heading.basic  =Grunnlag
 label.authoring.heading.basic.desc  =Grunndata informasjon for regneark.
 label.authoring.heading.advance.desc  =vennligst  legg inn avanserte alternativer for regneark.
 label.authoring.basic.resource.instructions  =Instruksjoner
-label.authoring.heading.instructions  =Instruksjoner
-label.authoring.heading.instructions.desc  =Vennligst skriv on-line og off-line informasjon
 label.authoring.basic.instruction  =Instruksjon
 label.authoring.basic.resource.add.instruction  =Legg til instruksjon
-label.authoring.online.instruction  =On-line informasjon
-label.authoring.offline.instruction  =Off-line informasjon
 label.authoring.basic.title  =Tittel
 label.authoring.basic.spreadsheet  =Regneark
 label.authoring.advanced.reflectOnActivity  =Legg til en notatblokk p\u00e5 slutten av regnearket, med f\u00f8lgende informasjon
 label.authoring.advanced.play.only  =Kun test (studenten kan leke med regnearket men kan ikke lagre)
 label.authoring.advanced.learners.are.allowed.to.save  =Studentene tillates \u00e5 sende inn individuelle regneark.
 label.authoring.advanced.enable.spreadsheet.marking  =Tillat \u00e5 gi regneark betegnelser
-label.authoring.online.file  =Last opp on-line fil
-label.authoring.offline.file  =Last opp off-line fil
-label.authoring.choosefile.button  =Velg fil
-label.authoring.upload.online.button  =Last opp on-line
-label.authoring.upload.offline.button  =Last opp off-line
-label.authoring.online.delete  =Slett
-label.authoring.offline.delete  =Slett
 label.authoring.cancel.button  =Avbryt
 label.learning.title  =Studentens regneark
 label.learning.comments  =Kommentarer
@@ -67,7 +54,7 @@ label.monitoring.statistics.session.name  =Sesjons navn
 label.monitoring.statistics.marked  =Regneark med betegnelser
 label.monitoring.statistics.not.marked  =Regneark uten betegnelser
 label.monitoring.statistics.total.spreadsheets.sent.by.learners  =Totalt antall regneark innsendt av studentene
-label.monitoring.downloadmarks.learner.name  =Studentens navn:
+label.monitoring.downloadmarks.learner.name  =Navn:
 label.monitoring.downloadmarks.marks  =Karakterer
 label.monitoring.downloadmarks.comments  =Komentarer
 label.monitoring.vieawallmarks.heading.marking  =Sett karakterer
@@ -87,30 +74,20 @@ error.summary.marks.blank  =Karakterer kan ikke v\u00e6re tomme.
 error.summary.marks.invalid.number  =Karakter har et ugyldig tall format.
 error.summary.comments.blank  =Kommentarer kan ikke v\u00e6re tomme.
 error.upload.failed  =Opplasting av fil er mislykket:{0}
-error.msg.upload.file.not.found  =Kunne ikke finne fil for opplasting: {0}
-error.msg.file.not.found  =Fil ikke funnet regel oppst\u00e5r n\u00e5r du laster opp filen.
-error.msg.io.exception  =IOException oppst\u00e5r ved opplasting av filen.
-error.msg.invaid.param.upload  =Invalid ParameterException oppst\u00e5r n\u00e5r du fors\u00f8ker \u00e5 laste opp filen
 error.msg.default.content.not.find  =Kunne ikke hente ut standard innhold for dette verkt\u00f8yet.
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
-monitoring.tab.instructions  =Instruksjon
 monitoring.tab.summary  =Status
 monitoring.tab.statistics  =Statistikk
 monitoring.tab.edit.activity  =Rediger
 monitoring.label.group  =Gruppe
 monitoring.summary.note  =Merk: Antall studenter er antall studenter som har sett p\u00e5 regnearket.
-monitoring.label.attachments  =Vedlegg
-message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke lengere redigeres
-export.title  =Eksport mappe for regneark
 label.delete  =Slett
-label.download  =Last ned
 label.view  =Se p\u00e5
 label.edit  =Rediger
 message.monitoring.summary.no.session  =Ingen sesjoner er tilgjengelig
 label.save  =lagre
 label.cancel  =Angre
 define.later.message  =vennligst vent til foreleseren har ferdigstilt innholdet for denne aktiviteten.
-run.offline.message  =Denne aktiviteten utf\u00f8res ikke ved hjelp avdatamaskin. vennligst konferer foreleseren
 button.try.again  =Fors\u00f8k igjen
 page.title.monitoring.view.reflection  =Se p\u00e5 notatbok innhold
 message.no.reflection.available  =Ingen notatbok er tilgjengelig
@@ -119,8 +96,8 @@ activity.title  =regneark
 label.authoring.save.button  =Lagre
 label.authoring.advance.lock.on.finished  =L\u00e5s n\u00e5r ferdig
 label.authoring.heading.advance  =Avansert
-label.up  =Flytt opp
-label.down  =Flytt ned
+label.up  =Opp
+label.down  =Ned
 label.continue  =Fortsett
 button.close  =Lukk
 label.finished  =Neste aktivitet
@@ -133,6 +110,11 @@ label.export.reflection  =Notatbok inngang
 message.warnLockOnFinish  =Merk: Etter at du har klikket p\u00e5 "Neste Aktivitet", og deretter kommer tilbake til dette regnearket, s\u00e5 kan du ikke endre dette regnearket.
 label.on  =P\u00e5
 label.off  =Av
+label.submit  =Avslutt
+label.search  =S\u00f8k....
+label.refresh  =Frisk opp
+label.spreadsheet.options  =Alternativer
+label.activity.completion  =Aktivitetslutt
 
 
-#======= End labels: Exported 127 labels for no NO =====
+#======= End labels: Exported 109 labels for no NO =====
