--- a/lams_tool_survey/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:26:30 CST 2017 
  
 #=================== labels for Survey =================# 
 
@@ -15,7 +15,7 @@ tool.description  =Verkt\u00f8y for pr\u00f8ver
 errorPage.title  =Feil-side
 errorPage.heading  =Feil oppsto under behandlingen av din foresp\u00f8rsel
 label.authoring.heading  =Pr\u00f8ver
-label.author.title  =Utforme pr\u00f8ver
+label.author.title  =Unders\u00f8kelse
 label.authoring.heading.basic  =Grunnlag
 label.authoring.heading.advance  =Avansert
 label.authoring.heading.basic.desc  =Grunndata for oversikter
@@ -47,18 +47,13 @@ authoring.exception  =Det er et problem med godkjening av sp\u00f8rsm\u00e5lssid
 error.survey.item.question.blank  =Sp\u00f8rsm\u00e5let kan ikke v\u00e6re tomt
 error.survey.item.question.less.option  =Du m\u00e5 skrive inn minst to alternativer
 label.submit.survey  =Utf\u00f8rt
-label.retake.survey  =Gj\u00f8r om pr\u00f8ven
-label.retake  =[Gj\u00f8r om]
+label.retake.survey  =Endre svar
+label.retake  =[Gj\u00f8r om svaret]
 label.append.text  =Legg til tekst:
 label.next  =Neste
 label.previous  =Forrige
 label.of  =av
 error.upload.failed  =Opplasting av fil mislykkes {0}
-error.msg.upload.file.not.found  =Kan ikke finne opplastet fil {0}
-error.msg.file.not.found  ="Filen finnes ikke" feil oppst\u00e5r ved opplasting av fil.
-error.msg.io.exception  =IO feil oppst\u00e5r n\u00e5r fil lastes opp.
-error.msg.invaid.param.upload  =Ugyldig parameter feil oppsto da filen skulle lastes opp.
-error.msg.repository  =Database feil ved opplasting av fil.
 error.msg.default.content.not.find  =Kan ikke hente standard innholds-dokument for dette verkt\u00f8yet
 error.mandatory.question  =Obligatorisk sp\u00f8rsm\u00e5l, vennligst gi et svar.
 msg.no.instruction  =Ingen informasjon er tilgjengelig
@@ -79,11 +74,7 @@ monitoring.label.user.name  =Navn
 label.monitoring.edit.activity.cancel  =Angre
 label.monitoring.edit.activity.update  =Oppdater
 label.monitoring.edit.activity.edit  =Rediger
-message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke endres lenger
 export.label.survey  =Pr\u00f8ver
-export.title  =Eksporter mappe med sp\u00f8rsm\u00e5l
-error.inputFileTooLarge  =Innsendt filst\u00f8rrelse er for stor
-error.uploading  =Feil ved opplasting
 error.title.empty  =Tittel kan ikke v\u00e6re tom
 label.open  =\u00c5pen
 label.delete  =Fjern
@@ -104,8 +95,8 @@ monitoring.label.access.time  =Tilgangs tid
 define.later.message  =Vennligst vent til at foreleseren gj\u00f8r ferdig innholdet for denne aktiviteten.
 message.monitoring.summary.no.survey.for.group  =Det er ingen pr\u00f8ver tilgjengelig for denne gruppen
 button.try.again  =Fors\u00f8k igjen
-label.up  =Flytt opp
-label.down  =Flytt ned
+label.up  =Opp
+label.down  =Ned
 label.monitoring.heading.access  =Studentens liste
 label.authoring.advanced.reflectOnActivity  =Legg til et notat ved slutten av sp\u00f8rsm\u00e5lene, med f\u00f8lgende informasjon:
 error.reflection.emtpy  =Vennligst skriv  et notat
@@ -137,7 +128,7 @@ error.monitoring.export.excel  =Det er ikke generert en eksport rapport p\u00e5 
 label.monitoring.button.export.excel  =Eksport rapport
 errors.maxfilesize  =Filen som lastes opp overstiger maksimum tillatt filst\u00f8rrelse som er {0} bytes
 message.not.available  =Ikke tilgjengelig
-message.warnLockOnFinish  =Merk: Etter at du har klikket p\u00e5 "Neste Aktivitet" og du deretter kommer tilbake til denne  pr\u00f8ven, s\u00e5 vil du ikke kunne endre svarene dine.
+message.warnLockOnFinish  =Merk: Etter at du har klikket p\u00e5   "{0}" og du deretter kommer tilbake til denne  pr\u00f8ven, s\u00e5 vil du ikke kunne endre svarene dine.
 message.activityLocked  =Foreleseren har definert denne aktiviteten slik at du ikke kan besvare pr\u00f8ven etter at du har gjort den ferdig. N\u00e5r du kommer tilbake til pr\u00f8ven, kan du se svarene, men ikke endre dem.
 label.export.reflection  =Notater
 label.on  =P\u00e5
@@ -168,15 +159,15 @@ textsearch.phrase  =har akkurat disse ord eller frase:
 textsearch.any.words  =har en eller flere av disse ord:
 textsearch.excluded.words  =har ingen av disse u\u00f8nskede ord:
 textsearch.questions  =S\u00f8k innenfor disse sp\u00f8rsm\u00e5l:
-monitor.summary.date.restriction  =Dato begrensning
+monitor.summary.date.restriction  =Frist
 monitor.summary.when.date.restriction.is.set  =Studentene vil ikke kunne svare p\u00e5 dette etter den definerte tid
 monitor.summary.after.date  =Dato/tid:
 monitor.summary.set.restriction  =Definer begrensning
 monitor.summary.unset.restriction  =Fjern begrensning
-authoring.info.teacher.set.restriction  =Foreleseren har definert en dato/tid begrensing fra {0}. Etter dette vil aktiviteten ikke v\u00e6re tilgjengelig.
+authoring.info.teacher.set.restriction  =Foreleseren har definert en frist fra {0}. Etter dette vil aktiviteten ikke v\u00e6re tilgjengelig.
 monitor.summary.notification  =Melding
-monitor.summary.date.restriction.set  =Dato begrensning er innf\u00f8rt
-monitor.summary.date.restriction.removed  =Dato begrensning er fjernet
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen er fjernet
 label.copy  =Kopi
 label.submit  =Avslutt
 label.monitoring.heading  =Oppf\u00f8lging - oversikt
@@ -185,6 +176,13 @@ label.view.all.responses  =Se alle svar
 label.sort.by.answer  =Sorter etter svar
 label.other.answers  =Svar fra andre studenter
 label.total.responses  =Antall svar til n\u00e5: {0}
+message.no.reflection.available  =Ingen notat fra notatbok er lagt til.
+label.search  =S\u00f8k...
+label.answer.required  =Svar er p\u00e5krevet
+label.survey.options  =Alternativer
+label.activity.completion  =Aktivitetsslutt
+label.notifications  =Meldinger
+label.summary.downloaded=  =Raporter som nedlastet
 
 
-#======= End labels: Exported 179 labels for no NO =====
+#======= End labels: Exported 177 labels for no NO =====
