--- a/lams_tool_task/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = takslist
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:27:41 CST 2017 
  
 #=================== labels for Task List =================# 
 
@@ -15,11 +15,9 @@ appName  =Arbeidsoppgaver
 errorPage.title  =Feilmeldinger
 errorPage.heading  =Noen feil oppsto under h\u00e5ndteringen av din foresp\u00f8rsel
 label.authoring.heading  =Arbeidsoppgaver
-label.authoring.title  =Godkjenning av arbeidsoppgaver
+label.authoring.title  =Arbeidsoppgaver
 label.authoring.heading.basic  =Grunnlag
 label.authoring.heading.basic.desc  =Grunndata for arbeidsoppgaver
-label.authoring.heading.instructions  =Informasjon
-label.authoring.heading.instructions.desc  =Vennligst gi inn betingelsene for arbeidsoppgavene
 label.authoring.heading.conditions  =Betingelser
 label.authoring.heading.advance  =Avansert
 label.authoring.heading.advance.desc  =Avanserte inngangsdata for arbeidsoppgaver
@@ -42,13 +40,7 @@ label.authoring.basic.resource.edit  =Rediger
 label.authoring.basic.resource.delete  =Fjern
 label.authoring.basic.resource.title.input  =Tittel
 label.authoring.basic.resource.description.input  =Beskrivelse
-label.authoring.online.instruction  =On-line informasjon:
-label.authoring.offline.instruction  =Off-line informasjon:
-label.authoring.online.file  =On-line informasjons fil:
-label.authoring.offline.file  =Off-line infromasjons fil:
-label.authoring.choosefile.button  =Velg fil
-label.authoring.instructions.upload.button  =Last opp
-label.authoring.instructions.delete.button  =Fjern
+label.authoring.choosefile.button  =Fil
 label.authoring.advance.allow.contribute.tasks  =Tillat studentene \u00e5 legge til arbeidsoppgaver
 label.authoring.advance.lock.on.finished  =L\u00e5s n\u00e5r ferdig
 label.authoring.advance.monitor.verification.required  =Foreleser m\u00e5 verifisere disse arbeidsoppgavene f\u00f8r studentene fullf\u00f8rer aktiviteten.
@@ -58,8 +50,8 @@ label.authoring.advance.minimum.number.tasks  =Minimum antall oppgaver som m\u00
 label.authoring.cancel.button  =Angre
 label.authoring.edit.conditions.button  =Rediger betingelser
 label.authoring.save.button  =Lagre
-label.authoring.up  =Flytt opp
-label.authoring.down  =Flytt ned
+label.authoring.up  =Opp
+label.authoring.down  =Ned
 label.authoring.conditions.add.condition  =Legg til betingelse
 label.authoring.conditions.list.title  =Betingelser
 label.authoring.conditions.condition.name  =Betingelsens navn
@@ -103,7 +95,6 @@ label.preview.post  =Send inn
 lable.preview.by  =Av
 monitoring.tab.summary  =Status
 monitoring.tab.statistics  =Statistikk
-monitoring.tab.instructions  =Informasjon
 monitoring.tab.edit.activity  =Rediger
 monitoring.label.title  =Tittel
 monitoring.label.suggest  =Anbefalt av
@@ -130,11 +121,7 @@ label.monitoring.tasksummary.comments.allowed  =Studentene tillates \u00e5 gi ko
 label.monitoring.tasksummary.comments.required  =Kommentarer m\u00e5 gis for \u00e5 kunne avslutte arbeidsoppgaven
 label.monitoring.tasksummary.files.allowed  =Studentene tillates \u00e5 legge til filer
 label.monitoring.tasksummary.files.required  =Filer m\u00e5 legges til for \u00e5 kunne avslutte denne arbeidsoppgaven
-label.monitoring.instructions.attachments  =Vedlegg
-message.monitoring.edit.activity.not.editable  =Denne aktiviteten kan ikke lengre redigeres
-export.title  =Eksport-mappe for arbeidsoppgaver
 label.export.reflection  =Notater
-label.download  =Last ned
 label.view  =Se p\u00e5
 label.edit  =Rediger
 label.completed  =Ferdig
@@ -143,7 +130,6 @@ button.add  =Legg til
 message.monitoring.summary.no.session  =Ingen sesjon er tilgjengelig
 label.cancel  =Angre
 define.later.message  =Vennligst vent p\u00e5 at foreleseren har gjort ferdig innholdet for denne aktiviteten.
-run.offline.message  =Denne aktiviteten skal ikke utf\u00f8res ved datamaskinen. Kontakt foreleseren.
 button.try.again  =Fors\u00f8k igjen
 message.no.reflection.available  =Ingen notatbok er tilgjengelig
 monitoring.label.access.time  =Tilgangs tid
@@ -166,15 +152,23 @@ label.monitoring.summary.monitor.verification  =Foreleserens verifisering:{0}
 label.monitoring.summary.notebook.reflection  =Notatbok vurderinger/refleksjoner: {0}
 planner.item.title  =Tittel
 monitor.summary.th.advancedSettings  =Avanserte innstillinger
-monitor.summary.date.restriction  =Dato og tids begrensning
+monitor.summary.date.restriction  =Frist
 monitor.summary.when.date.restriction.is.set  =Hvis dato og tidsbegrensning er definert, s\u00e5 vil studentene ikke kunne se eller ferdigstille oppgaver sp\u00f8rsm\u00e5l etter denne tid.
 monitor.summary.after.date  =Dato og tid:
 monitor.summary.set.restriction  =Definer begrensning
 monitor.summary.unset.restriction  =Fjern begrensning
 authoring.info.teacher.set.restriction  =Foreleseren har definert en begrensning for denne aktiviteten fra og med {0}.
 monitor.summary.notification  =Melding
-monitor.summary.date.restriction.set  =Dato begrensning er definert
-monitor.summary.date.restriction.removed  =Dato begrensning er fjernet
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen er fjernet
+label.submit  =Avslutt
+label.download  =Last ned
+label.confirm  =Bekreft
+label.task.options  =Alternative oppgaver
+label.activity.completion  =Aktivitetsslutt
+errors.maxfilesize  =Opplastet fil overskrider maksimum filst\u00f8rrelse p\u00e5: {0}
+error.attachment.executable  =Opplastet fil er kj\u00f8rbar
+label.upload.info  =Opplastet fil kan ikke v\u00e6re kj\u00f8rbar og ikke overskride filst\u00f8rrelse p\u00e5:{0}
 
 
-#======= End labels: Exported 169 labels for no NO =====
+#======= End labels: Exported 163 labels for no NO =====
