--- a/lams_tool_vote/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_vote/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,29 +2,25 @@ appName = voting
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:25:39 CST 2017 
  
 #=================== labels for Voting =================# 
 
 appName  =avstemming
 activity.title  =Avstemming
-activity.description  =Tillater avstemmings format
-activity.helptext  =Hjelpetekst for avstemming
+activity.description  =Stemmeverkt\u00f8y der studentene kan velge ett eller flere alternativer.
 tool.display.name  =Avstemming
-tool.description  =Tillater avstemmings format
+tool.description  =Stemmeverkt\u00f8y der studentene kan velge ett eller flere alternativer.
 label.tool.shortname  =Avstemming
 label.authoring.vote  =Avstemming
 label.basic  =Grunnlag
 label.advanced  =Avansert
-label.instructions  =Informasjon
 label.summary  =Status
 label.stats  =Status
 label.editActivity  =Rediger
 label.authoring  =Avstemmings forfatter
 label.learning  =Avstemmnings erfaring
 label.preview  =Forh\u00e5ndsvis avstemming
-label.exportPortfolio  =Eksporter avstemmingsmappe
-label.exportPortfolio.simple  =Eksporter mappe
 label.authoring.vote.basic  =Venligst definer alternativene.
 label.monitoring  =Avstemming - kontroll modus
 label.allowText  =Tillat \u00e5 skrive tekst
@@ -37,15 +33,11 @@ label.authoring.instructions  =Informasjon
 label.moveDown  =Ned
 label.other  =Annen
 label.view.chart  =Se p\u00e5 diagram for stemmegiving
-button.delete  =Slett
-label.fileContent  =Fil innhold
-count.total.user  =Totalt antall brukerstemmer:
-count.finished.user  =Avgitte brukerstemmer:
+count.total.user  =Totalt antall studenter:
+count.finished.user  =Ferdige studenter:
 label.learning.report  =Erfaringsrapport
 label.view  =Se p\u00e5
-label.download  =Last ned
 button.cancel  =Angre
-button.upload  =Last opp
 button.preview  =Forh\u00e5ndsvis
 button.advanced  =Avansert
 button.instructions  =Informasjon
@@ -53,68 +45,49 @@ button.add  =Legg til
 button.remove  =Slett
 button.submit  =Send inn
 sbmt.successful  =Innholdet er blitt lagret
-label.nomination1  =Alternativ 1
-label.offlineInstructions  =Off-line informasjon
-label.offlineInstructions.col  =Off-line informasjon:
-label.onlineInstructions  =On-line informasjon
-label.onlineInstructions.col  =On-line informasjon:
-label.offlineFiles  =Off-line filer:
-label.onlineFiles  =On-line filer:
-label.uploadedOfflineFiles  =Last opp off-line filer:
-label.uploadedOnlineFiles  =Last opp on-line filer:
 label.save  =Lagre
 label.cancel  =Angre
-label.title.export  =Detaljer om studentens innsending
 error.maxNominationCount.invalid  =Vennligst endre dette: Feltet "Maks antall alternativ" i  det avanserte omr\u00e5det er ugyldig.
-error.fileName.empty  =Vennligst endre dette: Under "Informasjon" kan filnavnet ikke v\u00e6re tomt n\u00e5r filen skal lastes opp.
 error.content.inUse  =Det er ikke tillatt \u00e5 endre innhold fordi dette er i bruk.
 error.noLearnerActivity  =Rapporten er ikke tilgjengelig fordi ingen har startet denne aktiviteten.
 label.learning.reportMessage  =Din stemmegiving er:
 error.maxNominationCount.reached  =Du har avgitt for mange alternativer. Du kan bare velge
 label.nominations  =Alternativer.
-label.progressiveResults  =Stigende resultat av stemmegiving
-label.overAllResults  =Totalt resultat
-label.retake  =Gj\u00f8r om avstemmningen
-label.submit.vote  =Send inn stemme
+label.progressiveResults  =Stemmeresultater s\u00e5 langt
+label.overAllResults  =Se resultat
+label.retake  =Endre
+label.submit.vote  =Stem
 button.endLearning  =Neste aktivitet
-label.user  =Bruker
-label.attemptTime  =Tid for avstemming
-sbmt.learner.nominations.successful  =Din stemmegiving har blitt sendt inn.
+label.user  =Student
+label.attemptTime  =Dato/tid
 label.finished  =Neste aktivitet
 label.learner.nominations  =Dine alternativer er:
-label.learning.forceOfflineMessage  =Denne aktiviteten skal ikke gjennomf\u00f8res ved datamaskinen. Kontakt foreleseren.
 error.defineLater  =Vennligst vent til at foreleseren har fullf\u00f8rt innholdet for denne aktiviteten.
 label.edit  =Rediger
 label.selectGroup  =Velg gruppe:
 label.learner.progress  =Studentens fremdriftsrapport
 error.system.vote  =En systemfeil har oppst\u00e5tt:{0}. Vennligst kontakt systemadministrator.
-error.duplicate.nomination  =Vennligst endre dette: Du har skrevet inn samme alternativ mer enn en gang.
 label.total.students  =Totalt antall  mulige studenter:
 label.total.completed.students  =Totalt antall studenter som har gjennomf\u00f8rt avstemmingen:
-label.open.vote  =\u00c5pen avstemming
-label.total.votes  =Totalt antall stemmer
-label.select.session  =Vennligst velg en gruppe for \u00e5 se klassens stemmer
+label.open.vote  =Annen nominering
+label.total.votes  =Stemmer
 label.percent  =%
-label.view.openVotes  =Se \u00e5pne stemer
-label.view.closeVotes  =Lukk \u00e5pen stemmegiving
-label.openVotes  =\u00c5pen avstemming
+label.view.openVotes  =Se p\u00e5 annen nominering
+label.view.closeVotes  =Lukk andre nomineringer
+label.openVotes  =Andre nomineringer
 label.vote  =Stemme
 label.show  =Vis
 label.hide  =Skjul
 label.hidden  =skjult
 label.view.piechart  =Se p\u00e5  sektordiagram
-label.view.barchart  =Se p\u00e5 stolpediagram
+label.view.barchart  =Stolpediagram
 label.visible  =Synlig
 label.select.statsSession  =Vennligst velg en gruppe for \u00e5 se klassens statistikk
-label.export.learner  =Mappe eksport for studenter
-label.export.teacher  =Mappe eksport for foreleser
-label.export  =Eksporter mappe
 label.class.summary  =Status for klassens stemmer
 label.class.summaryAll  =Status for alle stemmer
-label.individual.learnerVotes  =Studentenes stemmer
+label.individual.learnerVotes  =Stemmer
 label.all.learnerVotes  =Alle studentenes stemmer
-label.warning  =Advarsel
-label.groupName  =Gruppe navn:
+label.groupName  =Gruppe:
 label.learnersVoted  =Studentene stemte
 label.authoring.title.col  =Tittel:
 label.authoring.instructions.col  =Informasjon:
@@ -122,8 +95,8 @@ label.nomination.col  =Alternativ:
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke dette vinduet uten \u00e5 lagre ?
 button.try.again  =Fors\u00f8k igjen
 label.group  =Gruppe
-label.tip.displayPieChart  =Vis  stemmegivningen som sektordiagram
-label.tip.displayBarChart  =Vis stemmegivningen som stolpediagram.
+label.tip.displayPieChart  =Vis  sektordiagram
+label.tip.displayBarChart  =Vis stolpediagram.
 label.refresh  =Frisk opp igjen
 label.continue  =Fortsett
 label.reflect  =Legg til et notat ved slutten av avstemming, med f\u00f8lgende informasjon:
@@ -141,18 +114,15 @@ label.tip.deleteNomination  =Slett alternativ
 label.tip.moveNominationDown  =Flytt alternativet ned
 label.tip.moveNominationUp  =Flytt alternativet opp
 nominations.none.submitted  =Det er ikke valgt et av altenativene. Vennligst send inn minst ett alternativ.
-nomination.duplicate  =Vennligst rett dette: Det er dupliserte alternativ.
-nomination.blank  =Vennligst rett dette: Et alternativ kan ikke v\u00e6re tomt.
-count.finished.session  =Avsluttet opptelling :
+nomination.duplicate  =Det er dupliserte nominasjons-alternativ.
+nomination.blank  =En nominasjon kan ikke v\u00e6re tom.
 maxNomination.invalid  =Vennligst rett dette: Maks antall stemmer [avansert] er ugyldig.
-nominations.duplicate  =Vennligst rett dette: Det er duplikater av alternativ.
-errors.maxfilesize  =Filen som lastes opp overstiger maksimum tillatt filst\u00f8rrelse som er {0} bytes
+nominations.duplicate  =Det er dupliserte nominasjonsoppf\u00f8ringer.
 error.empty.selection  =Vennligst velg minst et forslag
 output.desc.learner.selection  =Studentens valg
-label.show.results  =Vis de samlede resultater
+label.show.results  =Vis resultater n\u00e5r studenten har gitt sin stemme
 message.warnLockOnFinish  =Merk: Etter at du har klikket p\u00e5 "Resultat" s\u00e5 vil du ikke kunne endre din stemmegivning.
 message.activityLocked  =Foreleseren har definert denne aktiviteten slik at du ikke f\u00e5r lov til \u00e5 endre stemmegivningen etter at du har gjort denne ferdig.
-label.attachments  =Vedlegg
 label.nominations.available  =Du har {0} stemmer, vennligst velg alternativene dine
 label.open.votes  =Andre tekst muligheter:
 label.on  =P\u00e5
@@ -163,15 +133,33 @@ monitor.summary.td.notebookInstructions  =Notatbok informasjon
 label.learner.nomination  =Ditt alternativ er:
 error.minNominationCount.not.reached  =Du har ikke valgt nok alternativer. Du b\u00f8r minimum velge
 label.minNomCount  =Minimum stemmer
-monitor.summary.date.restriction  =Dato begrensning
+monitor.summary.date.restriction  =Frist
 monitor.summary.when.date.restriction.is.set  =Studentene ikke kunne stemme etter den definerte tid.
 monitor.summary.after.date  =Dato og tid:
 monitor.summary.set.restriction  =Definer begrensning
 monitor.summary.unset.restriction  =Fjern begrensning
 authoring.info.teacher.set.restriction  =Foreleseren har definert en begrensning for denne aktiviteten fra og med {0}.
 monitor.summary.notification  =Melding
-monitor.summary.date.restriction.set  =Dato begrensning er definert
-monitor.summary.date.restriction.removed  =Dato begrensning er fjernet
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen er fjernet
+label.waiting.for.leader  =Vent til en er blitt gruppeleder
+label.users.from.group  =Andre studenter som deltar i denne gruppen:
+label.use.select.leader.tool.output  =Velg leder fra verkt\u00f8yet Velg leder
+label.group.leader  =Gruppe leder:{0}
+button.submitActivity  =Avslutt
+label.total.number.students.voted  =Totalt antall {0} av {1} studenter har stemt
+label.all.groups.total  =Totalt antall grupper
+label.data.flow.choose  =eller velg en metode for data inngang
+label.data.flow.none  =Ingen
+msg.data.flow.clear.nominations  =Du har valgt \u00e5 benytte inngangsdat fra et eksternt verkt\u00f8y. Alle ksterne anbefalinger vil slettes etter lagring. \u00d8nsker du \u00e5 fortsette ?
+label.advanced.data.flow.limit  =Begrens antall studenter som det vil bli tatt inngangsdata fra:
+label.advanced.data.flow.limit.none  =Ingen grense
+label.info.use.select.leader.outputs  =Gruppe lederens mening er koblet til
+label.select.leader  =Velg leder
+label.voting.options  =Alternativer
+label.activity.completion  =Aktivitetsslutt
+js.error.validate.number  =Det er en feil med min og maks antall stemmer.Vennligst kontroller og fors\u00f8k igjen
+label.search  =S\u00f8k....
 
 
-#======= End labels: Exported 166 labels for no NO =====
+#======= End labels: Exported 154 labels for no NO =====
