--- a/lams_tool_wiki/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,20 +2,13 @@ appName = wiki
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:29:33 CST 2017 
  
 #=================== labels for Wiki =================# 
 
 appName  =wiki
-error.contentrepository  =En feil oppsto under lagring/sletting av instruksjons fil {0}. Filen er ikke lagret korrekt.
-button.instructions  =Instruksjoner
-instructions.uploadOfflineInstr  =Off-line instruksjons fil:
-instructions.uploadOnlineInstr  =On-line instruksjons fil:
-instructions.offlineInstructions  =Off-line instruksjoner
-instructions.onlineInstructions  =On-line instruksjoner:
 activity.helptext  =Wiki verkt\u00f8y for \u00e5 lage wiki sider
 message.contentInUseSet  =Det er ikke tillatt \u00e5 modfisere innholdet fordi en eller fler studenter har p\u00e5beynt aktiviteten
-error.content.locked  =Innholdet er l\u00e5st fordi dette benyttes av en eller flere studenter. Det er ikke tillatt \u00e5 endre innholdet
 tool.display.name  =Wiki
 tool.description  =Wiki verkt\u00f8y
 activity.title  =Wiki
@@ -23,7 +16,6 @@ activity.description  =Wiki verkt\u00f8y
 pageTitle.authoring  =Wiki godkjenning
 button.basic  =Grunnlag
 button.advanced  =Avansert
-button.upload  =Last opp
 button.continue  =Fortsett
 button.edit  =Rediger
 label.authoring.basic.title  =Tittel:
@@ -43,19 +35,9 @@ advanced.editingLimits.maximum  =Maksimum:
 advanced.editingLimits.nominimum  =Intet minimum
 advanced.editingLimits.nomaximum  =ntet maksimum
 advanced.editingLimits.error  =Maksimalt antall redigeringer m\u00e5 v\u00e6re mer enn eller lik minimum
-instructions.type.online  =P\u00e5koblet
-instructions.type.offline  =Frakoblet
-label.filename  =Filnavn
-label.type  =Type
-label.attachments  =Vedlegg
-link.view  =Se p\u00e5
-link.download  =Last ned
-link.delete  =Slett
 message.updateSuccess  =Endringene er lagret
-message.unsavedChanges  =Siden inneholder endringer som ikke er lagret
 pageTitle.learning  =Wiki
 message.defineLaterSet  =Vennligst vent p\u00e5 at foreleseren skal ferdigstille innholdet for denne aktiviteten.
-message.runOfflineSet  =Denne aktiviteten skal ikke gjennomf\u00f8res med hjelp av data. Kontakt foreleseren.
 pageTitle.monitoring  =Wiki kontrollmodus
 button.summary  =Status
 button.editActivity  =Rediger
@@ -63,8 +45,6 @@ button.statistics  =Statistikk
 titleHeading.summary  =Status
 titleHeading.statistics  =Statistikk
 titleHeading.editActivity  =Rediger
-titleHeading.exportPortfolio  =Eksporter mappe
-heading.group  =gruppe {0}:
 heading.totalLearners  =Antall studenter:
 heading.totalLearnersInGroup  =Totalt antall studenter i gruppen:
 heading.totalFinishedLearnersInGroup  =Antall studenter som er ferdig:
@@ -82,14 +62,6 @@ button.next  =Neste
 label.created  =Utf\u00f8rt
 label.lastModified  =Sist endret
 label.notebookEntry  =Skriv notat
-error.missingParam  =Kan ikke fortsette. {0} mangler
-error.exceedMaxFileSize  =Filst\u00f8rrelse er for stor
-error.exception.NbApplication  =En feil er oppst\u00e5tt med Wiki verkt\u00f8yet. Hvis du raporterer feilen, s\u00e5 rapporter {0}
-error.defineLater  =Beklager, denne aktiviteten er enda ikke ferdig. Vennligst vent til at foreleseren har ferdigstilt aktiviteten
-errors.maxfilesize  =Filen som lastes opp overskrider maksimal filst\u00f8rrelse som er {0}
-error.mandatoryField  ={0} feltet m\u00e5 fylles ut
-error.mark.invalid.number  ={0} feltet m\u00e5 ha en gyldig tallverdi. desimaltal kan ikke benyttes.
-error.mark.invalid.decimal.number  ={0} feltet m\u00e5 ha et gyldig desimaltall.
 authoring.msg.cancel.save  =Vil du lukke dette vinduet uten \u00e5 lagre ?
 button.try.again  =Fors\u00f8k igjen
 message.learner.blank.input  =Du har ikke skrevet noe. Er dette riktig ?
@@ -103,7 +75,7 @@ message.maxEditsReached  =Du har n\u00e5dd maksimalt antall redigeringer som kan
 message.pageNotEditable  =Denne siden er l\u00e5st av foreleseren og du kan ikke redigere denne.
 titleHeading.instructions  =Instruksjoner
 label.authoring.basic.instructions  =Instruksjoner:
-label.wiki.body  =Wiki stamme
+label.wiki.body  =Wiki innhold
 label.wiki.edit  =Rediger
 label.wiki.edit.toolTip  =Rediger den aktive Wiki siden
 label.wiki.add  =Legg til
@@ -145,9 +117,9 @@ monitor.th.numlearners  =Antall studenter
 monitor.summary.td.addNotebook  =Legg til notat p\u00e5 slutten av Wiki
 monitor.summary.td.notebookInstructions  =Instruksjon for notater
 monitor.nosessions  =Det er ingen sesjoner som er aktive enda for denne Wiki.
-monitor.notebooks  =refleksjons notater
-output.learner.number.of.edits  =Antall sider som er redigert
-output.learner.number.of.add  =Antall sider som er lagt til
+monitor.notebooks  =Refleksjons notater
+output.desc.number.of.edits  =Antall sider som er redigert
+output.desc.number.of.add  =Antall sider som er lagt til
 notify.pageEdited.subject  =LAMS Wiki sider er redigert av {0}.
 notify.pageAdded.subject  =LAMS Wiki sider har blitt lagt til av {0}.
 notify.pageRemoved.subject  =LAMS Wiki sider er fjernet av {0}.
@@ -164,6 +136,20 @@ notify.pageRestored.body  =En Wiki side er blitt gjenopprettet av {0} for {1}. F
 label.wiki.remove.mark.toolTip  =Merk denne siden som fjernet
 label.wiki.remove.mark.confirm  =Er du sikker p\u00e5 at du vil fjerne denne Wiki siden ?
 label.wiki.removed  =Denne siden har blitt fjernet
+button.submit  =Avslutt
+error.title.invalid.characters  =En tittel kan ikke inneholde noen av disse tegnene: ^, <, >, #, (, ), \, |, ', ", {, }, `
+label.wiki.options  =Alternativer
+label.activity.completion  =Aktivitetsslutt
+label.notifications  =Meldinger
+monitor.summary.date.restriction  =Frist
+monitor.summary.when.date.restriction.is.set  =Studentene kan ikke benytte Wiki etter den bestemte dato og tid
+monitor.summary.after.date  =Dato/tid
+monitor.summary.set.restriction  =Definer begrensninger
+monitor.summary.unset.restriction  =Fjern begrensninger
+authoring.info.teacher.set.restriction  =Foreleseren har satt en frist til {0}. Etter denne tiden vil aktiviteten ikke v\u00e6re tilgjengelig
+monitor.summary.notification  =Melding
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen er fjernet
 
 
-#======= End labels: Exported 158 labels for no NO =====
+#======= End labels: Exported 144 labels for no NO =====
