--- a/lams_tool_wookie/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_wookie/conf/language/lams/ApplicationResources.properties
@@ -1,3 +1,101 @@
-appName =wookie 
+appName = wookie 
+#language code: en 
+#locale code: AU 
+
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:32:11 CST 2017 
+ 
+#=================== labels for Wookie =================# 
+
+button.statistics  =Statistics
+error.contentrepository  =An error has occurred when saving/deleting instruction file {0}. The files may not be saved correctly.
+activity.helptext  =Create activities using Wookie Widgets
+message.contentInUseSet  =Modification of content is not allowed since one or more learners has attempted the activity.
+error.content.locked  =The content has been locked since it is being used by one or more learners. The modification of the content is not allowed.
 tool.display.name  =Wookie
+tool.description  =Wookie Widget Tool
 activity.title  =Wookie
+activity.description  =Wookie Widget Tool
+pageTitle.authoring  =Wookie Authoring
+button.basic  =Basic
+button.advanced  =Advanced
+label.authoring.basic.title  =Title:
+label.authoring.basic.content  =Content:
+advanced.lockOnFinished  =Don't show widget after learner has finished
+instructions.type.online  =Online
+instructions.type.offline  =Offline
+label.filename  =Filename
+label.type  =Type
+message.updateSuccess  =Changes saved
+pageTitle.learning  =Wookie Widget Tool
+message.defineLaterSet  =Please wait for the teacher to complete the contents of this activity
+pageTitle.monitoring  =Wookie Monitoring
+button.summary  =Summary
+button.editActivity  =Edit Activity
+titleHeading.statistics  =Statistics
+titleHeading.editActivity  =Edit Activity
+titleHeading.exportPortfolio  =Export Portfolio
+heading.group  =Group {0}:
+heading.totalLearners  =Number of Learners:
+heading.totalLearnersInGroup  =Total Number of Learners in Group:
+heading.totalFinishedLearnersInGroup  =Number of Finished Learners:
+message.summary  =There is no summary available for this tool.
+label.view  =View
+label.notAvailable  =Not Available
+heading.learner  =Learner
+heading.notebookEntry  =Notebook Entry
+button.cancel  =Cancel
+button.ok  =OK
+button.done  =Done
+button.save  =Save
+button.next  =Next
+label.save  =Save
+label.cancel  =Cancel
+label.created  =Created
+label.lastModified  =Last modified
+label.notebookEntry  =Notebook entry
+error.missingParam  =Unable to continue. {0} is missing.
+error.exceedMaxFileSize  =File size exceeded
+error.exception.NbApplication  =An internal error has occurred with the Wookie Tool. If reporting this error, please report: {0}
+error.defineLater  =Sorry, the activity is not ready yet. Please wait for the teacher to finishing defining the activity.
+errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
+error.mandatoryField  ={0} field is mandatory.
+button.try.again  =Try Again
+button.finish  =Next Activity
+message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
+message.warnLockOnFinish  =Note: After you click on "Next Activity" and you come back to this Wookie activity, you won't be able the activity will be hidden and you will not be able to edit it.
+message.activityLocked  =The instructor has set this activity to be locked after you have finished it. As you are returning to this activity, you cannot edit anymore.
+titleHeading.instructions  =Instructions
+label.authoring.basic.instructions  =Instructions:
+label.on  =On
+label.off  =Off
+monitor.summary.th.advancedSettings  =Advanced settings
+error.msg.upload.file.not.found  =Could not find upload file {0}.
+label.authoring.remove  =Remove
+button.continue  =Continue
+button.edit  =Edit
+button.redo  =Redo Activity
+button.refresh  =Refresh
+button.close  =Close
+monitoring.th.learner  =Learner
+monitoring.th.reflection  =Notebook Entry
+monitor.summary.td.notebookInstructions  =Notebook instructions
+advanced.reflectOnActivity  =Add a notebook at end of Wookie activity with the following instructions:
+title.sessions  =Sessions
+title.originalImage  =Original Image
+authoring.msg.cancel.save  =Do you want to close this window without saving?
+monitor.summary.td.addNotebook  =Add a notebook at the end of Wookie activity
+admin.wookie.apikey  =Wookie API key
+admin.wookie.url  =Wookie URL
+admin.formError  =Please enter both a Wookie API key and your Wookie URL.
+admin.page.title  =Wookie Admin
+admin.return  =Return to Maintain LAMS
+admin.success  =Configuration successfully saved.
+error.wookie.not.configured  =To use this tool, you need to have the Wookie API key and URL configured in the admin pages. Please contact your system administrator.
+error.initiating.widget  =There was a problem communicating with the Wookie widget server, please contact your system administrator.
+error.wookie.server  =Error communicating with Wookie server, please contact your system administrator.
+monitoring.reflections  =Reflections
+export.portfolio.contentlocked  =This activity has been set to be locked after you have finished. As such, you cannot view or edit it in export portfolio.
+button.submit  =Finish
+
+
+#======= End labels: Exported 90 labels for en AU =====
