--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun May 28 19:12:41 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:20:41 CST 2017 
  
 #=================== labels for LAMS Central =================# 
 
@@ -26,7 +26,7 @@ button.login  =Login
 label.user.guide  =[HELP]
 msg.loading  =Loading...
 msg.LAMS.version  =Version
-msg.LAMS.copyright.short  =2002-2017 LAMS Foundation.
+msg.LAMS.copyright.short  =2002 onwards LAMS Foundation.
 button.save  =Save
 button.cancel  =Cancel
 no.such.learningdesign.exist  =No Learning Design with learning_design_id of:{0} exists.
@@ -107,7 +107,7 @@ msg.export.failed  =Learning design export failed
 msg.reason.is  =The reason is
 button.close  =Close
 button.import  =Import
-msg.LAMS.copyright.statement.1  =LAMS\u2122 \u00a9 2002-2017 LAMS Foundation.
+msg.LAMS.copyright.statement.1  =LAMS\u2122 \u00a9 2002 onwards LAMS Foundation
 msg.LAMS.copyright.statement.2  =LAMS is a trademark of LAMS Foundation (http://lamsfoundation.org).
 msg.LAMS.copyright.statement.3  =This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License version 2 as published by the Free Software Foundation.
 title.export  =Export tool content
