--- a/lams_common/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_common/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = lams_common
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:23:30 CST 2017 
  
 #=================== labels for LAMS Common =================# 
 
@@ -31,7 +31,7 @@ audit.show.entry  =Vis tilgang for bruker {0}. Tilgang var {1}
 group.name.prefix  =Gruppe
 imported.permission.gate.title  =Tilgangs port
 imported.synchronise.gate.title  =Synkroniserings port
-msg.import.file.format  =Importfilen m\u00e5 enten v\u00e6re en zip fil fra LAMS 2 eller h\u00f8yere eller en .las fil fra LAMS 1.02. Du kan ikke importere et design som er eksportert med IMS  format.
+msg.import.file.format  =Importfilen m\u00e5 v\u00e6re et LAMS-format . zip-fil som er eksportert fra LAMS 2 eller h\u00f8yere.
 error.import.validation  =Feil ved godkjenning:
 error.import.matching.tool.not.found  =Aktiviteten med signatur {0} er utelatt fordi det mangler et tilh\u00f8rende verkt\u00f8y.
 error.import.tool.service.fail  =Kan ikke importere innhold for verkt\u00f8yet {0}. \u00c5rsaken er {1}
@@ -64,6 +64,12 @@ email.notifications.lesson.caption  =Leksjon
 email.notifications.lesson  =leksjon
 email.notifications.tool  =verkt\u00f8y
 email.notifications.activity  =aktivitet
+error.requires.existing.grouping  =Aktiviteten {0}krever en registrert gruppe, men det er ikke definert noen gruppe for bruker {1} enda.
+validation.error.GroupingNotUsed  =Gruppering benyttes ikke for noen av aktivitetene
+audit.change.mark  =Endret karakter for bruker {0}. Eldre karakter: {1}, ny karakter: {2}
+audit.started.editing.activity  =Instrukt\u00f8r {0} har begynt editeringsaktivitet {1} i kontrollmodus
+audit.finished.editing.activity  =Instrukt\u00f8r {0} har avsluttet editeringsaktivitet {1} i kontrollmodus
+audit.cancelled.editing.activity  =Instrukt\u00f8r {0} har avbrudt editeringsaktivitet {1} i kontrollmodus
 
 
-#======= End labels: Exported 58 labels for no NO =====
+#======= End labels: Exported 64 labels for no NO =====
