--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Feb 24 19:31:56 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:30:38 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -87,11 +87,11 @@ gradebook.gridtitle.learner.view  =Grades by  learner
 label.button.export  =Export
 label.lessons  =Lessons
 label.group  =Group
-label.max.possible  =Max possible
+label.max.possible  =Max mark available
 label.total.actuals  =Total actuals
 label.max.mark  =Max mark
 label.actuals  =TOTAL
-label.max  =Max Mark Available
+label.max  =Max mark available
 label.overall.totals  =Overall totals
 audit.lesson.change.mark  =Changed mark for user {0}. LessonId: {1}. Old mark: {2}, new mark: {3}
 audit.activity.change.mark  =Changed mark for user {0}. LessonId: {1}. ActivityId:{2}. Old mark: {3}, new mark: {4}
@@ -104,9 +104,10 @@ gradebook.monitor.show.dates  =Show dates
 gradebook.monitor.hide.dates  =Hide dates
 gradebook.export.excel  =Export grades
 label.select.lessons.to.export  =Select lessons to export
-label.simplified.export=Simplified Export (only scores)
-label.marks=Marks
-label.number.learners.in.mark.range=Number of Learners in Mark Range
-label.show.marks.chart=Show marks chart
-label.hide.marks.chart=Hide marks chart
-#======= End labels: Exported 98 labels for en AU =====
+label.marks  =Marks
+label.number.learners.in.mark.range  =Number of learners in mark range
+label.show.marks.chart  =Show marks chart
+label.hide.marks.chart  =Hide marks chart
+
+
+#======= End labels: Exported 102 labels for en AU =====
