--- a/lams_gradebook/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:59:07 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:30:39 CST 2017 
  
 #=================== labels for Gradebook =================# 
 
@@ -104,6 +104,10 @@ gradebook.monitor.show.dates  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 
 gradebook.monitor.hide.dates  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03b7\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03b9\u03ce\u03bd
 gradebook.export.excel  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u0392\u03b1\u03b8\u03bc\u03ce\u03bd
 label.select.lessons.to.export  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03c4\u03b1 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03b1 \u03b3\u03b9\u03b1 \u03c4\u03b7\u03bd \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae
+label.marks  =\u0392\u03b1\u03b8\u03bc\u03bf\u03af
+label.number.learners.in.mark.range  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03bc\u03b1\u03b8\u03b7\u03c4\u03ce\u03bd \u03c3\u03c4\u03bf \u03b5\u03cd\u03c1\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1\u03c2
+label.show.marks.chart  =\u0395\u03bc\u03c6\u03ac\u03bd\u03b9\u03c3\u03b7 \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03bc\u03bc\u03b1\u03c4\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03b9\u03ce\u03bd
+label.hide.marks.chart  =\u0391\u03c0\u03cc\u03ba\u03c1\u03c5\u03c8\u03b7 \u03b4\u03b9\u03b1\u03b3\u03c1\u03ac\u03bc\u03bc\u03b1\u03c4\u03bf\u03c2 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03b9\u03ce\u03bd
 
 
-#======= End labels: Exported 98 labels for el GR =====
+#======= End labels: Exported 102 labels for el GR =====
