--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 08 18:08:23 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:31:05 CST 2017 
  
 #=================== labels for Assessment =================# 
 
@@ -287,7 +287,7 @@ label.question.options  =Question options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
 label.ask.for.hedging.justification  =Ask for hedging justification?
-label.number.learners.per.session  =Number of learners
+label.number.learners.per.session  =Number of learners per session
 label.tool.output  =Tool Output
 output.desc.best.score  =Best score
 label.tool.output.has.been.changed  =Tool Output has been changed
@@ -300,16 +300,11 @@ error.import.file.format  =The import file is not an .xml file.
 label.file  =File
 errors.maxfilesize  =File exceeds maximum file size {0}
 label.summary.downloaded  =Summary downloaded
-label.number.learners=Number of Learners
-label.number.groups.finished=Number of Groups Finished
-label.percentage=Percentage
-label.not.answered=Not Answered
-label.other=Other
-label.graph.help=In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
-label.lowest.mark=Lowest Mark:
-label.highest.mark=Highest Mark:
-label.marks=Marks
-label.number.learners.in.mark.range=Number of Learners in Mark Range
-label.number.groups.in.mark.range=Number of Groups in Mark Range
-label.operation.failed=Operation failed. 
-#======= End labels: Exported 294 labels for en AU =====
+label.not.answered  =Not Answered
+label.other  =Other
+label.graph.help  =In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
+label.lowest.mark  =Lowest mark:
+label.highest.mark  =Highest mark:
+
+
+#======= End labels: Exported 299 labels for en AU =====
