--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:59:41 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:31:04 CST 2017 
  
 #=================== labels for Assessment =================# 
 
@@ -300,6 +300,11 @@ error.import.file.format  =\u03a4\u03bf \u03b5\u03b9\u03c3\u03b1\u03b3\u03cc\u03
 label.file  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf
 errors.maxfilesize  =\u03a4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 \u03c5\u03c0\u03b5\u03c1\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 {0}
 label.summary.downloaded  =\u0397 \u03a0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7 \u03ad\u03c7\u03b5\u03b9 \u03bb\u03b7\u03c6\u03b8\u03b5\u03af
+label.not.answered  =\u0394\u03b5\u03bd \u0391\u03c0\u03b1\u03bd\u03c4\u03ae\u03b8\u03b7\u03ba\u03b5
+label.other  =\u0391\u03bb\u03bb\u03b1
+label.graph.help  =\u03a3\u03c4\u03bf/\u03c3\u03c4\u03b1 \u03b3\u03c1\u03ac\u03c6\u03b7\u03bc\u03b1(\u03c4\u03b1) \u03c0\u03b1\u03c1\u03b1\u03ba\u03ac\u03c4\u03c9, \u03ba\u03ac\u03bd\u03c4\u03b5 \u03ba\u03bb\u03b9\u03ba \u03c3\u03b5 \u03bc\u03b9\u03b1 \u03b3\u03c1\u03b1\u03bc\u03bc\u03ae \u03c3\u03c4\u03bf \u03b3\u03c1\u03ac\u03c6\u03b7\u03bc\u03b1 \u03ba\u03b1\u03b9 \u03c3\u03c4\u03b7 \u03c3\u03c5\u03bd\u03ad\u03c7\u03b5\u03b9\u03b1 \u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03c4\u03b5 \u03c4\u03bf\u03bd \u03c4\u03c1\u03bf\u03c7\u03cc \u03c4\u03bf\u03c5 \u03c0\u03bf\u03bd\u03c4\u03b9\u03ba\u03b9\u03bf\u03cd \u03c3\u03b1\u03c2 \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03ba\u03ac\u03bd\u03b5\u03c4\u03b5 \u03b6\u03bf\u03c5\u03bc \u03bc\u03ad\u03c3\u03b1 \u03ba\u03b1\u03b9 \u03ad\u03be\u03c9 \u03b1\u03c0\u03cc \u03c4\u03bf \u03b3\u03c1\u03ac\u03c6\u03b7\u03bc\u03b1. \u039c\u03cc\u03bb\u03b9\u03c2 \u03bc\u03b5\u03b3\u03b5\u03bd\u03b8\u03cd\u03bd\u03b5\u03b9\u03c2, \u03b1\u03c0\u03cc \u03c4\u03b7 \u03b3\u03ba\u03c1\u03b9 \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u03c3\u03c4\u03bf \u03b3\u03c1\u03ac\u03c6\u03b7\u03bc\u03b1 \u03ba\u03ac\u03c4\u03c9 \u03bc\u03c0\u03bf\u03c1\u03b5\u03af\u03c2 \u03bd\u03b1 \u03c3\u03cd\u03c1\u03b5\u03b9\u03c2 \u03c0\u03c1\u03bf\u03c2 \u03c4\u03b1 \u03b1\u03c1\u03b9\u03c3\u03c4\u03b5\u03c1\u03ac \u03ae \u03c0\u03c1\u03bf\u03c2 \u03c4\u03b1 \u03b4\u03b5\u03be\u03b9\u03ac \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03b4\u03b5\u03af\u03be\u03b5\u03b9\u03c2 \u03ad\u03bd\u03b1 \u03b4\u03b9\u03b1\u03c6\u03bf\u03c1\u03b5\u03c4\u03b9\u03ba\u03cc \u03c3\u03cd\u03bd\u03bf\u03bb\u03bf \u03c4\u03c9\u03bd \u03b2\u03b1\u03b8\u03bc\u03ce\u03bd.
+label.lowest.mark  =\u03a7\u03b1\u03bc\u03b7\u03bb\u03cc\u03c4\u03b5\u03c1\u03b7 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1:
+label.highest.mark  =\u03a5\u03c8\u03b7\u03bb\u03cc\u03c4\u03b5\u03c1\u03b7 \u03b2\u03b1\u03b8\u03bc\u03bf\u03bb\u03bf\u03b3\u03af\u03b1:
 
 
-#======= End labels: Exported 294 labels for el GR =====
+#======= End labels: Exported 299 labels for el GR =====
