--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Mar 08 18:08:23 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:31:05 CST 2017 
  
 #=================== labels for Assessment =================# 
 
@@ -300,6 +300,11 @@ error.import.file.format  =The import file is not an .xml file.
 label.file  =File
 errors.maxfilesize  =File exceeds maximum file size {0}
 label.summary.downloaded  =Summary downloaded
+label.not.answered  =Not Answered
+label.other  =Other
+label.graph.help  =In the graph(s) below, click on a bar in the graph and then use your mouse wheel to zoom in and out of the graph. Once you zoom in, the grey selection in the bottom graph can be dragged left or right to show a different set of marks.
+label.lowest.mark  =Lowest mark:
+label.highest.mark  =Highest mark:
 
 
-#======= End labels: Exported 294 labels for en AU =====
+#======= End labels: Exported 299 labels for en AU =====
