--- a/lams_tool_forum/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: el 
 #locale code: GR 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Apr 12 22:40:23 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:11:14 CST 2017 
  
 #=================== labels for Forum =================# 
 
@@ -110,7 +110,7 @@ label.save  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
 label.cancel  =\u0386\u03ba\u03c5\u03c1\u03bf
 authoring.tab.basic  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ac
 authoring.tab.advanced  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b1
-page.title.authoring.init  =\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03a3\u03c5\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7\u03c2
+page.title.authoring.init  =\u03a6\u03cc\u03c1\u03bf\u03c5\u03bc \u03a3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae\u03c2
 authoring.msg.cancel.save  =\u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03ba\u03bb\u03b5\u03af\u03c3\u03b5\u03c4\u03b5 \u03c4\u03bf \u03c0\u03b1\u03c1\u03ac\u03b8\u03c5\u03c1\u03bf \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7;
 define.later.message  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03c4\u03bf\u03bd \u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ae \u03bd\u03b1 \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03c3\u03b5\u03b9 \u03c4\u03bf \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c5\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2.
 button.try.again  =\u03a0\u03c1\u03bf\u03c0\u03ac\u03b8\u03b7\u03c3\u03b5 \u03be\u03b1\u03bd\u03ac
