--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:15:20 CST 2017 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -12,7 +12,6 @@ activity.helptext  =Studentene svarer p\u00e5 et antall ja/nei sp\u00f8rsm\u00e5
 tool.display.name  =Verkt\u00f8y for flervalgssp\u00f8rsm\u00e5l
 tool.description  =Verkt\u00f8y for studenter for \u00e5 svare p\u00e5 et antall kontroll sp\u00f8rsm\u00e5l.
 label.tool.shortname  =S&S
-label.authoring.mc  =Flervalgssp\u00f8rsm\u00e5l
 label.basic  =Grunnlag
 label.advanced  =Avansert
 label.summary  =Status
@@ -20,117 +19,38 @@ label.stats  =Statistikk
 label.editActivity  =Rediger
 label.authoring  =S&S forfatter
 label.learning  =S&S student
-label.preview  =S&S forh\u00e5ndsvis
-label.exportPortfolio  =S&S eksporter mappe
-label.exportPortfolio.simple  =Eksporter mappe
-label.authoring.mc.basic  =Vennligst definer sp\u00f8rsm\u00e5lene.
 label.monitoring  =Sp\u00f8rsm\u00e5l & Svar Kontroll modus
-label.mc.questions  =Flervalgs sp\u00f8rsm\u00e5l
-label.authoring.mc.basic.editOptions  =Vennligst definer sp\u00f8rsm\u00e5let og dets alternativer
-label.advanced.definitions  =Avanserte definisjoner
 label.authoring.title  =Tittel
 label.authoring.instructions  =Informasjon
 label.Questions  =Sp\u00f8rsm\u00e5l
-label.weight  =Vekt
-label.addNewQuestion  =Legg til nytt sp\u00f8rsm\u00e5l
+label.addNewQuestion  =Legg til nye sp\u00f8rsm\u00e5l
 label.moveDown  =Ned
 label.add.question  =Legg til ny
 label.add.option  =Legg til ny
-label.mc.options  =Kandidatens svar
 label.mc.options.col  =Kandidatens svar:
-label.fileContent  =Fil innhold
 label.learner.message  =Svar p\u00e5 sp\u00f8rsm\u00e5lene inntil du har passert st\u00e5karakter
-label.individual.results.withRetries  =Resultat for sp\u00f8rsm\u00e5l og svar med nye fors\u00f8k
-label.individual.results.withoutRetries  =Resultat for sp\u00f8rsm\u00e5l og svar
 label.viewAnswers  =Tidligre svar
-label.learner.viewAnswers  =Studentens svar
-label.withRetries.results.summary  =Flervalgsp\u00f8rsm\u00e5l med status for nye fors\u00f8k
-label.withoutRetries.results.summary  =Flervalgssp\u00f8rsm\u00e5l uten status for nye fors\u00f8k
-label.learnersFinished  =Studentene har avsluttet. Minimum st\u00e5karakter er:
-label.learnersFinished.simple  =Studentene har avsluttet.
 label.topMark  =\u00d8vre karakterniv\u00e5:
 label.avMark  =Gjennomsnittlig karakterniv\u00e5:
 label.loMark  =Nedre karakterniv\u00e5:
 count.total.user  =Totalt antall svar for brukerne:
-count.finished.user  =Avsluttet antall svar av bruker:
-count.max.attempt  =Maksimal antall fors\u00f8k:
-label.attempts  =Fors\u00f8k
 label.mark  =Karakter:
-label.you.answered  =Du svarte:
-label.learner.answered  =Studenten svarte:
 label.redo.questions  =Gj\u00f8r om sp\u00f8rsm\u00e5lene
-label.view.summary  =Se p\u00e5 status
-label.view.answers  =Vis svar
 label.view  =Vis
 label.finished  =Neste aktivitet
-label.attempt  =Fors\u00f8k
-button.cancel  =Avbryt
-button.upload  =Last opp
-button.preview  =Forh\u00e5ndsvis
-button.advanced  =Avansert
-button.instructions  =Veiledning
-tool.icon.name  =Sp\u00f8rsm\u00e5l & Svar
-button.add  =Legg til
-button.addNewQuestion  =Legg til
-button.remove  =Slett
 button.submit  =Send inn
-button.done  =Ferdig
-button.getNextQuestion  =Neste
-button.next  =Neste
-button.nextQuestion  =Neste sp\u00f8rsm\u00e5l
 button.continue  =Fortsett
-button.getPreviousQuestion  =Forrige
-label.percent  =%
-label.option  =Alternativ
-label.option1  =Alternativ 1
-label.options  =Alternativer
-label.option.correct  =Korrekt
-label.candidateAnswers  =Kandidatens svar
 label.isCorrect  =Korrekt?
-sbmt.successful  =Innholdet er blitt lagret korrekt.
-label.monitoringReport.title  =Administrer rapport tittel
 label.question.only  =Sp\u00f8rsm\u00e5l
 label.question  =Sp\u00f8rsm\u00e5l
-label.question.col  =Sp\u00f8rsm\u00e5l:
-label.question1  =Sp\u00f8rsm\u00e5l 1
-radiobox.defineLater  =Definer i kontroll modus
-radiobox.synchInMonitor  =Synkroniser kontroll modus
-radiobox.usernameVisible  =Brukernavn er synlig
-radiobox.questionsSequenced  =Sp\u00f8rsm\u00e5lene er lagt i sekvens
-radiobox.passmark  =St\u00e5 karakter
-radiobox.showFeedback  =Vis tilbakemelding
-radiobox.sln  =Vis studentens rapport
+radiobox.passmark  =St\u00e5-karakter
 radiobox.onepq  =1 side pr. sp\u00f8rsm\u00e5l.
 radiobox.retries  =Tillat nye fors\u00f8k
-label.report.title  =Rapport tittel
-label.report.endLearningMessage  =Slutten av aktivitesbeskjed
-label.offlineInstructions  =Off-line informasjon
-label.onlineInstructions  =On-line informasjon
-label.uploadedOfflineFiles  =Lastet opp off-line filer:
-label.uploadedOnlineFiles  =Lastet opp on-line filer:
 option.correct  =Korrekt
-option.incorrect  =Feil
-label.feedback.incorrect  =Tilbakemelding hvis svaret er feil:
-label.feedback.correct  =Tilbakemelding hvis svaret er korrekt:
-label.learner.redo  =Er du sikker \u00e5 at du vil besvare sp\u00f8rsm\u00e5lene igjen ?
-label.learner.bestMark  =Ditt beste resultat til n\u00e5 er
 label.outof  =av tilsammen
-label.mustGet  =M\u00e5 i det minste f\u00e5
-label.toFinish  =for \u00e5 avslutte
 label.save  =Lagre
 label.cancel  =Avbryt
 feedback  =Vennligst svar p\u00e5 f\u00f8lgende emner f\u00f8r du sender inn
-error.questions.submitted.none  = Vennligst endre dette. Ingen sp\u00f8rsm\u00e5l er blitt sendt.
-error.question.empty  =Vennligst endre dette. Sp\u00f8rsm\u00e5ls teksten kan ikke v\u00e6re tomt.
-error.weights.empty  =Vennligst endre dette. Sp\u00f8rsm\u00e5lets vekt kan ikke v\u00e6re tomt.
-error.checkBoxes.empty  =Vennligst korriger: Det er ikke valgt noe tilh\u00f8rende svar.
-error.weights.zero  =Vennligst endre dette. Sp\u00f8rsm\u00e5lets vekt kan ikke v\u00e6re 0.
-error.weights.notInteger  =Vennligst endre dette. Sp\u00f8rsm\u00e5lets vekt m\u00e5 v\u00e6re en tallverdi.
-error.question.weight.total  =Vennligst endre dette. Sp\u00f8rsm\u00e5lenes totalvekt har n\u00e5dd 100
-error.answers.duplicate  =Vennligst endre dette. Kandidatens svar m\u00e5 v\u00e6re unikt.
-error.emptyQuestion  =Vennligst skriv inn sp\u00f8rsm\u00e5lets tekst. Sp\u00f8rsm\u00e5let kan ikke v\u00e6re tomt.
-error.singleOption  =Vennligst endre dette. Det m\u00e5 v\u00e6re minimum 2 svar.
-error.emptyWeight  =Beklager. Sp\u00f8rsm\u00e5let kan ikke bli lagt til uten et vekttall.
 error.passMark.empty  =Vennligst korriger dette. St\u00e5karakter kan ikke v\u00e6re tomt
 options.count.zero  =Vennligst korriger: Det m\u00e5 minst v\u00e6re et tilh\u00f8rende svar.
 error.passmark.notInteger  =Vennligst korriger dette. St\u00e5karater m\u00e5 v\u00e6re en tallverdi.
@@ -144,18 +64,16 @@ error.question.removeNotAllowed.thisScreen  =Sp\u00f8rsm\u00e5let kan ikke fjern
 error.selectedIndex.empty  =Kan ikke fortsette. Vennligst velg riktig svar og klikk utf\u00f8rt.
 error.content.locked  =Innholdet er l\u00e5st fordi det benyttes av en eller flere studenter. Innholdet kan da ikke endres.
 error.content.inUse  =Det er ikke tillatt \u00e5 endre innholdet fordi en eller flere studenter har begynt p\u00e5 denne aktiviteten.
-error.noLearnerActivity  =Statusrapport er ikke tilgjengelig fordi brukere har deltatt p\u00e5 aktiviteten.
+error.noLearnerActivity  =Statusrapport er ikke tilgjengelig fordi ingen studenter har deltatt p\u00e5 aktiviteten.
 label.answers  =Svar:
 button.endLearning  =Neste aktivitet
-label.learning.user  =Bruker
-label.learning.attemptTime  =Fors\u00f8ks dato/tid
+label.learning.attemptTime  =Fors\u00f8ks dato
 label.learning.response  =Svar
 label.user  =Bruker
-label.attemptTime  =Fors\u00f8ks dato/tid
+label.attemptTime  =Fors\u00f8ks dato
 label.response  =Svar
 label.learning.forceOfflineMessage  =Denne aktiviteten skal ikke utf\u00f8res ved datamaskinen. Kontakt foreleseren.
-error.defineLater  =Vennligst vent for at l\u00e6reren skal ferdigstille innholdet for denne aktiviteten
-error.noStudentActivity  =Beklager, raporten kan ikke lages. Ingen studenter har p\u00e5begynt denne aktiviteten enda.
+error.defineLater  =Vennligst vent for at foreleseren skal ferdigstille innholdet for denne aktiviteten
 group.label  =Gruppe
 button.summary  =Status
 button.editActivity  =Rediger
@@ -163,10 +81,8 @@ button.stats  =Status
 label.edit  =Rediger
 label.update  =Oppdater
 label.selectGroup  =Velg gruppe
-label.learner.progress  =Studentens fremdriftsrapport
 label.stats.allGroups  =Alle grupper:
 label.stats.totalAllGroups  =Totalt antall studenter:
-error.system.mc  =En systemfeil har oppst\u00e5tt. Vennligst kontakt systemadministrator. Feil rapporten er \: {0}
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 label.learning.forceFinishMessage  =Det er ikke tillatt \u00e5 svare lengere. Vennligst avslutt.
 label.correct  =Korrekt
@@ -177,21 +93,16 @@ label.learner  =Student
 button.try.again  =Fors\u00f8k igjen
 label.feedback  =Tilbakemelding p\u00e5 sp\u00f8rsm\u00e5l
 label.notEnoughMarks  =Du har ikke gode nok karakterer for \u00e5 avslutte. Venligst gj\u00f8r om igjen.
-label.tip.moveQuestionDown  =Flytter sp\u00f8rsm\u00e5let ned
-label.tip.moveQuestionUp  =Flytter sp\u00f8rsm\u00e5let opp
+label.tip.moveQuestionDown  =Ned
+label.tip.moveQuestionUp  =Opp
 label.tip.editOptions  =Tillater at kandidatens svar kan redigeres
 label.tip.removeQuestion  =Fjerner et sp\u00f8rsm\u00e5l
 label.tip.removeCandidate  =Fjerner kandidatens svar
 label.studentMarks  =Studentens karakterer
-label.export.learner  =Eksportmappe for student
-label.export.teacher  =Eksportmappe for foreleser.
-label.studentMark  =Studentens karakter
 label.authoring.title.col  =Tittel
 label.authoring.instructions.col  =Informasjon:
 label.candidateAnswer  =Kandidatenes svar
 label.total  =Totalt
-label.report.title.col  =Rapport tittel:
-label.report.endLearningMessage.col  =Slutten p\u00e5 aktivitets meldingen:
 label.continue  =Fortsett
 label.reflect  =Legg til notatet p\u00e5 slutten av sp\u00f8rsm\u00e5lene med den f\u00f8lgende informasjon:
 label.notebook.entries  =Skriv notater
@@ -199,22 +110,20 @@ label.reflection  =Skriv notat
 label.view.reflection  =Se notater
 label.close  =Lukk
 label.question.marks  =Karakterer
-label.update.list  =Oppdater liste
 label.tip.editQuestion  =Muliggj\u00f8r redigering av sp\u00f8rsm\u00e5l
 candidates.none.correct  =Vennligst rett dette. Det m\u00e5 v\u00e6re minimum 1 rett svar fra kandidaten ut av minimum 2 svar.
 count.finished.session  =Antall studenter som er ferdig:
-label.add.candidates  =Legg til et tomt svar
+label.add.candidates  =Legg til et svar
 label.add.new.question  =Legg til
 label.marks  =karakter(er)
-label.new.question  =Nytt sp\u00f8rsm\u00e5l
 label.questions  =Sp\u00f8rsm\u00e5l
 label.questions.worth  =Dette sp\u00f8rsm\u00e5let er verd
-label.save.question  =Lag sp\u00f8rsm\u00e5l
+label.save.question  =Legg til sp\u00f8rsm\u00e5l
 label.tip.deleteQuestion  =Sletter sp\u00f8rsm\u00e5l
 label.tip.editCandidate  =Muliggj\u00f8r redigering av alternative svar
 label.tip.moveCandidateDown  =Flytter  svaret ned
 label.tip.moveCandidateUp  =Flytter  svaret opp
-question.blank  =Vennligst rett dette: Sp\u00f8rsm\u00e5lets tekst kan ikke v\u00e6re tomt.
+question.blank  =Sp\u00f8rsm\u00e5lets tekst kan ikke v\u00e6re tomt.
 question.duplicate  =Vennligst rett dette: Det er dupliserte sp\u00f8rsm\u00e5l
 questions.none.submitted  =Ingen sp\u00f8rsm\u00e5l er sendt inn. Vennligst legg til minst et sp\u00f8rsm\u00e5l
 label.edit.question  =Rediger sp\u00f8rsm\u00e5l
@@ -227,11 +136,9 @@ candidates.setFirst  =For informasjon; det f\u00f8rste alternativet har blitt va
 candidates.blank  =Vennligst rett dette. Alternative svar kan ikke v\u00e6re tomme.
 label.showMarks  =Vis  topp- og gjenomsnitts karakter
 label.randomize  =Presenter svarene i en tilfeldig orden
-answers.submitted.none  =Du kan ikke sende inn. Vennligst velg minst ett svar til hvert sp\u00f8rsm\u00e5l.
 message.no.reflection.available  =Ingen notatbok er tilgjengelig
 label.attempt.count  =Antall fors\u00f8k:
 label.final.attempt  =Siste fors\u00f8k:
-errors.maxfilesize  =Filen som lastes opp er st\u00f8rre en maksimum tillatt filst\u00f8rrelse som er {0} bytes.
 output.desc.learner.mark  =Studentes karakter
 output.desc.learner.all.correct  =Er studentenes svar helt riktige ?
 label.displayAnswers  =Vis riktige svar og resultat etter siste sp\u00f8rsm\u00e5l.
@@ -239,9 +146,9 @@ label.monitoring.yesDisplayAnswers  =Studentene kan se svarene til alle sp\u00f8
 label.monitoring.noDisplayAnswers1  =Studentene kan ikke se svarene til alle sp\u00f8rsm\u00e5lene
 label.monitoring.noDisplayAnswers2  =Vil du la studentene f\u00e5 se svarene n\u00e5 ?
 button.monitoring.noDisplayAnswers  =Ja
-output.desc.learner.all.correct.true  =Alt er korrekt
+output.desc.learner.all.correct.true  =Alt korrekt
 output.desc.learner.all.correct.false  =Ikke helt riktig
-label.monitoring.downloadMarks.button  =Last ned karakterer
+label.monitoring.downloadMarks.button  =Eksporter karakterer
 label.monitoring.downloadMarks.question.mark  =Sp\u00f8rsm\u00e5l {0} (Karakter: {1})
 label.monitoring.downloadMarks.username  =Brukernavn
 error.monitoring.spreadsheet.download  =En feil har oppst\u00e5tt i forbindelse med forberedelse av nedlasting av regnearket med karakterer.
@@ -251,20 +158,20 @@ monitor.summary.th.advancedSettings  =Avansert
 monitor.summary.td.addNotebook  =Legg til en notatbok p\u00e5 slutten av flervalgssp\u00f8rsm\u00e5l
 monitor.summary.td.notebookInstructions  =Notatbok informasjon
 error.pedagogical.planner.empty.answer.selected  =I sp\u00f8rsm\u00e5let {0} kan ikke et riktig svar v\u00e6re tomt.
-monitor.summary.date.restriction  =Dato begrensninger
+monitor.summary.date.restriction  =Frist
 monitor.summary.when.date.restriction.is.set  =Studentene vil ikke kunne besvare sp\u00f8rsm\u00e5lene etter den definerte tid.
 monitor.summary.after.date  =Dato/tid
 monitor.summary.set.restriction  =Definer begrensninger
 monitor.summary.unset.restriction  =Fjern begrensninger
 authoring.info.teacher.set.restriction  =Foreleseren har innf\u00f8rt begrensninger for denne aktiviteten fra og med {0}.
 monitor.summary.notification  =Melding
-monitor.summary.date.restriction.set  =Dato begrensninger er innf\u00f8rt.
-monitor.summary.date.restriction.removed  =Dato begrensninger er blitt fjernet
+monitor.summary.date.restriction.set  =En frist er satt
+monitor.summary.date.restriction.removed  =Fristen har blitt fjernet
 label.authoring.import.qti  =Importer IMS QTI
 error.correct.answer.blank  =Vennligst endre dette: Et riktig svar kan ikke v\u00e6re uten tekst.
 label.submit  =Ferdig
 label.report.by.question  =Raporter iht sp\u00f8rsm\u00e5l
-label.report.by.student  =Raporter iht student
+label.report.by.student  =Raport fra student
 label.not.available  =N/A
 label.legend  =Legende/historie
 label.denotes.correct.answer  =* - Angir det riktige svaret
@@ -286,6 +193,15 @@ label.refresh  =Frisk opp
 label.prefix.sequential.letters.for.each.answer  =Benytt stigene bokstavering som prefiks for hvert svar
 label.info.use.select.leader.outputs  =Gruppelederens alternativer er aktivert
 label.monitoring.group.leader  =Gruppeleder
+label.authoring.export.qti  =Eksporter IMS QTI
+label.select.leader  =Velg leder
+label.question.options  =Alternative sp\u00f8rsm\u00e5l
+label.activity.completion  =Aktivitetsslutt
+label.tool.output  =Utgangsdata for verkt\u00f8y
+label.tool.output.has.been.changed  =Utgangsdata for verkt\u00f8y er endret
+label.operation.failed  =Operasjonen var mislykket
+answers.submitted.none  =Veelg minst ett svar for hvert sp\u00f8rsm\u00e5l
+label.summary.downloaded  =Karakterfiler er lastet ned
 
 
-#======= End labels: Exported 280 labels for no NO =====
+#======= End labels: Exported 196 labels for no NO =====
