--- a/lams_tool_nb/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_nb/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,38 +2,25 @@ appName = noticeboard
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:16:42 CST 2017 
  
 #=================== labels for Noticeboard =================# 
 
 activity.title  =Tavle
-activity.description  =Verkt\u00f8y for \u00e5 vise HTML innhold inklusive eksterne ressurser som bilder og andre media.
+activity.description  =Verkt\u00f8y for \u00e5 vise innhold inklusive eksterne ressurser som bilder og andre media.
 activity.helptext  =Viser formatert tekst og lenker til eksterne ressurser kun i lese modus.
 tool.display.name  =Tavle verkt\u00f8y
 tool.description  =Verkt\u00f8y som viser en tavle
 label.authoring.heading.basic  =Grunnlag
 label.authoring.heading.advanced  =Avansert
-label.authoring.heading.instructions  =Informasjon
-button.upload  =Last opp
 basic.title  =Tittel:
 basic.content  =Innhold:
-instructions.onlineInstructions  =On-line informasjon:
-instructions.offlineInstructions  =Off-line informasjon:
-instructions.uploadOnlineInstr  =On-line informasjonsfil:
-instructions.uploadOfflineInstr  =Off-line informasjonsfil
-instructions.type.online  =On-line
-instructions.type.offline  =Off-line
 label.filename  =Filnavn
 label.type  =M\u00f8nster
-label.attachments  =Vedlegg
 link.view  =Vis
-link.download  =Last ned
-link.delete  =Slett
 message.defineLaterSet  =Vent til foreleseren har gjort ferdig innholdet for denne aktiviteten.
-message.runOfflineSet  =Denne aktiviteten skal ikke utf\u00f8res med datamaskinen. Kontakt foreleseren.
 button.edit  =Rediger
 titleHeading.summary  =Status
-titleHeading.instructions  =Informasjon
 titleHeading.statistics  =Statistikk
 titleHeading.editActivity  =Rediger
 heading.group  =Gruppe {0}:
@@ -48,9 +35,7 @@ button.finish  =Neste aktivitet
 button.next  =Neste
 error.mandatoryField  ={0} feltet m\u00e5 fylles ut.
 error.missingParam  =Kan ikke fortsette. {0} mangler.
-error.exceedMaxFileSize  =Fil st\u00f8rrelse er for stor
 error.exception.NbApplication  =En intern feil har oppst\u00e5tt. Hvis du rapporterer feilen, rapporter {0}:
-error.contentrepository  =En feil har oppst\u00e5tt n\u00e5r instruksjonsfilen {0} ble lagret/slettet. Filene ble kanskje ikke lagret korrekt.
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 button.try.again  =Fors\u00f8k igjen
 advanced.reflectOnActivity  =Legg til et notat p\u00e5 slutten av tavlen, med f\u00f8lgende informasjon:
@@ -67,6 +52,14 @@ monitor.summary.th.advancedSettings  =Avansert
 monitor.summary.td.addNotebook  =Legg til en notatbok p\u00e5 slutten av tavlen
 monitor.summary.td.notebookInstructions  =Informasjon om notatbok
 label.authoring.heading  =Forfatter for innhold til tavle
+button.submit  =Avslutt
+message.no.reflection.available  =Det er ikke lagt til noen notat fra notatb\u00f8kene.
+advanced.allow.comments  =Tillat kommentarer fra student
+label.view.comments  =Se kommentarer
+advanced.comments.like.only  =Kun "like" alternativer
+advanced.comments.like.and.dislike  =Like-ikke like alternativer
+advanced.comment.header  =Kommentar alternativer
+label.activity.completion  =Aktivitetsslutt
 
 
-#======= End labels: Exported 61 labels for no NO =====
+#======= End labels: Exported 54 labels for no NO =====
