--- a/lams_tool_scribe/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_tool_scribe/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = scribe
 #language code: no 
 #locale code: NO 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon Jul 10 21:26:55 CST 2017 
  
 #=================== labels for Scribe =================# 
 
@@ -15,8 +15,6 @@ activity.helptext  =Synkront referat verkt\u00f8y
 pageTitle.authoring  =Godkjent av referent
 button.basic  =Grunnlag
 button.advanced  =Avansert
-button.instructions  =Informasjon
-button.upload  =Last opp
 label.authoring.basic.title  =Tittel:
 label.authoring.basic.content  =Innhold:
 label.authoring.basic.instructions  =Informasjon:
@@ -27,24 +25,13 @@ advanced.reflectOnActivity  =Legg til et notat ved slutten av referatet, med f\u
 advanced.selectScribe  =Velg referent
 advanced.firstLearner  =F\u00f8rste student
 advanced.selectInMonitor  =Velg i kontroll modus
-instructions.onlineInstructions  =On-line informasjon:
-instructions.offlineInstructions  =Off-line informasjon:
-instructions.uploadOnlineInstr  =On-line informasjons fil:
-instructions.uploadOfflineInstr  =Off-line informasjons fil:
-instructions.type.online  =On-line
-instructions.type.offline  =Off-line
-label.filename  =Filnavn
 label.type  =Type
-label.attachments  =Vedlegg
 link.view  =Se p\u00e5
-link.download  =Last ned
 link.delete  =Slett
 link.edit  =Rediger
 message.updateSuccess  =Endringer er lagret
-message.unsavedChanges  =Siden inneholder endringer som ikke er lagret
 pageTitle.learning  =On-line referent
 message.defineLaterSet  =Vennligst vent til at foreleseren er ferdig med innholdet for denne aktiviteten
-message.runOfflineSet  =Denne aktiviteten skal ikke utf\u00f8res ved datamaskinen. Kontakt foreleser.
 pageTitle.monitoring  =Referent kontroll modus
 button.summary  =Status
 button.editActivity  =Redigere
@@ -53,7 +40,6 @@ titleHeading.summary  =Status
 titleHeading.instructions  =Informasjon
 titleHeading.statistics  =Statistikk
 titleHeading.editActivity  =Redigere
-titleHeading.exportPortfolio  =Eksporter mappe
 heading.group  =Gruppe {0}
 heading.totalLearners  =Antall studenter
 heading.totalLearnersInGroup  =Totalt antall studenter i gruppen:
@@ -72,16 +58,6 @@ button.continue  =Fortsett
 button.next  =Neste
 label.save  =Lagre
 label.cancel  =Angre
-error.missingParam  =Det er ikke mulig \u00e5 fortsette. {0} mangler.
-error.exceedMaxFileSize  =Fil er for stor
-error.exception.NbApplication  =En intern feil har oppst\u00e5tt i referent verkt\u00f8yet. Hvis du rapporterer denne, s\u00e5 rapporter: {0}
-error.contentrepository  =En feil har oppst\u00e5tt under lagring/sletting av informasjonsfilen {0}. Filene kan ha blitt lagret feil.
-error.content.locked  =Innholdet er l\u00e5st fordi en eller flere studenter benytter dette. Det er derfor ikke tillatt \u00e5 endre innholdet.
-error.defineLater  =Beklager, aktiviteten er ikke ferdig enda. Vent til foreleseren har ferdigstilt aktiviteten.
-errors.maxfilesize  =Filsen som lastes opp er st\u00f8rre enn tillatt verdi som er {0} bytes
-error.mandatoryField  ={0} feltet m\u00e5 fylles ut.
-error.mark.invalid.number  ={0} feltet m\u00e5 ha et gyldig tall. Desimaltall er ikke tillatt.
-error.mark.invalid.decimal.number  ={0} feltet m\u00e5 ha et gyldig desimaltall.
 authoring.msg.cancel.save  =\u00d8nsker du \u00e5 lukke vinduet uten \u00e5 lagre ?
 pageTitle.monitoring.scribeHistory  =Referent historie
 button.try.again  =Fors\u00f8k igjen
@@ -102,9 +78,9 @@ button.forceComplete  =Tvungen avsluttning
 button.submit  =Legg til
 button.refresh  =Frisk opp
 message.voteStatistics  ={0} av tilsammen {1} er enige
-message.scribeInstructions  =Du, {0} er referent for din gruppe. I dette vinduet m\u00e5 du oppsummere gruppens svar p\u00e5 temaene de diskuterer i chatten. Medlemmene i gruppen vil gi beskjed at de er enige ved \u00e5 klikke p\u00e5 referatet. N\u00e5r alle er enige s\u00e5 kan referatet sendes inn ved \u00e5 klikke p\u00e5 Tvungen Avslutting.  Selv om gruppen ikke er enige kan du avslutte ved \u00e5 klikke p\u00e5 Tvungen avsluttning.
-message.learnerInstructions  =Du er i ferd med \u00e5 g\u00e5 inn i et chat rom med referent. Du b\u00f8r diskutere temaet med resten av gruppen din og med referenten, {0}, som  vil referere gruppens konklusjoner. Hvis du er enig i referatet, klikk p\u00e5 knappen ; Enig. N\u00e5r alle er enige, s\u00e5 vil referatet bli sendt inn og teksten kan deretter ikke endres. Hver gang referenten oppdaterer referatet, m\u00e5 alle trykke p\u00e5 Enig igjen.
-advanced.showAggregatedReports  =Vis samlet rapportering for alle grupper. Merk: dette virker kun dersom gruppene er tilordnet denne aktiviteten.
+message.scribeInstructions  =Du, {0} er referent for din gruppe.
+message.learnerInstructions  =Du er i ferd med \u00e5 delta i en gruppediskusjon og rapportere.
+advanced.showAggregatedReports  =Vis samlet rapportering for alle grupper.
 heading.other.group.reports  =Andre grupper
 message.confirmForceComplete  =Er du sikker p\u00e5 at du vil tvinge igjennom en ferdigstilling ? Hvis du klikker p\u00e5 OK s\u00e5 vil du ikke kunne endre rapporten og de andre studentene kan ikke klikke p\u00e5 Enig.
 label.on  =P\u00e5
@@ -113,6 +89,19 @@ monitor.summary.th.advancedSettings  =Avansert
 monitor.summary.td.addNotebook  =Legg til en notatbok ved slutten av referat
 monitor.summary.td.notebookInstructions  =Notatbok informasjon
 message.waitForScribe  =Venligst vent til at foreleseren har utnevnt referent for denne aktiviteten.
+button.submitActivity  =Avslutt
+button.select  =Velg
+label.scribe.posted  =Oppsummerings teksten er sendt til referenten.
+label.what.others.see  =Oppsummeringstekst slik andre vil se den.
+message.scribeInstructions2  =I dette vinduet m\u00e5 du oppsummere din gruppes svar p\u00e5 ingressene basert p\u00e5 deres iskusjon
+message.scribeInstructions3  =Medlemmen i gruppen skal klikke p\u00e5 Enig n\u00e5r de er enige i rapporten din. N\u00e5r alle er enig (inkludert degselv) s\u00e5 klikk p\u00e5 styrt enighet for \u00e5 fortsette.
+message.scribeInstructions4  =Dersom hele gruppen ikke blir enige om rapporten, s\u00e5 kan du tvinge aktiviteten til \u00e5 stoppe ved \u00e5 klikke p\u00e5 tvungen avsluttning.
+message.learnerInstructions2  =Du b\u00f8r diskutere ledetekstene med resten av gruppen og referenten, {0}, vil legge inn gruppens resultat.
+message.learnerInstructions3  =Hvis du er enig med hva som er skrevet, s\u00e5 klikk p\u00e5 Enig knappen.
+message.learnerInstructions4  =Hver gang referenten oppdaterer rapporten, s\u00e5 m\u00e5 alle deltagerne klikke p\u00e5 Enig igjen. S\u00e5 snart alle er enig, kan referenten ferdigstille denne aktiviteten og den kan da ikke endres.
+label.scribe.options  =Alternativer
+label.activity.completion  =Aktivitetsslutt
+advanced.showAggregatedReportsNote  =Merk: dette virker kun n\u00e5r grupper er tilordnet til denne aktiviteten
 
 
-#======= End labels: Exported 107 labels for no NO =====
+#======= End labels: Exported 96 labels for no NO =====
